chore: pull translations from crowdin

--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "الشروط وسياسة الخصوصية",
   "copyErrorAndQuit": "نسخ الخطأ والخروج",
   "unknown": "مجهول",
   "databaseError": "خطأ في قاعدة البيانات",
@@ -17,15 +16,12 @@
   "editMenuCut": "قص",
   "editMenuCopy": "نسخ",
   "editMenuPaste": "لصق",
-  "editMenuPasteAndMatchStyle": "لصق و مطابقة النمط",
-  "editMenuDelete": "أحذف  ",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "حذف جهة اتصال",
+  "editMenuDeleteGroup": "حذف مجموعة",
   "editMenuSelectAll": "Select All",
   "windowMenuClose": "أغلق النافذة",
   "windowMenuMinimize": "صغِّر",
   "windowMenuZoom": "كبِر",
-  "windowMenuBringAllToFront": "أحضر الجميع للأمام",
   "viewMenuResetZoom": "الحجم الحقيقي",
   "viewMenuZoomIn": "تكبير",
   "viewMenuZoomOut": "تصغير",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "دعوة المجموعة المفتوحة",
   "joinOpenGroupAfterInvitationConfirmationTitle": "انضَم إلى $roomName$؟",
   "joinOpenGroupAfterInvitationConfirmationDesc": "هل أنت متأكد من أنك تريد الانضمام إلى المجموعة المفتوحة $roomName$؟",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "أدخل عنوان التعريف أو اسم ONS",
   "loading": "جاري التحميل",
-  "optimizingApplication": "تحسين التطبيق...",
   "done": "تم",
-  "me": "أنا",
-  "view": "معاينة ",
   "youLeftTheGroup": "لقد غادرت المجموعة ",
   "youGotKickedFromGroup": "تم اِلغائك من المجموعة.",
-  "unreadMessage": "رسالة غير مقروءة",
   "unreadMessages": "الرسائل غير المقروءة",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "السجل سوف يُحفظ على سطح مكتبك",
   "reportIssue": "بلّغ عن مشكل",
-  "gotIt": "واضح",
-  "submit": "إرسال",
   "markAllAsRead": "تحديد الكل كمقروء",
   "incomingError": "خطأ في معالجة الرسالة الواردة",
   "media": "الوسائط",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "معذرة. حجم الملف المختار يتجاوز حد الرسالة الأقصى.",
   "unableToLoadAttachment": "Unable to load selected attachment.",
   "offline": "غير متصل بالإنترنت  ",
-  "checkNetworkConnection": "الرجاء التحقق من الاتصال بالشبكة",
-  "attemptingReconnection": "جاري اعادة الاتصال خلال $reconnect_duration_in_seconds$ ثواني",
-  "submitDebugLog": "سجل تصحيح الأخطاء",
   "debugLog": "سجل تصحيح الأخطاء",
   "showDebugLog": "أظَهر سجل التصحيح",
   "goToReleaseNotes": "اِذهب الى ملاحظات الاِصدار",
   "goToSupportPage": "اِذهب اِلى صفحة الدعم",
-  "menuReportIssue": "أبلغ عن مشكلة",
   "about": "حول",
-  "speech": "خطاب",
   "show": "اظهر",
   "sessionMessenger": "جلسة محادثة",
-  "search": "بحث",
   "noSearchResults": "No results for \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "جهات الاتصال و المجموعات",
   "contactsHeader": "جهات الإتصال",
   "messagesHeader": "الرسائل",
   "settingsHeader": "التعديلات",
@@ -93,9 +78,6 @@
   "replyToMessage": "Reply to Message",
   "replyingToMessage": "الرد الى:",
   "originalMessageNotFound": "لم يتم العثور على الرسالة الأصلية",
-  "originalMessageNotAvailable": "الرسالة الأصلية لم تعد متوفرة",
-  "messageFoundButNotLoaded": "الرسائل الأصلية موجودة, اسحب للأعلى لتحميلها.",
-  "recording": "تسجيل",
   "you": "انت",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "To send audio messages, allow Session Desktop to access your microphone.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "ليس لديك صلاحيات حذف رسائل الاخرين",
   "deleteJustForMe": "اِحذف من عندي",
   "deleteForEveryone": "اِحذف من عند الجميع",
-  "deleteMessagesQuestion": "هل تريد حذف الرسائل ؟",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "هل تريد حذف هذه الرسالة ؟",
   "deleteMessages": "حذف الرسائل",
-  "deleted": "تم الحذف",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "تم حذف هذه الرسالة",
   "from": "مِن",
   "to": "to",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "تم ارسال الصورة للمحادثة",
   "imageCaptionIconAlt": "أيقونة تظهر أن للصورة تعليق",
   "addACaption": "أضف تعليق...",
-  "copy": "اِنسخ",
   "copySessionID": "اِنسخ رابط التعريف",
   "copyOpenGroupURL": "اِنسخ رابط المجموعة",
   "save": "حفظ",
   "saveLogToDesktop": "اِحفظ السجل على سطح المكتب",
   "saved": "تم الحفظ",
-  "permissions": "الصلاحيات",
-  "general": "عام",
   "tookAScreenshot": "قام $name$ بتصوير الشاشة",
   "savedTheFile": "قام $name$ بحفظ الوسائط",
   "linkPreviewsTitle": "أرسل معاينات الرابط",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "التدقيق الإملائي",
   "spellCheckDescription": "فَعِل التدقيق الإملائي على النص المدخل في مربع كتابة الرسالة",
   "spellCheckDirty": "يجب عليك إعادة تشغيل البرنامج لتثبيت إعداداتك الجديدة",
-  "notifications": "الإشعارات",
   "readReceiptSettingDescription": "انظر و شارك عندما تُقرأ الرسائل (فَعِل ايصالات القراءة في جميع المحادثات).",
   "readReceiptSettingTitle": "إيصالات القراءة",
   "typingIndicatorsSettingDescription": "اُنظر و شارك عند كتابة الرسائل (فعِل لجميع المحادثات).",
   "typingIndicatorsSettingTitle": "مؤشرات الكتابة",
   "zoomFactorSettingTitle": "عامل التكبير",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "عند وصول الرسائل، أظهر إشعارات تتضمن:",
   "disableNotifications": "تعطيل الإشعارات",
   "nameAndMessage": "الاسم والرسالة",
@@ -171,13 +156,7 @@
   "notificationFrom": "من:",
   "notificationMostRecent": "الأحدث:",
   "sendFailed": "Send failed",
-  "expiredWarning": "انتهت صلاحية هذا الإصدار من سيغنال للحاسوب. الرجاء الارتقاء الى أحدث إصدار لمواصلة الرسائل.",
-  "upgrade": "تحديث",
   "mediaMessage": "رسائل الاعلام",
-  "timestamp_s": "الآن",
-  "timestamp_m": "1 دقيقة",
-  "timestamp_h": "1 ساعة",
-  "timestampFormat_M": "الشهر اليوم",
   "messageBodyMissing": "اكتب نص الرسالة من فضلك.",
   "unblockToSend": "فك حظر هذه جهة الإتصال لإرسال رسالة",
   "unblockGroupToSend": "Unblock this group to send a message.",
@@ -223,7 +202,6 @@
   "startConversation": "Start new conversation…",
   "invalidNumberError": "رقم خاطئ ",
   "failedResolveOns": "فشل في حل اسم ONS",
-  "successUnlinked": "تم الغاء ربط جهازك بنجاح",
   "autoUpdateSettingTitle": "تحديث تلقائي",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "يوجد تحديث متاح",
@@ -248,7 +226,6 @@
   "blocked": "تم الحظر",
   "blockedSettingsTitle": "متصلين محظورين",
   "unbanUser": "الغاء منع المستخدم",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "تم الغاء منع المستخدم بنجاح",
   "userUnbanFailed": "لقد فشل الغاء المنع!",
   "banUser": "منع المستخدم",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "أَلفي كلمة المرور المرتبطة بحسابك",
   "enterPassword": "إدخل كلمة المرور من فضلك",
   "confirmPassword": "أَكِد كلمة المرور",
-  "pasteLongPasswordToastTitle": "محتوى الحافظة المؤقتة تجاوز الحد الأقصى لطول كلمة المرور $max_pwd_len$ عنصر.",
   "showRecoveryPhrasePasswordRequest": "أَدخِل كلمة المرور من فضلك",
   "recoveryPhraseSavePromptMain": "عبارة الاسترجاع هي مفتاح عنوان تعريفك - يمكنك استخدامها لاسترجاع عنوان تعريفك اذا فقدت الوصول لجهازك. قم بحفظها في مكان امن و لا تعطها الى اي أحد.",
   "invalidOpenGroupUrl": "عنوان تعريف خاطئ",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "انت لست منشئ المجموعة",
   "onlyAdminCanRemoveMembersDesc": "فقط منشئ المجموعة يمكنه الغاء المستخدمين",
   "createAccount": "Create Account",
-  "signIn": "سَجِل الدخول",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "إبقاء في قالب النظام",
+  "startInTrayDescription": "يستمر تشغيل الجَلسة في الخلفية عند إغلاق النافذة",
   "yourUniqueSessionID": "رحب بعنوان تعريفك",
   "allUsersAreRandomly...": "عنوان تعريفك هو عنوان وحيد خاص بك, يمكن للناس الاتصال بك عن طريقه. دون معرفة هويتك الحقيقية, هذا العنوان مصمم ليكون خاص و مجهول.",
   "getStarted": "اِبدأ",
@@ -345,22 +320,20 @@
   "anonymous": "مجهول",
   "removeResidueMembers": "الموافقة ستحذف الاعضاء المغادرين للمجموعة.",
   "enterDisplayName": "ادخل اسم الِاظهار",
-  "enterOptionalPassword": "ادخل كلمة المرور (اختياري)",
   "continueYourSession": "واصل بالحساب القديم",
   "linkDevice": "اربط جهاز",
   "restoreUsingRecoveryPhrase": "استرجع حسابك",
   "or": "او",
-  "ByUsingThisService...": "باستخدامك هذه الخدمة، فإنك توافق على <a href=\"https://getsession.org/legal/#tos\"> شروط الخدمة </a> و <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">سياسة الخصوصية </a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "ابدأ Session.",
   "welcomeToYourSession": "مرحباً بك في Session",
   "newSession": "ابدا محادثة جديدة",
-  "searchFor...": "اِبحث عن محادثات أو متصلين",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "أدخِل عنوان التعريف",
   "enterSessionIDOfRecipient": "أدخل عنوان التعريف أو اسم ONS للمتصل",
   "usersCanShareTheir...": "يمكن للمستخدمين مشاركة عنوان تعريفهم بالذهاب إلى الإعدادات ثم و الضغط على \"مشاركة عنوان التعريف\"، او عبر مشاركة كود QR.",
   "message": "رسالة",
   "appearanceSettingsTitle": "المظهر",
-  "permissionSettingsTitle": "الصلاحيات",
   "privacySettingsTitle": "الخصوصية",
   "notificationsSettingsTitle": "التنبيهات",
   "recoveryPhraseEmpty": "ادخل عبارة الاسترجاع",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "حدود المحادثات المثبتة",
   "pinConversationLimitToastDescription": "يمكنك تثبيت $number$ محادثات فقط",
   "showUserDetails": "اظهر تفاصيل المستخدم",
-  "latestUnreadIsAbove": "أول رسالة غير مقروءة في الأعلى",
   "sendRecoveryPhraseTitle": "أرسل جملة الاسترجاع",
   "sendRecoveryPhraseMessage": "انت تحاول ارسال جملة الاسترجاع التي تسمح بالوصول للحساب. متاكد من ارسالها؟",
   "dialogClearAllDataDeletionFailedTitle": "البيانات لم تحذف",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "التنبيهات - $setting$",
   "surveyTitle": "شارك في سبر الآراء",
   "goToOurSurvey": "اِذهب اِلى سبر الآراء",
-  "blockAll": "أحظر الكل",
+  "clearAll": "Clear All",
   "messageRequests": "طلبات المُراسلة",
   "requestsSubtitle": "الطلبات المعلقة",
   "requestsPlaceholder": "لا توجد طلبات",
-  "messageRequestsDescription": "تفعيل صندوق طلبات المراسلة",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "مكالمة واردة من '$name$'",
   "ringing": "يرن حاليا...",
   "establishingConnection": "يتم الاتصال...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "لا يوجد سماعات أو مكبر صوت",
   "callMediaPermissionsTitle": "مكالمات الصوت و الفيديو",
   "callMissedCausePermission": "مكالمة لم يتم الرد عليها من '$name$' بسبب عدم تفعيل صلاحيات 'مكالمات الصوت و الفيديو' في تعديلات الخصوصية.",
-  "callMissedNotApproved": "مكالمة لم يرد عليها من $name$ بما انك لم تقبل هذه المحادثة. ارسل رسالة اولا.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "قم بتفعيل صلاحيات 'مكالمات الصوت و الفيديو' لاستقبال المكالمات من المستخدمين الآخرين",
   "callMediaPermissionsDialogContent": "الاستعمال الحالي لمكالمات الصوت/الفيديو سيظهر عنوانك IP لخوادم مؤسسة Oxen و للمتصل بالمستخدم.",
-  "menuCall": "اتصال",
   "startedACall": "لقد قمت بالاتصال ب $name$",
   "answeredACall": "اتصال مع $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "استقطاع قاعدة البيانات",
+  "trimDatabaseDescription": "تصغير حجم قاعدة بيانات الرسائل الخاصة بك إلى آخر 10000 رسالة.",
+  "trimDatabaseConfirmationBody": "هل أنت متحقِّق من أنك تريد حذف الرسائل القديمة الخاصة بك $deleteAmount$ الأكثر استلام؟",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
