--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Положения & Политика конфиденциальности",
   "copyErrorAndQuit": "Скопировать ошибку и выйти",
   "unknown": "Неизвестен",
   "databaseError": "Ошибка базы данных",
@@ -17,15 +16,12 @@
   "editMenuCut": "Вырезать",
   "editMenuCopy": "Копировать",
   "editMenuPaste": "Вставить",
-  "editMenuPasteAndMatchStyle": "Вставить текст из буфера обмена",
-  "editMenuDelete": "Удалить",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Выбрать Все",
   "windowMenuClose": "Закрыть окно",
   "windowMenuMinimize": "Минимизировать",
   "windowMenuZoom": "Увеличить",
-  "windowMenuBringAllToFront": "Все на передний план",
   "viewMenuResetZoom": "Фактический размер",
   "viewMenuZoomIn": "Увеличить",
   "viewMenuZoomOut": "Уменьшить",
@@ -35,21 +31,16 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Загрузка...",
-  "optimizingApplication": "Оптимизация приложения...",
   "done": "Готово",
-  "me": "Я",
-  "view": "Просмотреть",
   "youLeftTheGroup": "Вы покинули группу.",
   "youGotKickedFromGroup": "Бяхте премахнат от тази група",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "unreadMessages": "Непрочетени съобщения",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Сообщить о проблеме",
-  "gotIt": "Понятно",
-  "submit": "Отправить",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Маркирай всички като прочетени",
   "incomingError": "Ошибка при обработке входящего сообщения",
   "media": "Медиа",
   "mediaEmptyState": "Нет медиа-файлов",
@@ -58,7 +49,7 @@
   "today": "Сегодня",
   "yesterday": "Вчера",
   "thisWeek": "На Этой Неделе",
-  "thisMonth": "В Этом Месяце",
+  "thisMonth": "Този Месец",
   "voiceMessage": "Голосовое сообщение",
   "stagedPreviewThumbnail": "Черновик миниатюры предварительного просмотра ссылки для $domain$",
   "previewThumbnail": "Миниатюра предварительного просмотра ссылки для $domain$",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Вложение превышает допустимый размер для данного типа сообщения.",
   "unableToLoadAttachment": "Извините, произошла ошибка при обработке вложения.",
   "offline": "Оффлайн",
-  "checkNetworkConnection": "Проверьте сетевое соединение.",
-  "attemptingReconnection": "Попытка переподключения через $reconnect_duration_in_seconds$ секунд",
-  "submitDebugLog": "Журнал отладки",
   "debugLog": "Журнал отладки",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Перейти к заметкам о релизе",
   "goToSupportPage": "Перейти на страницу поддержки",
-  "menuReportIssue": "Сообщить о проблеме",
   "about": "О Session",
-  "speech": "Речь",
   "show": "Показать",
   "sessionMessenger": "Сесия",
-  "search": "Поиск",
   "noSearchResults": "Результаты не найдены для \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Контакты",
@@ -93,9 +78,6 @@
   "replyToMessage": "Ответ на сообщение",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "Исходное сообщение не найдено",
-  "originalMessageNotAvailable": "Исходное сообщение больше не доступно",
-  "messageFoundButNotLoaded": "Исходное сообщение найдено, но не загружено. Прокрутите вверх, чтобы загрузить его.",
-  "recording": "Recording",
   "you": "Вы",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Для отправки аудиосообщений разрешите Session доступ к микрофону.",
@@ -111,12 +93,12 @@
   "error": "Ошибка",
   "delete": "Удалить",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteJustForMe": "Изтрий само за мен",
+  "deleteForEveryone": "Изтрий за всички",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Удалить сообщения",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "От:",
   "to": "Кому:",
@@ -136,30 +118,33 @@
   "lightboxImageAlt": "Изображение, отправленное в разговоре",
   "imageCaptionIconAlt": "Иконка, показывающая, что у этого изображения есть подпись",
   "addACaption": "Добавить субтитры...",
-  "copy": "Копировать",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Сохранить",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "Разрешения",
-  "general": "Общие",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Отправлять Предпросмотр Ссылки",
   "linkPreviewDescription": "Previews are supported for most urls.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsTitle": "Микрофон",
   "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Проверка орфографии",
   "spellCheckDescription": "Включить проверку орфографии текста, введенного в поле создания сообщения",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "Уведомления",
   "readReceiptSettingDescription": "Получать и отсылать уведомления о прочтении сообщений (для всех контактов).",
   "readReceiptSettingTitle": "Уведомления о прочтении",
   "typingIndicatorsSettingDescription": "Получать и отсылать уведомления когда вы и ваш собедник набирает сообщение (для всех контактов).",
   "typingIndicatorsSettingTitle": "Индикаторы Ввода",
   "zoomFactorSettingTitle": "Масштабирование Приложения",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "При получении сообщения, всплывающие уведомления будут содержать:",
   "disableNotifications": "Отключить звук уведомлений",
   "nameAndMessage": "И имя отправителя, и сообщение",
@@ -171,13 +156,7 @@
   "notificationFrom": "От:",
   "notificationMostRecent": "Последние:",
   "sendFailed": "Не Удалось Отправить",
-  "expiredWarning": "Эта версия Session Desktop устарела. Выполните обновление до последней версии, чтобы продолжить обмен сообщениями.",
-  "upgrade": "Обновить",
   "mediaMessage": "Медиа-сообщение",
-  "timestamp_s": "Только Что",
-  "timestamp_m": "1 минута",
-  "timestamp_h": "1 час",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "Разблокируйте этот контакт, чтобы отправить сообщение.",
   "unblockGroupToSend": "Чтобы послать сообщение, сначала разблокируйте эту группу",
@@ -223,7 +202,6 @@
   "startConversation": "Начать новый разговор…",
   "invalidNumberError": "Неверный номер",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Ваше устройство успешно отвязано",
   "autoUpdateSettingTitle": "Автоматические обновления",
   "autoUpdateSettingDescription": "Автоматически проверять на наличие обновлений при запуске",
   "autoUpdateNewVersionTitle": "Доступно обновление Session",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Заблокированные контакты",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,14 +256,13 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Ваша секретная фраза является главным ключом к вашему Session ID. Вы можете использовать ее для восстановления Session ID, если потеряете доступ к своему устройству. Сохраните свою секретную фразу в безопасном месте, и никому её не передавайте.",
-  "invalidOpenGroupUrl": "Invalid URL",
+  "invalidOpenGroupUrl": "Невалиден URL адрес",
   "copiedToClipboard": "Скопировано в буфер обмена",
   "passwordViewTitle": "Type In Your Password",
   "unlock": "Открыть",
-  "password": "Password",
+  "password": "Парола",
   "setPassword": "Set Password",
   "changePassword": "Change Password",
   "removePassword": "Remove Password",
@@ -324,7 +300,7 @@
   "removeModerators": "Remove Moderators",
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
-  "add": "Add",
+  "add": "Добави",
   "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Создать Аккаунт",
-  "signIn": "Войти",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Познакомьтесь со своим Session ID",
@@ -345,27 +320,25 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Введите отображаемое имя",
-  "enterOptionalPassword": "Введите пароль (если используется)",
   "continueYourSession": "Восстановить Session ID",
   "linkDevice": "Привязать устройство",
   "restoreUsingRecoveryPhrase": "Восстановите свой аккаунт",
-  "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "or": "или",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "Новый Диалог",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Введите Session ID",
   "enterSessionIDOfRecipient": "Введите Session ID получателя",
   "usersCanShareTheir...": "Пользователи могут поделиться своим Session ID, зайдя в настройки своей учетной записи и нажав «Отправить Session ID», или поделившись своим QR-кодом.",
-  "message": "Message",
+  "message": "Съобщение",
   "appearanceSettingsTitle": "Внешний вид",
-  "permissionSettingsTitle": "Разрешения",
   "privacySettingsTitle": "Конфиденциальность",
   "notificationsSettingsTitle": "Уведомления",
   "recoveryPhraseEmpty": "Введите секретную фразу",
   "displayNameEmpty": "Пожалуйста, выберите отображаемое имя",
-  "members": "$count$ members",
+  "members": "$count$ члена",
   "joinOpenGroup": "Присоединиться к открытой группе",
   "newClosedGroup": "Новая закрытая группа",
   "createClosedGroupNamePrompt": "Название Группы",
@@ -377,12 +350,12 @@
   "invalidGroupNameTooLong": "Пожалуйста, введите более короткое имя группы",
   "pickClosedGroupMember": "Пожалуйста, выберите как минимум 1 участников группы",
   "closedGroupMaxSize": "В закрытой группе не может быть больше 100 участников",
-  "noBlockedContacts": "No blocked contacts",
+  "noBlockedContacts": "Няма блокирани контакти",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
   "orJoinOneOfThese": "Or join one of these...",
-  "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation",
+  "helpUsTranslateSession": "Помогни ни да преведем Session",
+  "translation": "Превод",
   "closedGroupInviteFailTitle": "Group Invitation Failed",
   "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
   "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
@@ -392,18 +365,18 @@
   "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
   "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
   "notificationForConvo": "Notifications",
-  "notificationForConvo_all": "All",
+  "notificationForConvo_all": "Всички",
   "notificationForConvo_disabled": "Disabled",
   "notificationForConvo_mentions_only": "Mentions only",
   "onionPathIndicatorTitle": "Path",
   "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
   "unknownCountry": "Unknown Country",
-  "device": "Device",
+  "device": "Устройство",
   "destination": "Destination",
-  "learnMore": "Learn more",
+  "learnMore": "Научи повече",
   "linkVisitWarningTitle": "Open this link in your browser?",
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
-  "open": "Open",
+  "open": "Отвори",
   "audioMessageAutoplayTitle": "Audio Message Autoplay",
   "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
   "clickToTrustContact": "Click to download media",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -426,18 +398,18 @@
   "entireAccount": "Entire Account",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
   "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "iAmSure": "Сигурен съм",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
