--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Condicions i Politica de Privacitat",
   "copyErrorAndQuit": "Copia l'error i surt",
   "unknown": "Desconegut",
   "databaseError": "Error de la base de dades",
@@ -17,15 +16,12 @@
   "editMenuCut": "Retalla",
   "editMenuCopy": "Copia",
   "editMenuPaste": "Enganxa",
-  "editMenuPasteAndMatchStyle": "Enganxa sense format",
-  "editMenuDelete": "Suprimeix",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Selecciona-ho tot",
   "windowMenuClose": "Tanca la finestra",
   "windowMenuMinimize": "Minimitza",
   "windowMenuZoom": "Escala",
-  "windowMenuBringAllToFront": "Porta al front",
   "viewMenuResetZoom": "Mida actual",
   "viewMenuZoomIn": "Apropa't",
   "viewMenuZoomOut": "Allunya't",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Obre un convit de grup",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Uneix-t'hi $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Estàs segur que vols unir-te el grup obert $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Introdueix Session ID o nom ONS",
   "loading": "S'està carregant...",
-  "optimizingApplication": "S'està optimitzant l'aplicació...",
   "done": "Fet",
-  "me": "Jo",
-  "view": "Mostra",
   "youLeftTheGroup": "Heu abandonat el grup",
   "youGotKickedFromGroup": "T'han eliminat del grup.",
-  "unreadMessage": "Missatge sense llegir",
   "unreadMessages": "Missatges sense llegir",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Informeu d'un error",
-  "gotIt": "Entès!",
-  "submit": "Tramet",
   "markAllAsRead": "Marca-ho tot com a llegit",
   "incomingError": "S'ha produït un error en gestionar el missatge rebut",
   "media": "Elements multimèdia",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Perdoneu, el fitxer seleccionat excedeix les restriccions de mida dels missatges.",
   "unableToLoadAttachment": "No s'ha pogut carregar l'adjunt seleccionat",
   "offline": "Fora de línia",
-  "checkNetworkConnection": "Comproveu la connexió a xarxa.",
-  "attemptingReconnection": "S'intentarà de reconnectar en $reconnect_duration_in_seconds$ segons",
-  "submitDebugLog": "Registre de depuració",
   "debugLog": "Registre de depuració",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Vés a les notes de versió",
   "goToSupportPage": "Vés a la pàgina de suport",
-  "menuReportIssue": "Informeu d'un error",
   "about": "Quant a",
-  "speech": "Discurs",
   "show": "Mostra",
   "sessionMessenger": "Session",
-  "search": "Cerca",
   "noSearchResults": "No hi ha cap resultat per a \"$searchTerm$\".",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contactes",
@@ -93,9 +78,6 @@
   "replyToMessage": "Respon el missatge",
   "replyingToMessage": "Responent a:",
   "originalMessageNotFound": "No s'ha trobat el missatge original",
-  "originalMessageNotAvailable": "El missatge original ja no és disponible",
-  "messageFoundButNotLoaded": "S'ha trobat el missatge original, però no s'ha carregat. Desplaceu-vos amunt per a carregar-lo.",
-  "recording": "S'està gravant",
   "you": "Vós",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Per enviar missatges d'àudio, permeteu que el Session Desktop tingui accés al micròfon.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "No teniu autorització per esborrar els missatges d'altres",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Suprimeix els missatges",
-  "deleted": "Eliminat",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "De",
   "to": "a",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "S'ha enviat una imatge a la conversa",
   "imageCaptionIconAlt": "Icona que mostra que aquesta imatge té un títol",
   "addACaption": "Afegiu-hi un títol...",
-  "copy": "Copiar",
   "copySessionID": "Copia l'ID de Session",
   "copyOpenGroupURL": "Copia l'URL del grup",
   "save": "Desa",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Desat",
-  "permissions": "Permisos",
-  "general": "General",
   "tookAScreenshot": "$name$ ha fet una captura de pantalla",
   "savedTheFile": "Mèdia desada per $name$",
   "linkPreviewsTitle": "Envia previsualitzacions d'enllaços",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Revisar Ortografia",
   "spellCheckDescription": "Activa la comprovació ortogràfica del text introduït en el quadre d'edició de missatges",
   "spellCheckDirty": "Heu de reiniciar Session per aplicar la vostra nova configuració",
-  "notifications": "Notificacions",
   "readReceiptSettingDescription": "Veure i compartir quan s'han llegit els missatges (habilita els rebuts de lectura en totes les sessions).",
   "readReceiptSettingTitle": "Confirmacions de Lectura",
   "typingIndicatorsSettingDescription": "Veure i compartir quan s’estan escrivint missatges (s’aplica a totes les sessions).",
   "typingIndicatorsSettingTitle": "Indicadors de tecleig",
   "zoomFactorSettingTitle": "Factor de zoom",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Si arriben missatges, mostra notificacions que revelen:",
   "disableNotifications": "Desactiva les notificacions",
   "nameAndMessage": "El nom de l'emissor i el missatge",
@@ -171,13 +156,7 @@
   "notificationFrom": "De:",
   "notificationMostRecent": "Més recent:",
   "sendFailed": "L'enviament ha fallat",
-  "expiredWarning": "Aquesta versió del Session Desktop ha expirat. Actualitzeu a l'última versió per a poder seguir enviant i rebent missatges.",
-  "upgrade": "Actualitza",
   "mediaMessage": "Missatge multimèdia",
-  "timestamp_s": "ara",
-  "timestamp_m": "1 minut",
-  "timestamp_h": "1 hora",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Si us plau, introdueix un cos de missatge.",
   "unblockToSend": "Desbloca aquest contacte per a enviar-li un missatge.",
   "unblockGroupToSend": "Desbloca aquest grup per a enviar-hi un missatge.",
@@ -223,7 +202,6 @@
   "startConversation": "Comença una conversa nova...",
   "invalidNumberError": "El número no és vàlid",
   "failedResolveOns": "No s'ha pogut resoldre el nom ONS",
-  "successUnlinked": "El dispositiu s'ha desenllaçat correctament",
   "autoUpdateSettingTitle": "Actualització automàtica",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Disponible una actualització del Session",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Contactes bloquejats",
   "unbanUser": "Deixar d'excloure un usuari",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "L'usuari s'ha desbloquejat correctament",
   "userUnbanFailed": "Desbloquejament fallit!",
   "banUser": "Bloquejar usuari",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Elimineu la contrasenya associada al vostre compte",
   "enterPassword": "Si us plau, introdueix la teva contrasenya",
   "confirmPassword": "Confirma la contrasenya",
-  "pasteLongPasswordToastTitle": "El contingut del porta-retalls supera la longitud màxima de la contrasenya de $max_pwd_len$ caràcters.",
   "showRecoveryPhrasePasswordRequest": "Si us plau, introdueix la teva contrasenya",
   "recoveryPhraseSavePromptMain": "La teva frase de recuperació és la clau principal del teu ID de Session — pots fer-la servir per a restaurar la teva ID de Session si perds l'accés al dispositiu. Emmagatzema la frase de recuperació en un lloc segur i no la donis a ningú.",
   "invalidOpenGroupUrl": "La URL no és vàlida",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "Vostè no és el creador",
   "onlyAdminCanRemoveMembersDesc": "Només el creador del grup pot eliminar usuaris",
   "createAccount": "Create Account",
-  "signIn": "Iniciar sessió",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Saluda al teu Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anònim",
   "removeResidueMembers": "En fer clic a D'acord, també s'eliminaran els membres que deixin el grup.",
   "enterDisplayName": "Escriu el nom a mostrar",
-  "enterOptionalPassword": "Contrasenya (opcional)",
   "continueYourSession": "Continua la teva sessió",
   "linkDevice": "Enllaça un dispositiu",
   "restoreUsingRecoveryPhrase": "Restableix el teu compte",
   "or": "o bé",
-  "ByUsingThisService...": "En utilitzar aquest servei, accepteu les nostres <a href=\"https://getsession.org/legal/#tos\"> Condicions del servei </a> i <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\"> Política de privadesa </a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Comenceu la vostra sessió.",
   "welcomeToYourSession": "Benvingut a Session",
   "newSession": "Nova sessió",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Introdueix la teva ID de Session",
   "enterSessionIDOfRecipient": "Introduïu l'identificador de Session o el nom ONS del destinatari",
   "usersCanShareTheir...": "Els usuaris poden compartir el seu identificador de Session accedint a la configuració del compte i tocant \"Comparteix l'identificador de sessió\" o compartint el seu codi QR.",
   "message": "Missatge",
   "appearanceSettingsTitle": "Aparença",
-  "permissionSettingsTitle": "Permisos",
   "privacySettingsTitle": "Privadesa",
   "notificationsSettingsTitle": "Notificacions",
   "recoveryPhraseEmpty": "Introdueix la frase de recuperació",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
