--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Bedingungen & Datenschutzerklärung",
   "copyErrorAndQuit": "Fehler kopieren und beenden",
   "unknown": "Unbekannt",
   "databaseError": "Datenbankfehler",
@@ -17,15 +16,12 @@
   "editMenuCut": "Ausschneiden",
   "editMenuCopy": "Kopieren",
   "editMenuPaste": "Einfügen",
-  "editMenuPasteAndMatchStyle": "Unformatiert einfügen",
-  "editMenuDelete": "Löschen",
   "editMenuDeleteContact": "Kontakt löschen",
   "editMenuDeleteGroup": "Gruppe löschen",
   "editMenuSelectAll": "Alle Auswählen",
   "windowMenuClose": "Fenster schließen",
   "windowMenuMinimize": "Minimieren",
   "windowMenuZoom": "Zoom",
-  "windowMenuBringAllToFront": "Alle in Vordergrund",
   "viewMenuResetZoom": "Normalgröße",
   "viewMenuZoomIn": "Darstellung vergrößern",
   "viewMenuZoomOut": "Darstellung verkleinern",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Gruppeneinladung öffnen",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Trete $roomName$ bei?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Bist du sicher, dass du der offenen Gruppe $roomName$ beitreten möchtest?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Session-ID oder ONS-Name eingeben",
   "loading": "Wird geladen …",
-  "optimizingApplication": "Anwendung wird optimiert …",
   "done": "Abgeschlossen",
-  "me": "Ich",
-  "view": "Anzeigen",
   "youLeftTheGroup": "Du hast die Gruppe verlassen",
   "youGotKickedFromGroup": "Du wurdest aus der Gruppe entfernt.",
-  "unreadMessage": "Ungelesene Nachricht",
   "unreadMessages": "Ungelesene Nachrichten",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Dieser Log wird auf Ihrem Desktop gespeichert.",
   "reportIssue": "Problem melden",
-  "gotIt": "Verstanden",
-  "submit": "Übermitteln",
   "markAllAsRead": "Alle als gelesen markieren",
   "incomingError": "Fehler bei eingehender Nachricht",
   "media": "Medieninhalte",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Anhang zu groß für die gesendete Nachrichtenart.",
   "unableToLoadAttachment": "Leider ist ein Fehler beim Hinzufügen des Anhangs aufgetreten.",
   "offline": "Keine Netzverbindung",
-  "checkNetworkConnection": "Überprüfe deine Netzverbindung.",
-  "attemptingReconnection": "Neuer Verbindungsversuch in $reconnect_duration_in_seconds$ Sekunden",
-  "submitDebugLog": "Diagnoseprotokoll",
   "debugLog": "Diagnoseprotokoll",
   "showDebugLog": "Debug-Protokoll ansehen",
   "goToReleaseNotes": "Versionshinweise",
   "goToSupportPage": "Support",
-  "menuReportIssue": "Problem melden",
   "about": "Über",
-  "speech": "Sprachausgabe",
   "show": "Anzeigen",
   "sessionMessenger": "Session",
-  "search": "Suchen",
   "noSearchResults": "Keine Ergebnisse für »%s« gefunden",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Kontakte und Gruppen",
   "contactsHeader": "Kontakte",
   "messagesHeader": "Nachrichten",
   "settingsHeader": "Einstellungen",
@@ -93,9 +78,6 @@
   "replyToMessage": "Auf Nachricht antworten",
   "replyingToMessage": "Antwort an:",
   "originalMessageNotFound": "Originalnachricht nicht gefunden",
-  "originalMessageNotAvailable": "Originalnachricht nicht mehr verfügbar",
-  "messageFoundButNotLoaded": "Originalnachricht gefunden, aber nicht geladen. Scrolle zum Laden nach oben.",
-  "recording": "Aufnahme",
   "you": "Du",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Erlaube Session zum Versenden von Sprachnachrichten Zugriff auf dein Mikrofon.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Ihnen fehlt die Berechtigung, Nachrichten anderer Teilnehmer zu löschen",
   "deleteJustForMe": "Nur für mich löschen",
   "deleteForEveryone": "Für jeden löschen",
-  "deleteMessagesQuestion": "Diese Nachrichten löschen?",
+  "deleteMessagesQuestion": "$count$ Nachricht(en) löschen?",
   "deleteMessageQuestion": "Diese Nachricht löschen?",
   "deleteMessages": "Alle Nachrichten löschen",
-  "deleted": "Gelöscht",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Die Nachricht wurde gelöscht",
   "from": "Von:",
   "to": "An:",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "In Unterhaltung gesendetes Bild",
   "imageCaptionIconAlt": "Symbol, das auf eine Beschriftung des Bildes hinweist",
   "addACaption": "Beschriftung hinzufügen...",
-  "copy": "Kopieren",
   "copySessionID": "Session-ID kopieren",
   "copyOpenGroupURL": "Gruppen-URL kopieren",
   "save": "Speichern",
   "saveLogToDesktop": "Protokoll auf dem Desktop speichern",
   "saved": "Gespeichert",
-  "permissions": "Berechtigungen",
-  "general": "Allgemein",
   "tookAScreenshot": "$name$ hat ein Bildschirmfoto gemacht",
   "savedTheFile": "Medien gespeichert von $name$",
   "linkPreviewsTitle": "Link-Vorschauen Senden",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Rechtschreibprüfung",
   "spellCheckDescription": "Rechtschreibprüfung für im Nachrichteneingabefeld eingegebenen Text aktivieren",
   "spellCheckDirty": "Sie müssen Session neu starten, um die neuen Einstellungen zu übernehmen",
-  "notifications": "Benachrichtigungen",
   "readReceiptSettingDescription": "Lesebestätigungen aktivieren",
   "readReceiptSettingTitle": "Lesebestätigungen",
   "typingIndicatorsSettingDescription": "Sehen und teilen, wann Nachrichten eingetippt werden.",
   "typingIndicatorsSettingTitle": "Tipp-Indikatoren",
   "zoomFactorSettingTitle": "Zoomstufe",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Beim Eingang von Nachrichten Benachrichtigungen mit folgendem Inhalt anzeigen...",
   "disableNotifications": "Stummschalten",
   "nameAndMessage": "Kontaktname und Nachricht",
@@ -171,13 +156,7 @@
   "notificationFrom": "Von:",
   "notificationMostRecent": "Letzte Nachricht:",
   "sendFailed": "Versand Gescheitert",
-  "expiredWarning": "Diese Version von Session Desktop ist veraltet. Bitte führe eine Aktualisierung auf die aktuellste Version durch, um weiterhin Nachrichten austauschen zu können.",
-  "upgrade": "Aktualisieren",
   "mediaMessage": "Nachricht mit Medieninhalten",
-  "timestamp_s": "Jetzt",
-  "timestamp_m": "1 Minute",
-  "timestamp_h": "1 Stunde",
-  "timestampFormat_M": "D. MMM",
   "messageBodyMissing": "Bitte geben Sie einen Nachrichtentext ein.",
   "unblockToSend": "Gib die Blockierung dieses Kontakts frei, um eine Nachricht zu senden.",
   "unblockGroupToSend": "Gib die Blockierung dieser Gruppe frei, um eine Nachricht zu senden.",
@@ -223,7 +202,6 @@
   "startConversation": "Neue Unterhaltung Beginnen",
   "invalidNumberError": "Ungültige Rufnummer",
   "failedResolveOns": "Fehler beim Auflösen des ONS-Namens",
-  "successUnlinked": "Ihr Gerät wurde erfolgreich getrennt",
   "autoUpdateSettingTitle": "Automatische Aktualisierung",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Aktualisierung für Session verfügbar",
@@ -248,7 +226,6 @@
   "blocked": "Gesperrt",
   "blockedSettingsTitle": "Blockierte Kontakte",
   "unbanUser": "Benutzer entsperren",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Benutzer erfolgreich freigegeben",
   "userUnbanFailed": "Freigabe fehlgeschlagen!",
   "banUser": "Benutzer blockieren",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Entferne das Passwort deines Account",
   "enterPassword": "Bitte dein Passwort eingeben",
   "confirmPassword": "Passwort bestätigen",
-  "pasteLongPasswordToastTitle": "Der Inhalt der Zwischenablage überschreitet die maximale Länge von $max_pwd_len$ Zeichen.",
   "showRecoveryPhrasePasswordRequest": "Bitte dein Passwort eingeben",
   "recoveryPhraseSavePromptMain": "Ihr Wiederherstellungssatz ist der Hauptschlüssel für Ihre Session ID. Mit diesem Satz können Sie Ihre Session ID wiederherstellen, wenn Sie den Zugriff auf Ihr Gerät verlieren. Bewahren Sie Ihren Wiederherstellungssatz an einem sicheren Ort auf und geben Sie ihn an niemandem weiter.",
   "invalidOpenGroupUrl": "Ungültige URL",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Du bist nicht der Ersteller",
   "onlyAdminCanRemoveMembersDesc": "Nur der Ersteller der Gruppe kann Benutzer entfernen",
   "createAccount": "Konto Erstellen",
-  "signIn": "Einloggen",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "In der Systemleiste behalten",
+  "startInTrayDescription": "Session läuft im Hintergrund weiter, wenn Sie das Fenster schließen",
   "yourUniqueSessionID": "Das ist Ihre Session ID.",
   "allUsersAreRandomly...": "Ihre Session ID ist die eindeutige Adresse, unter der Personen Sie über Session kontaktieren können. Ihre Session ID ist nicht mit Ihrer realen Identität verbunden, völlig anonym und von Natur aus privat.",
   "getStarted": "Loslegen",
@@ -345,22 +320,20 @@
   "anonymous": "Anonym",
   "removeResidueMembers": "Wenn du auf Ok klickst, werden diese Mitglieder auch gelöscht, da sie die Gruppe verlassen haben.",
   "enterDisplayName": "Geben Sie einen Anzeigenamen ein",
-  "enterOptionalPassword": "Passwort eingeben (optional)",
   "continueYourSession": "Ihre Session fortsetzen",
   "linkDevice": "Gerät verbinden",
   "restoreUsingRecoveryPhrase": "Ihr Konto wiederherstellen",
   "or": "oder",
-  "ByUsingThisService...": "Durch die Nutzung dieses Dienstes stimmst du unseren <a href=\"https://getsession.org/legal/#tos\">Nutzungsbedingungen</a> und <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a> zu",
+  "ByUsingThisService...": "Durch die Nutzung dieses Dienstes stimmst du unseren <a href=\"https://getsession.org/terms-of-service\">Nutzungsbedingungen</a> und unserer <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a> zu",
   "beginYourSession": "Beginnen Sie Ihre Session.",
   "welcomeToYourSession": "Willkommen bei Session",
   "newSession": "Neue Session",
-  "searchFor...": "Nach Unterhaltungen oder Kontakten suchen",
+  "searchFor...": "Nach Nachrichten oder Unterhaltungen suchen",
   "enterSessionID": "Session ID eingeben",
   "enterSessionIDOfRecipient": "Geben Sie eine Session ID ein.",
   "usersCanShareTheir...": "Benutzer können ihre Session ID freigeben, indem sie in ihren Einstellungen auf \"Session ID freigeben\" tippen oder ihren QR-Code freigeben.",
   "message": "Nachricht",
   "appearanceSettingsTitle": "Darstellung",
-  "permissionSettingsTitle": "Berechtigungen",
   "privacySettingsTitle": "Datenschutz",
   "notificationsSettingsTitle": "Benachrichtigungen",
   "recoveryPhraseEmpty": "Ihr Wiederherstellungssatz",
@@ -414,54 +387,69 @@
   "pinConversationLimitTitle": "Limit für angeheftete Unterhaltungen",
   "pinConversationLimitToastDescription": "Du kannst höchstens $number$ Unterhaltungen anheften",
   "showUserDetails": "Nutzerdetails ansehen",
-  "latestUnreadIsAbove": "Erste ungelesene Nachricht ist oben",
   "sendRecoveryPhraseTitle": "Wiederherstellungsphrase zusenden",
   "sendRecoveryPhraseMessage": "Mit der Wiederherstellungsphrase kann auf deinen Account zugegriffen werden. Bist du dir sicher das du sie dir zusenden lassen möchtest?",
   "dialogClearAllDataDeletionFailedTitle": "Daten nicht gelöscht",
-  "dialogClearAllDataDeletionFailedDesc": "Die Daten wurden aufgrund eines unbekannten Fehlers nicht gelöscht. Möchten Sie Ihre Daten nur von diesem Gerät löschen?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Möchten Sie Daten nur von diesem Gerät löschen?",
+  "dialogClearAllDataDeletionFailedDesc": "Die Daten wurden aufgrund eines unbekannten Fehlers nicht gelöscht. Möchtest du deine Daten nur von diesem Gerät löschen?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Sollen die Daten nur von diesem Gerät gelöscht werden?",
   "dialogClearAllDataDeletionFailedMultiple": "Daten wurden von folgenden Dienstknoten nicht gelöscht: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Möchten Sie nur dieses Gerät entfernen, oder Ihr Konto vollständig löschen?",
   "deviceOnly": "Nur Gerät",
   "entireAccount": "Gesamtes Konto",
-  "areYouSureDeleteDeviceOnly": "Bist du sicher, dass du deine Gerätedaten löschen möchtest?",
-  "areYouSureDeleteEntireAccount": "Sind Sie sicher, dass Sie Ihr gesamtes Konto, einschließlich der Daten im Netzwerk, löschen möchten?",
+  "areYouSureDeleteDeviceOnly": "Möchtest du die Daten von diesem Gerät wirklich löschen?",
+  "areYouSureDeleteEntireAccount": "Bist du sicher, dass du dein gesamtes Konto, einschließlich jeglicher Netzwerkdaten, löschen möchtest?",
   "iAmSure": "Ich bin mir sicher",
   "recoveryPhraseSecureTitle": "Du bist fast fertig!",
-  "recoveryPhraseRevealMessage": "Sichere dein Konto, indem du deine Wiederherstellungsphrase speicherst. Hier kannst du deine Wiederherstellungsphrase anzeigen lassen und anschließend sicher speichern.",
+  "recoveryPhraseRevealMessage": "Lasse dir deinen Widerherstellungssatz anzeigen und bewahre ihn sicher auf, um dein Konto zu sichern.",
   "recoveryPhraseRevealButtonText": "Wiederherstellungsphrase anzeigen",
   "notificationSubtitle": "Benachrichtigungen - $setting$",
   "surveyTitle": "Nimm an unserer Session-Umfrage teil",
   "goToOurSurvey": "Zur Umfrage",
-  "blockAll": "Alle blockieren",
+  "clearAll": "Alles löschen",
   "messageRequests": "Nachrichtenanfragen",
   "requestsSubtitle": "Ausstehende Anfragen",
   "requestsPlaceholder": "Keine Anfragen",
-  "messageRequestsDescription": "Nachrichtanfragen aktivieren",
+  "hideRequestBannerDescription": "Banner für Nachrichtenanfragen ausblenden, bis du eine neue Nachrichtenanfrage erhältst.",
   "incomingCallFrom": "Eingehender Anruf von '$name$'",
   "ringing": "Klingelt...",
-  "establishingConnection": "Verbindungsaufbau ...",
+  "establishingConnection": "Verbindung wird aufgebaut …",
   "accept": "Akzeptieren",
   "decline": "Ablehnen",
   "endCall": "Anruf beenden",
   "cameraPermissionNeededTitle": "Sprach-/Videoanruf-Berechtigungen erforderlich",
-  "cameraPermissionNeeded": "In den Datenschutzeinstellungen kannst du die Berechtigung \"Sprach- und Videoanrufe\" aktivieren.",
+  "cameraPermissionNeeded": "Die Berechtigung für \"Spach und Videoanrufe\" kannst du in den Datenschutzeinstellungen aktivieren.",
   "unableToCall": "Laufenden Anruf zuerst abbrechen",
   "unableToCallTitle": "Neuer Anruf konnte nicht gestartet werden",
   "callMissed": "Verpasster Anruf von $name$",
-  "callMissedTitle": "Verpasster Anruf",
+  "callMissedTitle": "Anruf verpasst",
   "noCameraFound": "Keine Kamera gefunden",
   "noAudioInputFound": "Keine Audioeingabe gefunden",
   "noAudioOutputFound": "Keine Audioausgabe gefunden",
   "callMediaPermissionsTitle": "Sprach- und Videoanrufe",
-  "callMissedCausePermission": "Verpasster Anruf von '$name$', da du die Berechtigung 'Anrufe und Videoanrufe' in den Datenschutzeinstellungen aktivieren musst.",
-  "callMissedNotApproved": "Verpasster Anruf von '$name$', da du diese Unterhaltung noch nicht genehmigt hast. Sende dem Benutzer zuerst eine Nachricht.",
+  "callMissedCausePermission": "Der Anruf von '$name$' konnte nicht entgegengenommen werden, da du zuerst die Berechtigung für „Anrufe und Videoanrufe“ in den Datenschutzeinstellungen aktivieren musst.",
+  "callMissedNotApproved": "Verpasster Anruf von '$name$', da du diese Unterhaltung noch nicht genehmigt hast. Sende zuerst eine Nachricht.",
   "callMediaPermissionsDescription": "Erlaubt es, Sprach- und Videoanrufe von anderen Benutzern anzunehmen",
   "callMediaPermissionsDialogContent": "Die aktuelle Implementierung von Sprach- und Videoanrufen wird deine IP-Adresse den Oxen Foundation Servern und dem anderen Benutzer offenbaren.",
-  "menuCall": "Anrufen",
   "startedACall": "Du hast $name$ angerufen",
   "answeredACall": "Anruf mit $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Datenbank kürzen",
+  "trimDatabaseDescription": "Verringert die Größe der Nachrichtendatenbank auf die letzten 10.000 Nachrichten.",
+  "trimDatabaseConfirmationBody": "Sind Sie sicher, dass Sie Ihre $deleteAmount$ ältesten Nachrichten löschen möchten?",
+  "pleaseWaitOpenAndOptimizeDb": "Bitte warte, bis deine Datenbank geöffnet und optimiert wurde...",
+  "messageRequestPending": "Deine Nachrichtenanfrage ist derzeit ausstehend",
+  "messageRequestAccepted": "Deine Nachrichtenanfrage wurde angenommen",
+  "messageRequestAcceptedOurs": "Du hast $name$'s Nachrichtenanfrage akzeptiert",
+  "messageRequestAcceptedOursNoName": "Du hast die Nachrichtenanfrage angenommen",
+  "declineRequestMessage": "Möchtest du diese Nachrichtenanfrage wirklich löschen?",
+  "respondingToRequestWarning": "Das Senden einer Nachricht an diesen Benutzer bestätigt automatisch seine Nachrichtenanfrage und gibt deine Session ID bekannt.",
+  "hideRequestBanner": "Banner für Nachrichtenanfragen ausblenden",
+  "openMessageRequestInbox": "Nachrichtenanfragen anzeigen",
+  "noMessageRequestsPending": "Keine ausstehenden Nachrichtenanfragen",
+  "noMediaUntilApproved": "Du kannst keine Anhänge versenden, bis die Unterhaltung genehmigt ist",
+  "mustBeApproved": "Diese Unterhaltung muss akzeptiert werden, um diese Funktion zu nutzen",
+  "youHaveANewFriendRequest": "Du hast eine neue Freundschaftsanfrage",
+  "clearAllConfirmationTitle": "Alle Nachrichtenanfragen löschen",
+  "clearAllConfirmationBody": "Sind Sie sicher, dass Sie alle Nachrichtenanfragen löschen möchten?",
+  "hideBanner": "Ausblenden",
+  "openMessageRequestInboxDescription": "Posteingang für Nachrichtenanfragen anzeigen"
 }
