--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Kopii la eraron kaj eliri",
   "unknown": "Nekonata",
   "databaseError": "Datumbaza eraro",
@@ -17,15 +16,12 @@
   "editMenuCut": "Eltondi",
   "editMenuCopy": "Kopii",
   "editMenuPaste": "Alglui",
-  "editMenuPasteAndMatchStyle": "Alglui nur tekston",
-  "editMenuDelete": "Forigi",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Elekti ĉion",
   "windowMenuClose": "Fermi fenestron",
   "windowMenuMinimize": "Plejetigi",
   "windowMenuZoom": "Zomi",
-  "windowMenuBringAllToFront": "Porti ĉiujn al fronto",
   "viewMenuResetZoom": "Efektiva grandeco",
   "viewMenuZoomIn": "Alzomi",
   "viewMenuZoomOut": "Elzomi",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Ŝargante…",
-  "optimizingApplication": "Optimumigo de la aplikaĵo...",
   "done": "Farite",
-  "me": "Mi",
-  "view": "Montri pli",
   "youLeftTheGroup": "Vi forlasis la grupon",
   "youGotKickedFromGroup": "Vi estas forigita el la grupo.",
-  "unreadMessage": "Nelegita Mesaĝo",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Raporti problemon",
-  "gotIt": "Mi komprenas!",
-  "submit": "Sendi",
   "markAllAsRead": "Mark All as Read",
   "incomingError": "Okazis eraro dum ricevo de mesaĝo",
   "media": "Aŭdvidaĵo",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Bedaŭrinde, la elektita dosiero transpasas limigon pri grandeco de mesaĝo.",
   "unableToLoadAttachment": "Ne eblas ŝargi la elektitan kunsendaĵon.",
   "offline": "Eksterrete",
-  "checkNetworkConnection": "Kontrolu vian retkonekton.",
-  "attemptingReconnection": "Provo rekonekti post $reconnect_duration_in_seconds$ sekundoj",
-  "submitDebugLog": "Sencimiga protokolo",
   "debugLog": "Sencimiga protokolo",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Iri al eldonaj notoj",
   "goToSupportPage": "Iri al helppaĝo",
-  "menuReportIssue": "Raporti problemon",
   "about": "About",
-  "speech": "Parolo",
   "show": "Malkaŝi",
   "sessionMessenger": "Session",
-  "search": "Serĉi",
   "noSearchResults": "Neniu rezulto pri „$searchTerm$“",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontaktaro",
@@ -93,9 +78,6 @@
   "replyToMessage": "Respondi al la mesaĝo",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "Origina mesaĝo ne troveblas",
-  "originalMessageNotAvailable": "Origina mesaĝo ne plu disponeblas",
-  "messageFoundButNotLoaded": "Origina mesaĝo trovebla sed ne ŝargita. Rulumu supren por ŝargi ĝin.",
-  "recording": "Recording",
   "you": "Vi",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Por sendi aŭdajn mesaĝojn, donu al Session Desktop permeson uzi vian mikrofonon.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Forigi mesaĝojn",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "El",
   "to": "al",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Bildo sendita en interparolo",
   "imageCaptionIconAlt": "Piktogramo montranta, ke tiu bildo havas priskribon",
   "addACaption": "Aldoni priskribon...",
-  "copy": "Kopii",
   "copySessionID": "Kopii Session ID-on",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Konservi",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "Permesoj",
-  "general": "Ĝenerala",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Ŝalti literumilon de teksto entajpita en mesaĝa verkejo",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "Sciigojn",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Kiam mesaĝoj alvenas, montri sciigojn, kiuj malkaŝas:",
   "disableNotifications": "Malŝalti sciigojn",
   "nameAndMessage": "Ambaŭ sendanto-nomon kaj mesaĝon",
@@ -171,13 +156,7 @@
   "notificationFrom": "De:",
   "notificationMostRecent": "Lasta:",
   "sendFailed": "Sendo malsukcesis",
-  "expiredWarning": "Tiu ĉi versio de Session Desktop jam nevalidas. Bonvolu ĝisdatigi al la nuna versio por daŭrigi sendi mesaĝojn.",
-  "upgrade": "Ĝisdatigi",
   "mediaMessage": "Mesaĝo kun enmetitaĵo",
-  "timestamp_s": "ĵus",
-  "timestamp_m": "1 minuton",
-  "timestamp_h": "1 horon",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "Malbloki tiun kontakton por sendi mesaĝon.",
   "unblockGroupToSend": "Malbloki tiun grupon por sendi mesaĝon.",
@@ -223,7 +202,6 @@
   "startConversation": "Krei novan interparolon...",
   "invalidNumberError": "Nevalida numero",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Ĝisdatiĝo de Session disponeblas",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
