--- a/_locales/et/messages.json
+++ b/_locales/et/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Copy error and quit",
   "unknown": "Unknown",
   "databaseError": "Database Error",
@@ -17,15 +16,12 @@
   "editMenuCut": "Lõika",
   "editMenuCopy": "Kopeeri",
   "editMenuPaste": "Aseta",
-  "editMenuPasteAndMatchStyle": "Aseta ja sobita stiiliga",
-  "editMenuDelete": "Kustuta",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Vali kõik",
   "windowMenuClose": "Sulge aken",
   "windowMenuMinimize": "Minimeeri",
   "windowMenuZoom": "Suurenda",
-  "windowMenuBringAllToFront": "Too kõik ette",
   "viewMenuResetZoom": "Tegelik suurus",
   "viewMenuZoomIn": "Suurenda",
   "viewMenuZoomOut": "Vähenda",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Laadimine...",
-  "optimizingApplication": "Rakenduse optimeerimine...",
   "done": "Done",
-  "me": "Mina",
-  "view": "Näita",
   "youLeftTheGroup": "Sa lahkusid grupist",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Teavita probleemist",
-  "gotIt": "Sain aru!",
-  "submit": "Postita",
   "markAllAsRead": "Mark All as Read",
   "incomingError": "Sissetuleva sõnumi käsitlemisel tekkis tõrge.",
   "media": "Meedia",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Kahjuks ületab valitud fail sõnumi suuruse piirangu.",
   "unableToLoadAttachment": "Valitud manuse laadimine ei õnnestunud.",
   "offline": "Ühenduseta",
-  "checkNetworkConnection": "Kontrolli enda võrguühendust.",
-  "attemptingReconnection": "$reconnect_duration_in_seconds$ sekundi pärast proovitakse uuesti ühenduda.",
-  "submitDebugLog": "Silumisinfo",
   "debugLog": "Silumisinfo",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Mine väljalaskemärkmete juurde",
   "goToSupportPage": "Mine kasutajatoelehele",
-  "menuReportIssue": "Teavita probleemist",
   "about": "About",
-  "speech": "Kõne",
   "show": "Näita",
   "sessionMessenger": "Session",
-  "search": "Otsi",
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontaktid",
@@ -93,9 +78,6 @@
   "replyToMessage": "Vasta sõnumile",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "Algset sõnumit ei leitud",
-  "originalMessageNotAvailable": "Algne sõnum ei ole enam saadaval",
-  "messageFoundButNotLoaded": "Algne sõnum on leitud, kuid mitte laaditud. Keri üles selle laadimiseks.",
-  "recording": "Recording",
   "you": "Sina",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Audiosõnumite saatmiseks luba Session Desktopil mikrofoni kasutada.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Kustuta sõnumid",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Saatja",
   "to": "to",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Vestluses saadetud pilt",
   "imageCaptionIconAlt": "Ikoon näitamaks, et sellel pildil on seletus.",
   "addACaption": "Lisa pealkiri...",
-  "copy": "Copy",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Salvesta",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "Õigused",
-  "general": "Üldine",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Luba sõnumite kasti teksti õigekirja kontroll",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "Teavitused",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Kui saabub sõnum, siis kuva teavitusi, mis avaldavad:",
   "disableNotifications": "Keela teavitused",
   "nameAndMessage": "Nii saatja nime kui sõnumi sisu",
@@ -171,13 +156,7 @@
   "notificationFrom": "Saatjalt:",
   "notificationMostRecent": "Kõige uuem:",
   "sendFailed": "Saatmine ei õnnestunud",
-  "expiredWarning": "See Session Desktopi versioon on aegunud. Palun uuenda uusimale versioonile sõnumite saatmiseks jätkamiseks.",
-  "upgrade": "Uuenda",
   "mediaMessage": "Meediasõnum",
-  "timestamp_s": "nüüd",
-  "timestamp_m": "1 minut",
-  "timestamp_h": "1 tund",
-  "timestampFormat_M": "D. MMM",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "Sõnumi saatmiseks eemalda selle kontakti blokeering.",
   "unblockGroupToSend": "Sõnumi saatmiseks eemalda selle grupi blokeering.",
@@ -223,7 +202,6 @@
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Vigane number",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Session uuendus on saadaval",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
