--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "شرایط و سیاست های حفظ حریم خصوصی",
   "copyErrorAndQuit": "ارور را کپی کنید و خارج شوید",
   "unknown": "ناشناخته",
   "databaseError": "خطای پایگاه داده",
@@ -17,15 +16,12 @@
   "editMenuCut": "برش",
   "editMenuCopy": "کپی",
   "editMenuPaste": "پیست",
-  "editMenuPasteAndMatchStyle": "پیست و تطابق استایل",
-  "editMenuDelete": "حذف",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "حذف مخاطب",
+  "editMenuDeleteGroup": "حذف گروه",
   "editMenuSelectAll": "انتخاب همه",
   "windowMenuClose": "بستن پنجره",
   "windowMenuMinimize": "مینیمایز",
   "windowMenuZoom": "زوم",
-  "windowMenuBringAllToFront": "همه را به جلو بیاور",
   "viewMenuResetZoom": "سایز واقعی",
   "viewMenuZoomIn": "بزرگ نمایی",
   "viewMenuZoomOut": "کوچک نمایی",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "بازکردن دسترسی ارسال دعوت نامه گروه",
   "joinOpenGroupAfterInvitationConfirmationTitle": "جوین شدن به $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "آیا اطمینان دارید که می‌خواهید به گروه باز $roomName$ جوین شوید؟",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "شماره سیزن نامعتبر",
   "loading": "در حال بارگذاری...",
-  "optimizingApplication": "بهینه سازی برنامه...",
   "done": "انجام شد",
-  "me": "من",
-  "view": "نمایش",
   "youLeftTheGroup": "شما گروه را ترک کرده اید",
   "youGotKickedFromGroup": "شما از گروه حذف شدید.",
-  "unreadMessage": "پیام خوانده نشده",
   "unreadMessages": "پیام های خوانده نشده",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "این وقایع در سیستم شما ثبت خواهد شد.",
   "reportIssue": "گزارش مشکل",
-  "gotIt": "فهمیدم!",
-  "submit": "ارسال",
   "markAllAsRead": "علامت زدن همه به عنوان خوانده شده",
   "incomingError": "خطا در کنترل پیام دریافتی",
   "media": "مدیا",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "متاسفانه حجم فایل انتخاب شده از حداکثر طول پیام بیشتر است.",
   "unableToLoadAttachment": "ناتوانی در بارگذاری پیوست انتخابی.",
   "offline": "آفلاین",
-  "checkNetworkConnection": "ارتباط شبکه خود را چک کنید.",
-  "attemptingReconnection": "در تلاش برای اتصال مجدد $reconnect_duration_in_seconds$ ثانیه",
-  "submitDebugLog": "گزارش خطاء",
   "debugLog": "گزارش خطا",
   "showDebugLog": "نمایش لاگ خطا",
   "goToReleaseNotes": "رفتن به یادداشت های ریلیز",
   "goToSupportPage": "رفتن به صفحه پشتیبانی",
-  "menuReportIssue": "گزارش مشکل",
   "about": "درباره",
-  "speech": "صحبت",
   "show": "نمایش",
   "sessionMessenger": "Session",
-  "search": "جستجو",
   "noSearchResults": "No results for \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "گروه ها و مخاطبین",
   "contactsHeader": "مخاطبین",
   "messagesHeader": "پیام ها",
   "settingsHeader": "تنظیمات",
@@ -93,9 +78,6 @@
   "replyToMessage": "پاسخ به پیام",
   "replyingToMessage": "پاسخ به:",
   "originalMessageNotFound": "پیام اصلی پیدا نشد",
-  "originalMessageNotAvailable": "پیام اصلی دیگر در دسترس نیست",
-  "messageFoundButNotLoaded": "پیام اصلی پیدا شد، اما بارگذاری نشد. برای بارگذاری به سمت بالا حرکت کنید",
-  "recording": "درحال ضبط",
   "you": "شما",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "برای فرستادن پیام های صوتی، به Session Desktop اجازه دسترسی به میکروفون خود را بدهید.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "شما دسترسی برای حذف پیام دیگران را ندارید",
   "deleteJustForMe": "فقط برای من حذف کن",
   "deleteForEveryone": "حذف برای همه",
-  "deleteMessagesQuestion": "همه این پیام ها حذف شوند؟",
+  "deleteMessagesQuestion": "از حذف $count$ پیام اطمینان دارید؟",
   "deleteMessageQuestion": "این پیام حذف شود؟",
   "deleteMessages": "حذف پیام‌ها",
-  "deleted": "حذف شده",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "این پیام حذف شده است",
   "from": "از",
   "to": "to",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "تصویر در مکالمه فرستاده شد",
   "imageCaptionIconAlt": "آیکون نشان می‌دهد که این تصویر دارای یک عنوان است",
   "addACaption": "یک عنوان اضافه کنید...",
-  "copy": "کپی",
   "copySessionID": "کپی شناسه‌ی Session",
   "copyOpenGroupURL": "کپی آدرس گروه",
   "save": "ذخیره",
   "saveLogToDesktop": "ذخیره لاگ به دسکتاپ",
   "saved": "ذخیره شده",
-  "permissions": "دسترسی ها",
-  "general": "عمومی",
   "tookAScreenshot": "$name$ از صفحه یک عکس گرفت",
   "savedTheFile": "رسانه توسط $name$ ذخیره شد",
   "linkPreviewsTitle": "ارسال پیش‌نمایش لینک",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "بررسی املا",
   "spellCheckDescription": "فعال سازی کنترل املاء متن وارد شده در باکس پیام نویسی",
   "spellCheckDirty": "برای اعمال تنظیمات جدید نیاز است Session را دوباره راه‌اندازی کنید",
-  "notifications": "آگاه‌سازی‌ها",
   "readReceiptSettingDescription": "مشاهده و اشتراک گذاری زمان خوانده شدن پیام ( در همه جا خوانده شدن پیام معلوم باشد).",
-  "readReceiptSettingTitle": "رسید خوانده‌ شدن",
+  "readReceiptSettingTitle": "رسیدها را بخوانید",
   "typingIndicatorsSettingDescription": "مشاهده و اشتراک گذاری هنگام تایپ کردن پیام (برای همه).",
   "typingIndicatorsSettingTitle": "نشانگر های نوشته",
   "zoomFactorSettingTitle": "عامل بزرگنمایی",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "هنگام دریافت پیام, این جزئیات را نمایش بده:",
   "disableNotifications": "آگاه‌سازی‌ها غیرفعال باشند",
   "nameAndMessage": "هم نام و هم متن پیام",
@@ -171,13 +156,7 @@
   "notificationFrom": "از:",
   "notificationMostRecent": "جدید ترین:",
   "sendFailed": "ارسال ناموفق بود",
-  "expiredWarning": "این نسخه‌ی Session قدیمی است. برای ارسال پیام لطفا آن را به آخرین نسخه ارتقاء دهید.",
-  "upgrade": "ارتقاء",
   "mediaMessage": "پیام رسانه‌ای",
-  "timestamp_s": "همین حالا",
-  "timestamp_m": "1 دقیقه",
-  "timestamp_h": "1 ساعت",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "لطفا یک پیام وارد کنید.",
   "unblockToSend": "برای ارسال پیام،‌ ابتدا این مخاطب را از مسدود بودن درآورید!",
   "unblockGroupToSend": "برای ارسال پیام در گروه، آن را رفع انسداد کنید.",
@@ -223,7 +202,6 @@
   "startConversation": "Start new conversation…",
   "invalidNumberError": "شماره نامعتبر",
   "failedResolveOns": "در حل نام ONS ناموفق بود",
-  "successUnlinked": "اتصال دستگاه شما با موفقیت قطع شد",
   "autoUpdateSettingTitle": "آپدیت خودکار",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "به‌روزرسانی Session در دسترس است",
@@ -248,9 +226,8 @@
   "blocked": "مسدود شده",
   "blockedSettingsTitle": "مخاطبین مسدود شده",
   "unbanUser": "غیر مسدود کردن کاربر",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "کاربر با موفقیت غیر مستود شد",
-  "userUnbanFailed": "غیر مستود کردن شکست خورد!",
+  "userUnbanFailed": "غیر مسدود کردن شکست خورد!",
   "banUser": "مسدود کردن کاربر",
   "banUserAndDeleteAll": "مستود کردن کاربر و حذف کردن داده های آن",
   "userBanned": "User banned successfully",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "حذف رمز عبور مرتبط با حساب شما",
   "enterPassword": "لطفا رمزعبور خود را وارد کنید",
   "confirmPassword": "تأیید کلمه‌ی عبور",
-  "pasteLongPasswordToastTitle": "محتوای موجود در کلیپ‌بورد از حد مجاز $max_pwd_len$ کاراکتر فراتر رفته.",
   "showRecoveryPhrasePasswordRequest": "لطفا رمزعبور خود را وارد کنید",
   "recoveryPhraseSavePromptMain": "عبارت بازیابی شما کلید اصلی شناسه‌ی Session شما است - در صورت عدم دسترسی به دستگاه خود می توانید از آن برای بازگرداندن شناسه‌ی Session خود استفاده کنید. عبارت بازیابی خود را در مکانی امن ذخیره کنید و آن را به کسی ندهید.",
   "invalidOpenGroupUrl": "آدرس نامعتبر است",
@@ -320,11 +296,11 @@
   "editProfileModalTitle": "نمایه",
   "groupNamePlaceholder": "نام گروه",
   "inviteContacts": "دعوت مخاطبین",
-  "addModerators": "اضافه کردن مدیر",
+  "addModerators": "افزودن مدیر",
   "removeModerators": "حذف کردن مدیر",
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "حذف از مدیران",
-  "add": "اضافه کردن",
+  "add": "افزودن",
   "addingContacts": "افزودن مخاطبین به $name$",
   "noContactsToAdd": "مخاطبی برای اضافه کردن وجود ندارد",
   "noMembersInThisGroup": "هیچ عضو دیگری در این گروه نیست",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "شما موسس گروه نیستید",
   "onlyAdminCanRemoveMembersDesc": "فقط موسس گروه میتواند کاربران را حذف کند",
   "createAccount": "Create Account",
-  "signIn": "ثبت نام",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "در ناحيه سمت راستِ task bar نگه دارید",
+  "startInTrayDescription": "با بستن پنجره، Session در پس‌زمینه در حال اجرا می‌ماند",
   "yourUniqueSessionID": "به شناسه‌ی Session خود سلام کنید",
   "allUsersAreRandomly...": "شناسه‌ی Session شما آدرس منحصر به فردی است که افراد می‌توانند از طریق آن با شما در Session تماس بگیرند. شناسه‌ی Session شما، بدون هیچ ارتباطی با هویت واقعی شما، کاملاً ناشناس و خصوصی است.",
   "getStarted": "شروع به کار کنید",
@@ -345,22 +320,20 @@
   "anonymous": "ناشناس",
   "removeResidueMembers": "با کلیک بر روی ok آن اعضا را در حالی که گروه را ترک می کردند حذف کنید.",
   "enterDisplayName": "یک نام نمایشی وارد کنید",
-  "enterOptionalPassword": "رمز عبور وارد کنید (اختیاری)",
   "continueYourSession": "در Session بمانید",
   "linkDevice": "اتصال دستگاه",
   "restoreUsingRecoveryPhrase": "حساب خود را بازیابی کنید",
   "or": "یا",
-  "ByUsingThisService...": "با استفاده از این سرویس، شما با ما موافقت می کنید که <a href=\"https://getsession.org/legal/#tos\">شرایط خدمات</a> و <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">سیاست حفظ حریم خصوصی</a> را قبول کرده اید",
+  "ByUsingThisService...": "با استفاده از این سرویس، شما با <a href=\"https://getsession.org/terms-of-service\">شرایط خدمات</a> و <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">سیاست حفظ حریم خصوصی</a> ما موافقت خود را اعلام میکنید",
   "beginYourSession": "Session خود را شروع کنید.",
   "welcomeToYourSession": "به Session خوش آمدید",
   "newSession": "Session جدید",
-  "searchFor...": "جستجو در مکالمات یا مخاطبین",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "شناسه‌ی Session را وارد کنید",
   "enterSessionIDOfRecipient": "شناسه Session یا نام ONS گیرنده را وارد کنید",
   "usersCanShareTheir...": "کاربران می‌توانند شناسه‌ی Session خود را با رفتن به تنظیمات حساب خود و ضربه به \"Share Session ID\" یا با به اشتراک گذاشتن کد QR خود‌ با دیگران، آن را با هم به اشتراک بگذارند.",
   "message": "پیام",
   "appearanceSettingsTitle": "ظاهر برنامه",
-  "permissionSettingsTitle": "دسترسی‌ها",
   "privacySettingsTitle": "حریم خصوصی",
   "notificationsSettingsTitle": "اعلان‌ها",
   "recoveryPhraseEmpty": "عبارت بازیابی خود را وارد کنید",
@@ -405,63 +378,78 @@
   "linkVisitWarningMessage": "آیا مطمئنید که میخواهید $url$ را در مرورگر خود باز کنید؟",
   "open": "باز کردن",
   "audioMessageAutoplayTitle": "پخش خودکار پیام صوتی",
-  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
-  "clickToTrustContact": "Click to download media",
+  "audioMessageAutoplayDescription": "پخش خودکار متوالی پیام های صوتی ارسالی",
+  "clickToTrustContact": "برای دانلود، کلیک کنید",
   "trustThisContactDialogTitle": "اعتماد به $name$؟",
   "trustThisContactDialogDescription": "آیا مطمئنید که میخواهید رسانه های ارسال شده توسط $name$ را بارگذاری کنید؟",
   "pinConversation": "سنجاق کردن گفتگو",
-  "unpinConversation": "Unpin Conversation",
+  "unpinConversation": "گفتگو را از حالت پین خارج کنید",
   "pinConversationLimitTitle": "محدودیت سنجاق کردن گفتگوها",
-  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "pinConversationLimitToastDescription": "شما فقط تعداد $number$ گفتگو را میتوانید پین کنید",
   "showUserDetails": "نمایش جزئیات کاربر",
-  "latestUnreadIsAbove": "First unread message is above",
-  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
-  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "sendRecoveryPhraseTitle": "ارسال عبارت بازیابی",
+  "sendRecoveryPhraseMessage": "شما در حال تلاش برای ارسال عبارت بازیابی خود هستید که می تواند برای دسترسی به حساب خود استفاده شود. آیا مطمئن هستید که می خواهید این پیام را ارسال کنید؟",
   "dialogClearAllDataDeletionFailedTitle": "داده ها حذف نشدند",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "dialogClearAllDataDeletionFailedDesc": "داده ها با یک خطای ناشناخته حذف نشدند. آیا می خواهید داده ها را فقط از این دستگاه حذف کنید؟",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "آیا می خواهید داده ها را فقط از این دستگاه حذف کنید؟",
+  "dialogClearAllDataDeletionFailedMultiple": "داده‌هایی که توسط گره‌های سرویس حذف نشده‌اند: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "آیا فقط می‌خواهید این دستگاه را پاک کنید یا می‌خواهید کل اکانت را پاک کنید؟",
   "deviceOnly": "فقط دستگاه",
   "entireAccount": "تمام حساب",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "areYouSureDeleteDeviceOnly": "آیا مطمئن هستید که می خواهید فقط داده های دستگاه خود را حذف کنید؟",
+  "areYouSureDeleteEntireAccount": "آیا مطمئن هستید که می خواهید کل حساب خود، از جمله داده های شبکه را حذف کنید؟",
   "iAmSure": "مطمئنم",
   "recoveryPhraseSecureTitle": "تقریبا کار شما تمومه!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
+  "recoveryPhraseRevealMessage": "با ذخیره کلمات بازیابی، حساب خود را ایمن کنید. کلمات بازیابی خود را آشکار کنید، سپس آن را با خیال راحت ذخیره کنید تا حسابتان را ایمن کنید.",
+  "recoveryPhraseRevealButtonText": "کلمات بازیابی را آشکار کنید",
   "notificationSubtitle": "اعلان ها - $setting$",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "blockAll": "مسدود کردن همه",
+  "surveyTitle": "در نظرسنجی جلسه ما شرکت کنید",
+  "goToOurSurvey": "به نظرسنجی ما بروید",
+  "clearAll": "Clear All",
   "messageRequests": "پیام درخواست ها",
   "requestsSubtitle": "درخواست‌های در حال انتظار",
   "requestsPlaceholder": "هیچ درخواستی وجود ندارد",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
+  "incomingCallFrom": "تماس ورودی از $name$",
   "ringing": "در حال تماس...",
   "establishingConnection": "در حال برقراری ارتباط...",
   "accept": "قبول تماس",
   "decline": "رد تماس",
   "endCall": "پایان تماس",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
+  "cameraPermissionNeededTitle": "مجوز تماس صوتی/تصویری مورد نیاز است",
+  "cameraPermissionNeeded": "می‌توانید مجوز «تماس‌های صوتی و تصویری» را در تنظیمات حریم خصوصی فعال کنید.",
+  "unableToCall": "ابتدا تماس جاری خود را لغو کنید",
+  "unableToCallTitle": "تماس جدید شروع نمی شود",
   "callMissed": "تماس از دست رفته از $name$",
   "callMissedTitle": "تماس های از دست رفته",
   "noCameraFound": "هیچ دوربینی یافت نشد",
   "noAudioInputFound": "هيچ ورودی صوتي يافت نشد",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "تماس",
+  "noAudioOutputFound": "خروجی صوتی پیدا نشد",
+  "callMediaPermissionsTitle": "تماس های صوتی و تصویری",
+  "callMissedCausePermission": "تماس از '$name$' از دست رفت زیرا باید مجوز «تماس‌های صوتی و تصویری» را در تنظیمات حریم خصوصی فعال کنید.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
+  "callMediaPermissionsDescription": "اجازه دسترسی برای پذیرش تماس های صوتی و تصویری از سایر کاربران را بدهید",
+  "callMediaPermissionsDialogContent": "اجرای فعلی تماس‌های صوتی/تصویری آدرس IP شما را در اختیار سرورهای بنیاد Oxen و کاربر تماس‌گیرنده/فرستنده قرار می‌دهد.",
   "startedACall": "تماس شما با $name$",
   "answeredACall": "تماس با $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "برش دیتابیس",
+  "trimDatabaseDescription": "اندازه پایگاه داده پیام شما را به اندازه 10000 پیام آخر شما کاهش می دهد.",
+  "trimDatabaseConfirmationBody": "آیا مطمئن هستید که می خواهید $deleted Amount$ قدیمی ترین پیام های دریافتی خود را حذف کنید؟",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
