--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,11 +1,10 @@
 {
-  "privacyPolicy": "Conditions générales et politique de confidentialité",
-  "copyErrorAndQuit": "Copier l’erreur et quitter",
+  "copyErrorAndQuit": "Copier l'erreur et quitter",
   "unknown": "Inconnu",
   "databaseError": "Erreur de base de données",
   "mainMenuFile": "&Fichier",
   "mainMenuEdit": "&Éditer",
-  "mainMenuView": "&Voir",
+  "mainMenuView": "&Affichage",
   "mainMenuWindow": "&Fenêtre",
   "mainMenuHelp": "&Aide",
   "appMenuHide": "Cacher",
@@ -17,15 +16,12 @@
   "editMenuCut": "Couper",
   "editMenuCopy": "Copier",
   "editMenuPaste": "Coller",
-  "editMenuPasteAndMatchStyle": "Coller et faire correspondre le style",
-  "editMenuDelete": "Supprimer",
   "editMenuDeleteContact": "Supprimer le contact",
   "editMenuDeleteGroup": "Supprimer le groupe",
   "editMenuSelectAll": "Tout sélectionner",
   "windowMenuClose": "Fermer la fenêtre",
   "windowMenuMinimize": "Réduire",
   "windowMenuZoom": "Agrandir",
-  "windowMenuBringAllToFront": "Tout amener à l’avant-plan",
   "viewMenuResetZoom": "Taille réelle",
   "viewMenuZoomIn": "Zoom avant",
   "viewMenuZoomOut": "Zoom arrière",
@@ -35,21 +31,16 @@
   "openGroupInvitation": "Invitation à un groupe public",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Rejoindre $roomName$ ?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Êtes-vous sûr de vouloir rejoindre le groupe public $roomName$ ?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Entrer un Session ID ou un nom ONS",
   "loading": "Chargement…",
-  "optimizingApplication": "Optimisation de l’application…",
-  "done": "Terminer",
-  "me": "Moi",
-  "view": "Afficher",
+  "done": "Terminé",
   "youLeftTheGroup": "Vous avez quitté le groupe.",
   "youGotKickedFromGroup": "Vous avez été retiré du groupe.",
-  "unreadMessage": "Message non lu",
   "unreadMessages": "Messages non lus",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Ce journal sera sauvegardé sur votre bureau.",
   "reportIssue": "Signaler un problème",
-  "gotIt": "D’accord",
-  "submit": "Envoyer",
-  "markAllAsRead": "Tout Marquer Comme Lu",
+  "markAllAsRead": "Tout marquer comme lu",
   "incomingError": "Erreur de traitement du message entrant",
   "media": "Médias",
   "mediaEmptyState": "Aucun média",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "La pièce jointe dépasse la limite de taille autorisée.",
   "unableToLoadAttachment": "Une erreur est survenue lors du chargement de la pièce jointe.",
   "offline": "Hors ligne",
-  "checkNetworkConnection": "Vérifiez votre connexion au réseau.",
-  "attemptingReconnection": "Tentative de reconnexion $reconnect_duration_in_seconds$ secondes",
-  "submitDebugLog": "Journal de débogage",
   "debugLog": "Journal de débogage",
   "showDebugLog": "Afficher le journal de débogage",
   "goToReleaseNotes": "Accéder aux notes de mise à jour",
   "goToSupportPage": "Accéder à la page d’assistance",
-  "menuReportIssue": "Signaler un problème",
   "about": "À propos de Session",
-  "speech": "Parole",
   "show": "Afficher",
   "sessionMessenger": "Session",
-  "search": "Recherche",
   "noSearchResults": "Aucun résultat n’a été trouvé pour « %s »",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Contacts et Groupes",
   "contactsHeader": "Contacts",
   "messagesHeader": "Messages",
   "settingsHeader": "Paramètres",
@@ -93,9 +78,6 @@
   "replyToMessage": "Répondre au message",
   "replyingToMessage": "Réponse à:",
   "originalMessageNotFound": "Le message original est introuvable",
-  "originalMessageNotAvailable": "Le message original n’est plus disponible",
-  "messageFoundButNotLoaded": "Le message original a été trouvé, mais n’a pas été chargé. Faites défiler vers le haut pour le charger.",
-  "recording": "Enregistrement",
   "you": "Vous",
   "audioPermissionNeededTitle": "Accès au microphone nécessaire",
   "audioPermissionNeeded": "Vous pouvez autoriser l'accès au microphone via: Paramètres (icon roue dentée) => Confidentialité.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Vous n'êtes pas autorisé à supprimer les messages des autres utilisateurs.",
   "deleteJustForMe": "Supprimer juste pour moi",
   "deleteForEveryone": "Supprimer pour tous",
-  "deleteMessagesQuestion": "Êtes-vous certains de vouloir supprimer les messages?",
+  "deleteMessagesQuestion": "Supprimer $count$ messages ?",
   "deleteMessageQuestion": "Êtes-vous sûr de vouloir supprimer ce message?",
   "deleteMessages": "Supprimer les messages",
-  "deleted": "Supprimé",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Ce message a été supprimé",
   "from": "De :",
   "to": "À :",
@@ -136,30 +118,33 @@
   "lightboxImageAlt": "Image envoyée dans la conversation",
   "imageCaptionIconAlt": "Icône qui indique que cette image a une légende",
   "addACaption": "Ajouter un légende…",
-  "copy": "Copier",
   "copySessionID": "Copier la Session ID",
-  "copyOpenGroupURL": "Copier l'URL de Group",
+  "copyOpenGroupURL": "Copier l'URL du groupe",
   "save": "Enregistrer",
   "saveLogToDesktop": "Enregistrer le journal sur le bureau de l'ordinateur",
   "saved": "Enregistré",
-  "permissions": "Autorisations",
-  "general": "Général",
   "tookAScreenshot": "$name$ a pris une capture d’écran",
   "savedTheFile": "$name$ a enregistré le média",
   "linkPreviewsTitle": "Envoyer des aperçus de liens",
-  "linkPreviewDescription": "Les aperçus sont pris en charge pour la plupart des URLs",
+  "linkPreviewDescription": "Les aperçus sont pris en charge pour la plupart des liens",
   "linkPreviewsConfirmMessage": "Vous n'aurez pas une protection complète des métadonnées en envoyant des aperçu de liens.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Autoriser l'accès au microphone",
   "spellCheckTitle": "Vérification orthographique",
   "spellCheckDescription": "Activer la vérification de l’orthographe du texte saisi dans la fenêtre de rédaction des messages",
   "spellCheckDirty": "Vous devez redémarrer Session pour appliquer ces changements.",
-  "notifications": "Notifications",
   "readReceiptSettingDescription": "Voir et partager quand les messages ont étés lus (s'applique à toutes les sessions).",
   "readReceiptSettingTitle": "Accusés de lecture",
   "typingIndicatorsSettingDescription": "Voir et partager quand les messages sont rédigés (s'applique à toutes les sessions).",
   "typingIndicatorsSettingTitle": "Indicateurs de saisie",
   "zoomFactorSettingTitle": "Facteur de zoom",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Lors de la réception de messages, afficher des notifications qui indiquent :",
   "disableNotifications": "Notifications en sourdine",
   "nameAndMessage": "À la fois le nom de l’expéditeur et son message",
@@ -171,13 +156,7 @@
   "notificationFrom": "De :",
   "notificationMostRecent": "Les plus récents :",
   "sendFailed": "Échec d’envoi",
-  "expiredWarning": "Cette version de Session Desktop pour ordinateur est expirée. Veuillez la mettre à niveau vers la version la plus récente afin de continuer à échanger.",
-  "upgrade": "Mettre à niveau",
   "mediaMessage": "Message multimédia",
-  "timestamp_s": "À l’instant",
-  "timestamp_m": "1 minute",
-  "timestamp_h": "1 heure",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Entrez un corps de message.",
   "unblockToSend": "Débloquez ce contact pour envoyer un message.",
   "unblockGroupToSend": "Débloquer ce groupe pour envoyer un message.",
@@ -223,7 +202,6 @@
   "startConversation": "Lancer une nouvelle conversation…",
   "invalidNumberError": "Le numéro est invalide",
   "failedResolveOns": "Échec de résolution du nom ONS",
-  "successUnlinked": "Votre appareil a été déconnecté avec succès",
   "autoUpdateSettingTitle": "Mise à jour automatique",
   "autoUpdateSettingDescription": "Rechercher automatiquement les mises à jour au lancement",
   "autoUpdateNewVersionTitle": "Une mise à jour de Session est proposée",
@@ -248,7 +226,6 @@
   "blocked": "Bloqué",
   "blockedSettingsTitle": "Contacts bloqués",
   "unbanUser": "Débannir l'utilisateur",
-  "unbanUserConfirm": "Êtes-vous sûr de vouloir dé-bannir cet utilisateur ?",
   "userUnbanned": "Utilisateur débanni avec succès",
   "userUnbanFailed": "Le débannissement a échoué !",
   "banUser": "Bannir l'utilisateur",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Supprimer le mot de passe de ce compte",
   "enterPassword": "Veuillez saisir votre mot de passe",
   "confirmPassword": "Confirmez le mot de passe",
-  "pasteLongPasswordToastTitle": "Le contenu du presse-papier dépasse la longueur maximum pour un mot de passe ($max_pwd_len$ caractères).",
   "showRecoveryPhrasePasswordRequest": "Veuillez saisir votre mot de passe",
   "recoveryPhraseSavePromptMain": "Votre phrase de récupération est la clé principale de votre Session ID — vous pouvez l'utiliser pour restaurer votre Session ID si vous perdez l'accès à votre appareil. Conservez la dans un endroit sûr et ne la donnez à personne.",
   "invalidOpenGroupUrl": "URL non valide",
@@ -322,7 +298,7 @@
   "inviteContacts": "Inviter des amis",
   "addModerators": "Ajouter un modérateur",
   "removeModerators": "Supprimer un modérateur",
-  "addAsModerator": "Ajouter Comme Modérateur",
+  "addAsModerator": "Ajouter comme modérateur",
   "removeFromModerators": "Supprimer Des Modérateurs",
   "add": "Ajouter",
   "addingContacts": "Ajouter des contacts à $name$",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Vous n'êtes pas le créateur",
   "onlyAdminCanRemoveMembersDesc": "Seul le créateur du groupe peut supprimer des utilisateurs",
   "createAccount": "Créer un compte",
-  "signIn": "Connexion",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "Garder dans la barre d'état du système",
+  "startInTrayDescription": "Session continue à fonctionner en arrière-plan lorsque vous fermez la fenêtre",
   "yourUniqueSessionID": "Dites bonjour à votre Session ID",
   "allUsersAreRandomly...": "Votre Session ID est l'identifiant unique que les gens utilisent pour vous contacter dans Session. Sans lien avec votre identité réelle, votre Session ID est complètement anonyme et privé.",
   "getStarted": "Commencer",
@@ -345,22 +320,20 @@
   "anonymous": "Anonyme",
   "removeResidueMembers": "Cliquer sur ok supprimera également ces membres puisqu'ils ont quitté le groupe.",
   "enterDisplayName": "Saisissez un nom d'utilisateur",
-  "enterOptionalPassword": "Entrer un mot de passe (optionel)",
   "continueYourSession": "Continuez votre Session",
   "linkDevice": "Relier un appareil",
   "restoreUsingRecoveryPhrase": "Restaurez votre compte",
   "or": "ou",
-  "ByUsingThisService...": "En utilisant ce service, vous acceptez nos <a href=\"https://getsession.org/legal/#tos\">Conditions d'utilisation</a> et notre <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Politique de confidentialité</a>",
+  "ByUsingThisService...": "En utilisant ce service, vous acceptez nos <a href=\"https://getsession.org/terms-of-service\">Conditions d'utilisation</a> et notre <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Politique de confidentialité</a>",
   "beginYourSession": "Commencez votre Session.",
   "welcomeToYourSession": "Bienvenue sur Session",
   "newSession": "Nouvelle Session",
-  "searchFor...": "Rechercher des conversations ou des contacts",
+  "searchFor...": "Recherche de messages ou de conversations",
   "enterSessionID": "Saisir un Session ID",
   "enterSessionIDOfRecipient": "Saisissez le Session ID du destinataire",
   "usersCanShareTheir...": "Les utilisateurs peuvent partager leur Session ID depuis les paramètres du compte ou en utilisant le code QR.",
   "message": "Message",
   "appearanceSettingsTitle": "Apparence",
-  "permissionSettingsTitle": "Autorisations",
   "privacySettingsTitle": "Confidentialité",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Saisissez votre phrase de récupération",
@@ -396,7 +369,7 @@
   "notificationForConvo_disabled": "Désactivées",
   "notificationForConvo_mentions_only": "Mentions seulement",
   "onionPathIndicatorTitle": "Chemin",
-  "onionPathIndicatorDescription": "Session cache votre adresse IP en envoyant vos messages via plusieurs Nœuds de Service dans le réseau décentralisé de Session. Voici les pays via lesquels votre connexion est actuellement transmise :",
+  "onionPathIndicatorDescription": "Session cache votre adresse IP en envoyant vos messages via plusieurs nœuds de service dans le réseau décentralisé de Session. Voici les pays via lesquels votre connexion est actuellement transmise :",
   "unknownCountry": "Pays inconnu",
   "device": "Appareil",
   "destination": "Destination",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Limite de conversation épinglée",
   "pinConversationLimitToastDescription": "Vous pouvez seulement épingler $number$ conversations",
   "showUserDetails": "Afficher les détails de l'utilisateur",
-  "latestUnreadIsAbove": "Le premier message non lu se situe au-dessus",
   "sendRecoveryPhraseTitle": "Envoyer la phrase de récupération",
   "sendRecoveryPhraseMessage": "Vous essayer actuellement d’envoyer votre phrase de récupération, qui peut être utilisée pour accéder a votre compte. Êtes-vous sûre de vouloir envoyer ce message ?",
   "dialogClearAllDataDeletionFailedTitle": "Données non supprimées",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Paramètres des notifications",
   "surveyTitle": "Répondre au sondage Session",
   "goToOurSurvey": "Aller au sondage",
-  "blockAll": "Tout bloquer",
+  "clearAll": "Effacer tout",
   "messageRequests": "Requêtes de messages",
   "requestsSubtitle": "Demandes en fils d'attente",
   "requestsPlaceholder": "Aucune demande",
-  "messageRequestsDescription": "Mettre en fonction, la boîte réception de demande de mise en attente",
+  "hideRequestBannerDescription": "Masquer la bannière de demande de message jusqu'à ce que vous receviez une nouvelle demande de message.",
   "incomingCallFrom": "Appel entrant de '$name$'",
   "ringing": "Ça sonne...",
   "establishingConnection": "Établissement de la connexion...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Aucune sortie audio trouvée",
   "callMediaPermissionsTitle": "Appels audio et vidéo",
   "callMissedCausePermission": "Appel manqué de '$name$' car vous devez activer la permission 'Appels vocaux et vidéo' dans les paramètres de confidentialité.",
-  "callMissedNotApproved": "Appel manqué de '$name$' car vous n'avez pas encore approuvé cette conversation. Envoyez-lui un message d'abord.",
+  "callMissedNotApproved": "Appel manqué de '$name$' car vous n'avez pas encore approuvé cette conversation. Envoyez-leur un message d'abord.",
   "callMediaPermissionsDescription": "Autorise l'accès à accepter les appels vocaux et vidéo d'autres utilisateurs",
   "callMediaPermissionsDialogContent": "La mise en œuvre actuelle des appels vocaux/vidéo exposera votre adresse IP aux serveurs de la Fondation Oxen et aux utilisateurs appelés.",
-  "menuCall": "Appeler",
   "startedACall": "Vous avez appelé $name$",
   "answeredACall": "Appel avec $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Réduire la base de données",
+  "trimDatabaseDescription": "Réduit la taille de votre base de données de messages à vos 10 000 derniers messages.",
+  "trimDatabaseConfirmationBody": "Êtes-vous sûr de vouloir supprimer vos $deleteAmount$ plus anciens messages reçus ?",
+  "pleaseWaitOpenAndOptimizeDb": "Merci de patienter pendant que votre base de données est ouverte et optimisée...",
+  "messageRequestPending": "Votre demande de message est actuellement en attente",
+  "messageRequestAccepted": "Votre demande de message a été acceptée",
+  "messageRequestAcceptedOurs": "Vous avez accepté la demande de message de $name$",
+  "messageRequestAcceptedOursNoName": "Vous avez accepté la demande de message",
+  "declineRequestMessage": "Êtes-vous sûr de vouloir refuser cette demande de message ?",
+  "respondingToRequestWarning": "Envoyer un message à cet utilisateur acceptera automatiquement sa demande de message et révélera votre ID de session.",
+  "hideRequestBanner": "Masquer la bannière de demande de message",
+  "openMessageRequestInbox": "Afficher les demandes de message",
+  "noMessageRequestsPending": "Aucune demande de message en attente",
+  "noMediaUntilApproved": "Vous ne pouvez pas envoyer de pièces jointes tant que la conversation n'est pas approuvée",
+  "mustBeApproved": "Cette conversation doit être acceptée pour utiliser cette fonctionnalité",
+  "youHaveANewFriendRequest": "Vous avez une nouvelle demande d’ami",
+  "clearAllConfirmationTitle": "Effacer toutes les demandes de message",
+  "clearAllConfirmationBody": "Êtes-vous sûr de vouloir supprimer toutes les demandes de message ?",
+  "hideBanner": "Masquer",
+  "openMessageRequestInboxDescription": "Voir la boîte de réception des demandes de message"
 }
