--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "תנאי שימוש ומדיניות פרטיות",
   "copyErrorAndQuit": "העתק שגיאה וצא",
   "unknown": "לא ידוע",
   "databaseError": "שגיאת מסד נתונים",
@@ -17,39 +16,31 @@
   "editMenuCut": "גזור",
   "editMenuCopy": "העתק",
   "editMenuPaste": "הדבק",
-  "editMenuPasteAndMatchStyle": "הדבק והתאם סגנון",
-  "editMenuDelete": "מחק",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "מחק איש קשר",
+  "editMenuDeleteGroup": "מחק קבוצה",
   "editMenuSelectAll": "בחר הכל",
   "windowMenuClose": "סגור חלון",
   "windowMenuMinimize": "מזער",
   "windowMenuZoom": "ריחוק",
-  "windowMenuBringAllToFront": "הבא הכל לקידמה",
   "viewMenuResetZoom": "גודל ממשי",
   "viewMenuZoomIn": "התקרב",
   "viewMenuZoomOut": "התרחק",
   "viewMenuToggleFullScreen": "עורר מסך מלא",
   "viewMenuToggleDevTools": "עורר כלי מפתחים",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "contextMenuNoSuggestions": "אין הצעות",
+  "openGroupInvitation": "פתח הזמנה לקבוצה",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "להצטרף ל $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "האם אתה בטוח שאתה רוצה להצטרף לקבוצה הפתוחה של $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "enterSessionIDOrONSName": "הזן את מזהה הסשן שלך או שם ONS",
   "loading": "טוען...",
-  "optimizingApplication": "ממטב יישום...",
-  "done": "Done",
-  "me": "אני",
-  "view": "הצג",
+  "done": "בוצע",
   "youLeftTheGroup": "עזבת את הקבוצה",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "youGotKickedFromGroup": "הוסרת מהקבוצה.",
+  "unreadMessages": "הודעות שלא נקראו",
+  "debugLogExplanation": "הלוג ישמר על במחשב שלך.",
   "reportIssue": "דווח על סוגייה",
-  "gotIt": "הבנתי!",
-  "submit": "שלח",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "סמן הכל כנקרא",
   "incomingError": "שגיאה בטיפול בהודעה נכנסת",
   "media": "מדיה",
   "mediaEmptyState": "אין לך מדיה כלשהי בשיחה זו",
@@ -69,81 +60,69 @@
   "fileSizeWarning": "הקובץ עובר את מגבלת הגודל המקסימלי.",
   "unableToLoadAttachment": "לא היה ניתן לטעון את הצרופה הנבחרת.",
   "offline": "מנותק",
-  "checkNetworkConnection": "בדוק את חיבור הרשת שלך.",
-  "attemptingReconnection": "מנסה להתחבר מחדש תוך $reconnect_duration_in_seconds$ שניות",
-  "submitDebugLog": "יומן תקלים",
   "debugLog": "יומן תקלים",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "לוג של איתור הבאגים",
   "goToReleaseNotes": "לך אל הערות שחרור",
   "goToSupportPage": "לך אל דף התמיכה",
-  "menuReportIssue": "דווח על סוגייה",
-  "about": "About",
-  "speech": "דיבור",
+  "about": "אודות",
   "show": "הראה",
-  "sessionMessenger": "Session",
-  "search": "חיפוש",
+  "sessionMessenger": "פעילות",
   "noSearchResults": "אין תוצאות עבור \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "אנשי קשר וקבוצות",
   "contactsHeader": "אנשי קשר",
   "messagesHeader": "הודעות",
-  "settingsHeader": "Settings",
+  "settingsHeader": "הגדרות",
   "typingAlt": "הנפשת הקלדה עבור שיחה זו",
   "contactAvatarAlt": "יצגן עבור איש קשר $name$",
   "downloadAttachment": "הורד צרופה",
   "replyToMessage": "השב להודעה",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "מענה אל:",
   "originalMessageNotFound": "הודעה מקורית לא נמצאה",
-  "originalMessageNotAvailable": "הודעה מקורית אינה זמינה יותר",
-  "messageFoundButNotLoaded": "הודעה מקורית נמצאה, אבל לא נטענה. גלול למעלה כדי לטעון אותה.",
-  "recording": "Recording",
   "you": "אתה",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "כדי לשלוח הודעות קוליות, התר אל Session Desktop עבודה לקבל גישה אל המיקרופון שלך.",
   "audio": "שמע",
   "video": "וידיאו",
   "photo": "תצלום",
-  "cannotUpdate": "Cannot Update",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdate": "לא ניתן לבצע עדכון",
+  "cannotUpdateDetail": "Session Desktop נכשל בעדכון, אך יש גרסה חדשה זמינה. אנא עבור אל https://getsession.org/ והתקן את הגרסה החדשה באופן ידני, ולאחר מכן צור קשר עם התמיכה או הגש באג לגבי בעיה זו.",
   "ok": "אישור",
   "cancel": "ביטול",
-  "close": "Close",
-  "continue": "Continue",
+  "close": "סגירה",
+  "continue": "המשך",
   "error": "שגיאה",
   "delete": "מחק",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "messageDeletionForbidden": "אין לך הרשאה למחוק הודעות של אחרים",
+  "deleteJustForMe": "מחק עבורי בלבד",
+  "deleteForEveryone": "מחק לכולם",
+  "deleteMessagesQuestion": "למחוק $count$ הודעות?",
+  "deleteMessageQuestion": "למחוק הודעה זו?",
   "deleteMessages": "מחק הודעות",
-  "deleted": "Deleted",
-  "messageDeletedPlaceholder": "This message has been deleted",
+  "deleted": "$count$ deleted",
+  "messageDeletedPlaceholder": "הודעה זו נמחקה",
   "from": "מאת",
   "to": "אל",
   "sent": "נשלח",
   "received": "התקבל",
   "sendMessage": "שלח הודעה",
   "groupMembers": "חברי קבוצה",
-  "moreInformation": "More information",
-  "resend": "Resend",
+  "moreInformation": "מידע נוסף",
+  "resend": "שלח שוב",
   "deleteConversationConfirmation": "האם למחוק לצמיתות שיחה זו?",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
-  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
+  "clearAllData": "ניקוי כל הנתונים",
+  "deleteAccountWarning": "פעולה זו תמחק לצמיתות את ההודעות, ואנשי הקשר שלך.",
+  "deleteContactConfirmation": "אתה בטוח שברצונך למחוק את השיחה הזאת?",
   "quoteThumbnailAlt": "תמונה ממוזערת מהודעה מצוטטת",
   "imageAttachmentAlt": "תמונה צורפה אל הודעה",
   "videoAttachmentAlt": "צילום מסך של וידיאו צורף אל הודעה",
   "lightboxImageAlt": "תמונה נשלחה בשיחה",
   "imageCaptionIconAlt": "ראות צלמית שיש לתמונה זו כיתוב",
   "addACaption": "הוסף כיתוב...",
-  "copy": "Copy",
-  "copySessionID": "Copy Session ID",
+  "copySessionID": "העתק מזהה",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "שמור",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "הרשאות",
-  "general": "כללי",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "אפשר בדיקת איות של מלל המוכנס בתיבת חיבור הודעה",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "התראות",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "כאשר הודעות מגיעות, הצג התראות אשר חושפות:",
   "disableNotifications": "השבת התראות",
   "nameAndMessage": "שם השולח והודעה",
@@ -171,13 +156,7 @@
   "notificationFrom": "מאת:",
   "notificationMostRecent": "הודעה אחרונה:",
   "sendFailed": "שליחה נכשלה",
-  "expiredWarning": "גרסה זו של Session Desktop עבודה פגה. אנא שדרג אל הגרסה האחרונה כדי להמשיך בשליחת הודעות.",
-  "upgrade": "שדרג",
   "mediaMessage": "הודעת מדיה",
-  "timestamp_s": "כעת",
-  "timestamp_m": "דקה 1",
-  "timestamp_h": "שעה 1",
-  "timestampFormat_M": "MMM D",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "בטל חסימה של איש קשר זה כדי לשלוח הודעה.",
   "unblockGroupToSend": "בטל חסימה של קבוצה זו כדי לשלוח הודעה.",
@@ -223,7 +202,6 @@
   "startConversation": "התחל שיחה חדשה...",
   "invalidNumberError": "מספר בלתי תקף",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "עדכון Session זמין",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -423,7 +395,7 @@
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
+  "entireAccount": "כל החשבון",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
   "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
   "iAmSure": "I am sure",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "לא ניתן לשלוח קבצים מצורפים עד שהשיחה תאושר",
+  "mustBeApproved": "יש לאשר שיחה זו בכדי להשתמש בתכונה זו",
+  "youHaveANewFriendRequest": "יש לך בקשת חברות חדשה",
+  "clearAllConfirmationTitle": "ניקוי כל בקשות ההודעות",
+  "clearAllConfirmationBody": "האם את/ה בטוח/ה שברצונך למחוק את כל בקשות ההודעות?",
+  "hideBanner": "הסתר/י",
+  "openMessageRequestInboxDescription": "צפיה בתיבה נכנסת לבקשות שיחה"
 }
