--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Felhasználási feltételek és adatvédelmi irányelvek",
   "copyErrorAndQuit": "Hiba másolása és kilépés",
   "unknown": "Ismeretlen",
   "databaseError": "Adatbázishiba",
@@ -17,15 +16,12 @@
   "editMenuCut": "Kivágás",
   "editMenuCopy": "Másolás",
   "editMenuPaste": "Beillesztés",
-  "editMenuPasteAndMatchStyle": "Beillesztés és formázás egyesítése",
-  "editMenuDelete": "Törlés",
   "editMenuDeleteContact": "Névjegy törlése",
   "editMenuDeleteGroup": "Csoport törlése",
   "editMenuSelectAll": "Összes kijelölése",
   "windowMenuClose": "Ablak bezárása",
   "windowMenuMinimize": "Minimalizálás",
   "windowMenuZoom": "Nagyítás",
-  "windowMenuBringAllToFront": "Összes előrehozása",
   "viewMenuResetZoom": "Eredeti méret",
   "viewMenuZoomIn": "Nagyítás növelése",
   "viewMenuZoomOut": "Nagyítás csökkentése",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Nyilvános csoport meghívások",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Csatlakozni a $roomName$ nevű szobához?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Biztosan csatlakozni szeretne a(z) $roomName$ nyilvános csoporthoz?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Írja be Session azonosítóját vagy ONS nevét",
   "loading": "Betöltés...",
-  "optimizingApplication": "Alkalmazás optimalizálása...",
   "done": "Kész",
-  "me": "Én",
-  "view": "Megtekintés",
   "youLeftTheGroup": "Kiléptél a csoportból",
   "youGotKickedFromGroup": "Ön ki lett dobva ebből a csoportból.",
-  "unreadMessage": "Olvasatlan Üzenet",
   "unreadMessages": "Olvasatlan Üzenetek",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Ez a napló az asztalra lesz mentve.",
   "reportIssue": "Hiba bejelentése",
-  "gotIt": "Rendben!",
-  "submit": "Küldés",
   "markAllAsRead": "Összes megjelölése olvasottként",
   "incomingError": "Nem sikerült kezelni a bejövő üzenetet.",
   "media": "Média",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Sajnos a kiválasztott fájl túllépi az elküldhető üzenet maximális méretét.",
   "unableToLoadAttachment": "Nem sikerült betölteni a kiválasztott csatolmányt.",
   "offline": "Nincs csatlakozva",
-  "checkNetworkConnection": "Ellenőrizd hálózati kapcsolatodat!",
-  "attemptingReconnection": "Újracsatlakozási kísérlet $reconnect_duration_in_seconds$ másodperc múlva",
-  "submitDebugLog": "Fejlesztői naplófájl",
   "debugLog": "Fejlesztői napló",
   "showDebugLog": "Debug log mutatása",
   "goToReleaseNotes": "Release notes megnyitása",
   "goToSupportPage": "Támogatás megnyitása",
-  "menuReportIssue": "Hiba bejelentése",
   "about": "Névjegy",
-  "speech": "Beszéd",
   "show": "Megjelenítés",
   "sessionMessenger": "Session",
-  "search": "Keresés",
   "noSearchResults": "Nincs találat a \"$searchTerm$\" keresőkifejezése",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Partnerek és csoportok",
   "contactsHeader": "Névjegyek",
   "messagesHeader": "Üzenetek",
   "settingsHeader": "Beállítások",
@@ -93,9 +78,6 @@
   "replyToMessage": "Válasz az üzenetre",
   "replyingToMessage": "Válasz neki:",
   "originalMessageNotFound": "Az eredeti üzenet nem található",
-  "originalMessageNotAvailable": "Az eredeti üzenet már nem érhető el",
-  "messageFoundButNotLoaded": "Az eredeti üzenet ugyan fellelhető, de még nincs betöltve. Görgess fel a betöltéséhez!",
-  "recording": "Rögzítés",
   "you": "Te",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Hangüzenetek küldéséhez engedélyezd, hogy a Session Desktop hozzáférjen mikrofonodhoz",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Nincs joga mások üzeneteit törölni",
   "deleteJustForMe": "Törlés csak nálam",
   "deleteForEveryone": "Törlés mindenkinél",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Biztos törölni szerente $count$ üzenetet?",
   "deleteMessageQuestion": "Törli ezt az üzenetet?",
   "deleteMessages": "Üzenetek törlése",
-  "deleted": "Törölve",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Az üzenete törölve",
   "from": "Feladó",
   "to": "címzett",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Beszélgetés során küldött fotó",
   "imageCaptionIconAlt": "Ikon, amely azt jelzi, hogy a kép feliratot tartalmaz",
   "addACaption": "Felirat hozzáadása...",
-  "copy": "Másolás",
   "copySessionID": "Az ön Session azonosítójának kimásolása",
   "copyOpenGroupURL": "Csoport URL-jének másolása",
   "save": "Mentés",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Napló mentése asztalra",
   "saved": "Elmentve",
-  "permissions": "Jogosultságok",
-  "general": "Általános",
   "tookAScreenshot": "$name$ készített egy képernyőképet",
   "savedTheFile": "$name$ lementett egy médiaelemet",
   "linkPreviewsTitle": "Hivatkozások előnézeti képének küldése",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Helyesírás ellenőrzése",
   "spellCheckDescription": "Az üzenetíró dobozba gépelt szöveg helyesírás-ellenőrzésének engedélyezése",
   "spellCheckDirty": "Újra kell indítanod a Session-t a beállítások érvényesítéséhez",
-  "notifications": "Értesítések",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Olvasási nyugták",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Gépelésindikátorok",
   "zoomFactorSettingTitle": "Nagyítás mértéke",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Amikor üzenet érkezik, jelenítse meg a következőket:",
   "disableNotifications": "Értesítések letiltása",
   "nameAndMessage": "Feladó neve és az üzenet",
@@ -171,13 +156,7 @@
   "notificationFrom": "Feladó:",
   "notificationMostRecent": "Legfrissebb:",
   "sendFailed": "Küldés sikertelen",
-  "expiredWarning": "A Session Desktop ezen verziója elavult. Kérlek frissíts a legújabb verzióra, hogy folytatni tudd a beszélgetést!",
-  "upgrade": "Frissítés",
   "mediaMessage": "Médiaüzenet",
-  "timestamp_s": "mostanában",
-  "timestamp_m": "1 perce",
-  "timestamp_h": "1 órája",
-  "timestampFormat_M": "MMM D",
   "messageBodyMissing": "Kérlek írd be az üzenetet.",
   "unblockToSend": "Üzenet küldéséhez oldd fel ismerősöd blokkolását!",
   "unblockGroupToSend": "Üzenet küldéséhez oldd fel a csoportot a blokk alól!",
@@ -223,7 +202,6 @@
   "startConversation": "Új beszélgetés megkezdése…",
   "invalidNumberError": "Érvénytelen telefonszám",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Az eszközöd sikeresen leválasztva",
   "autoUpdateSettingTitle": "Automatikus frissítés",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Session frissítés elérhető",
@@ -248,7 +226,6 @@
   "blocked": "Blokkolt",
   "blockedSettingsTitle": "Letiltott ismerősök",
   "unbanUser": "Felhasználó kitiltásának feloldása",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Felhasználó sikeresen engedélyezve",
   "userUnbanFailed": "Az engedélyzés meghiúsult",
   "banUser": "Felhasználó letiltása",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Ehhez a fiókhoz tartozó jelszó eltávolítása",
   "enterPassword": "Kérlek add meg a jelszavad",
   "confirmPassword": "Jelszó megerősítése",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Kérlek add meg a jelszavad",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Érvénytelen URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Bejelentkezés",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Ismerd meg a Session ID-d",
@@ -345,22 +320,20 @@
   "anonymous": "Névtelen",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Megjelenítendő név megadása",
-  "enterOptionalPassword": "Jelszó (nem kötelező)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Eszköz társítása",
   "restoreUsingRecoveryPhrase": "Fiókod visszaállítása",
   "or": "vagy",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Üdvözöl a Session",
   "newSession": "Új beszélgetés",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Session azonosító megadása",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Üzenet",
   "appearanceSettingsTitle": "Megjelenés",
-  "permissionSettingsTitle": "Engedélyek",
   "privacySettingsTitle": "Adatvédelem",
   "notificationsSettingsTitle": "Értesítések",
   "recoveryPhraseEmpty": "Írd be a helyreállítási szavakat",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Feltűzött beszélgetések limite",
   "pinConversationLimitToastDescription": "Csak $number$ beszélgetést tudsz feltűzni",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "A legkorábbi olvasatlan üzenet feljebb található",
   "sendRecoveryPhraseTitle": "Helyreállító kódmondat küldése",
   "sendRecoveryPhraseMessage": "A helyreállító kódmondatod készülsz elküldeni, amellyel hozzá lehet férni fiókodhoz. Biztosan el akarod küldeni?",
   "dialogClearAllDataDeletionFailedTitle": "Adatok nem lettek törölve",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Értesítések - $setting$",
   "surveyTitle": "Töltsd ki a Session kérdőívet",
   "goToOurSurvey": "Ugrás a kérdőívre",
-  "blockAll": "Az összes letiltása",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Bejövő hívás '$name$'",
   "ringing": "Csöngetés...",
   "establishingConnection": "Kapcsolat készítése...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Nem található audio kimenet",
   "callMediaPermissionsTitle": "Hang és videó hívások",
   "callMissedCausePermission": "Nem fogadott hívás '$name$' -től, mert előbb engedélyezned kell a 'Hang és videó hívásokat' a Biztonsági beállításokban.",
-  "callMissedNotApproved": "Nem fogadott hívás '$name$' -tól mert még nem engedélyezted a beszélgetéseteket. Írj valamit neki előbb.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Engedélyezz hozzáférést ahhoz, hogy fogadhass hang és videó hívásokat másoktól",
   "callMediaPermissionsDialogContent": "A mostani megoldás a hang/videó hívásoknak megmutatja az IP címed az Oxen Foundation szervereknek és a másik félnek a hívásban.",
-  "menuCall": "Hívás",
   "startedACall": "Felhívtad $name$",
   "answeredACall": "Hívás $name$ -al",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
