--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "利用規約とプライバシーポリシー",
   "copyErrorAndQuit": "エラーの文章をコピーして終了",
   "unknown": "不明",
   "databaseError": "データベースエラー",
@@ -17,15 +16,12 @@
   "editMenuCut": "切り取り",
   "editMenuCopy": "コピーする",
   "editMenuPaste": "貼り付け",
-  "editMenuPasteAndMatchStyle": "貼り付けてスタイルをマッチさせる",
-  "editMenuDelete": "削除",
   "editMenuDeleteContact": "連絡先を削除",
   "editMenuDeleteGroup": "グループを削除",
   "editMenuSelectAll": "すべて選択",
   "windowMenuClose": "ウィンドウを閉じる",
   "windowMenuMinimize": "最小化する",
   "windowMenuZoom": "ズーム",
-  "windowMenuBringAllToFront": "すべてを前面に表示する",
   "viewMenuResetZoom": "実サイズ",
   "viewMenuZoomIn": "拡大",
   "viewMenuZoomOut": "縮小",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "公開グループからの招待",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$に参加しますか？",
   "joinOpenGroupAfterInvitationConfirmationDesc": "$roomName$の公開グループに参加しますか？",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Session ID か ONS 名を入力してください",
   "loading": "読込中...",
-  "optimizingApplication": "アプリケーションを最適化しています...",
   "done": "完了",
-  "me": "自分",
-  "view": "見る",
   "youLeftTheGroup": "グループを抜けました",
   "youGotKickedFromGroup": "あなたはこのグループから削除されました",
-  "unreadMessage": "未読",
   "unreadMessages": "未読",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "このログはデスクトップに保存されます。",
   "reportIssue": "問題を報告",
-  "gotIt": "分かりました",
-  "submit": "送信する",
   "markAllAsRead": "すべて既読にする",
   "incomingError": "受信中にエラー",
   "media": "メディア",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "添付ファイルのサイズが上限を超えています",
   "unableToLoadAttachment": "添付中にエラーが発生しました。",
   "offline": "オフライン",
-  "checkNetworkConnection": "ネットワーク接続をご確認ください。",
-  "attemptingReconnection": "$reconnect_duration_in_seconds$ 秒後に再接続を行います。",
-  "submitDebugLog": "デバッグログ",
   "debugLog": "デバッグログ",
   "showDebugLog": "デバッグログを表示",
   "goToReleaseNotes": "リリースノートを閲覧",
   "goToSupportPage": "サポートページへ",
-  "menuReportIssue": "バグを報告",
   "about": "Sessionについて",
-  "speech": "スピーチ",
   "show": "表示",
-  "sessionMessenger": "Session",
-  "search": "検索",
+  "sessionMessenger": "セッション",
   "noSearchResults": "「%s」に一致する情報は見つかりませんでした。",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "連絡先とグループ",
   "contactsHeader": "連絡先",
   "messagesHeader": "メッセージ",
   "settingsHeader": "設定",
@@ -93,9 +78,6 @@
   "replyToMessage": "メッセージに返信",
   "replyingToMessage": "このメッセージへの返信：",
   "originalMessageNotFound": "元のメッセージが見つかりません",
-  "originalMessageNotAvailable": "元のメッセージはすでに削除されています",
-  "messageFoundButNotLoaded": "元のメッセージを見つけたが、ロードされていません。ロードするのにスクロールアップして下さい。",
-  "recording": "記録中",
   "you": "あなた",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "音声メッセージを送るには、Sessionのマイクへのアクセスを許可してください。",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "他のユーザーの投稿を削除する権限はありません",
   "deleteJustForMe": "自分宛のみ削除",
   "deleteForEveryone": "全員の端末から削除",
-  "deleteMessagesQuestion": "これらのメッセージを削除しますか？",
+  "deleteMessagesQuestion": "$count$個のメッセージを削除しますか？",
   "deleteMessageQuestion": "このメッセージを削除しますか？",
   "deleteMessages": "メッセージを削除",
-  "deleted": "メッセージが削除されました",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "このメッセージは削除されました",
   "from": "差出人:",
   "to": "宛先:",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "会話に送られた画像",
   "imageCaptionIconAlt": "この画像にキャプションがあることを示すアイコン",
   "addACaption": "キャプション追加...",
-  "copy": "コピーする",
   "copySessionID": "Session ID をコピー",
   "copyOpenGroupURL": "グループのURLをコピー",
   "save": "保存",
   "saveLogToDesktop": "デスクトップにログを保存",
   "saved": "保存済み",
-  "permissions": "アクセス許可",
-  "general": "一般",
   "tookAScreenshot": "$name$はスクリーンショットを撮りました。",
   "savedTheFile": "$name$ でメディアを保存しました",
   "linkPreviewsTitle": "リンクプレビューを送る",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "スペルチェック",
   "spellCheckDescription": "メッセージボックスに入力されたテキストのスペルチェックを有効にする",
   "spellCheckDirty": "新しい設定を適用するために Session を再起動する必要があります",
-  "notifications": "通知",
   "readReceiptSettingDescription": "メッセージが読まれた状態の表示と送信をする（すべてのセッションに既読通知を有功にする）。",
   "readReceiptSettingTitle": "既読通知",
   "typingIndicatorsSettingDescription": "メッセージが入力中である状態の表示と送信をする（すべてのセッションに適用される）。",
   "typingIndicatorsSettingTitle": "入力中アイコン",
   "zoomFactorSettingTitle": "ズーム",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "新着メッセージの通知で表示する項目：",
   "disableNotifications": "通知を無効にする",
   "nameAndMessage": "差出人名とメッセージ",
@@ -171,13 +156,7 @@
   "notificationFrom": "差出人:",
   "notificationMostRecent": "最近の受信：",
   "sendFailed": "送信失敗",
-  "expiredWarning": "アプリのバージョンが古すぎます。最新版に更新してください。",
-  "upgrade": "最新版に更新",
   "mediaMessage": "メディアでのメッセージ",
-  "timestamp_s": "今",
-  "timestamp_m": "1分",
-  "timestamp_h": "1時間",
-  "timestampFormat_M": "MMM D",
   "messageBodyMissing": "メッセージを入力してください",
   "unblockToSend": "この連絡先にメッセージを送るためにブロックを解除する。",
   "unblockGroupToSend": "このグループにメッセージを送信するには、ブロックを解除してください。",
@@ -223,7 +202,6 @@
   "startConversation": "Start new conversation…",
   "invalidNumberError": "不正な番号です",
   "failedResolveOns": "ONS名の解決に失敗しました",
-  "successUnlinked": "端末は正常にリンク解除されました",
   "autoUpdateSettingTitle": "自動更新",
   "autoUpdateSettingDescription": "起動時に自動的に更新の有無を確認する",
   "autoUpdateNewVersionTitle": "Sessionの新しい更新があります",
@@ -248,7 +226,6 @@
   "blocked": "ブロック済み",
   "blockedSettingsTitle": "ブロックした連絡先",
   "unbanUser": "ユーザーの禁止解除",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "ユーザーの禁止解除に成功しました",
   "userUnbanFailed": "禁止解除に失敗しました！",
   "banUser": "ユーザーを禁止する",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "このアカウントに設定されているパスワードを削除します",
   "enterPassword": "パスワードを入力してください",
   "confirmPassword": "パスワードを再確認",
-  "pasteLongPasswordToastTitle": "クリップボードの内容が $max_pwd_len$ 文字の最大パスワード長を超えています。",
   "showRecoveryPhrasePasswordRequest": "パスワードを入力してください",
   "recoveryPhraseSavePromptMain": "リカバリーフレーズは、Session ID のマスターキーです。端末にアクセスできなくなった場合、これを使用して Session ID を復元できます。リカバリーフレーズを安全な場所に保管し、誰にも教えないでください。",
   "invalidOpenGroupUrl": "URL が無効です",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "あなたは作成者ではありません",
   "onlyAdminCanRemoveMembersDesc": "グループの作成者のみがユーザーを削除できます",
   "createAccount": "アカウントを作成",
-  "signIn": "ログイン",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "システムトレイに常駐",
+  "startInTrayDescription": "ウィンドウを閉じてもSessionはバックグラウンドで実行され続けます",
   "yourUniqueSessionID": "Session ID をご紹介します",
   "allUsersAreRandomly...": "Session ID は、Session で連絡を取るために使用できる一意のアドレスです。本当のアイデンティティに関係なく、あなたの Session ID は設計上完全に匿名でプライベートです。",
   "getStarted": "はじめましょう",
@@ -345,22 +320,20 @@
   "anonymous": "匿名",
   "removeResidueMembers": "OK をクリックすると、グループから退出したメンバーも削除されます。",
   "enterDisplayName": "表示名を入力してください",
-  "enterOptionalPassword": "パスワード入力（任意）",
   "continueYourSession": "Session を続ける",
   "linkDevice": "端末をリンクする",
   "restoreUsingRecoveryPhrase": "アカウントを復元する",
   "or": "または",
-  "ByUsingThisService...": "本サービスを利用する場合、<a href=\"https://getsession.org/legal/#tos\">利用規約</a>および<a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">プライバシーポリシー</a>に同意するものとします",
+  "ByUsingThisService...": "本サービスを利用する場合、<a href=\"https://getsession.org/terms-of-service\">利用規約</a>および<a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">プライバシーポリシー</a>に同意するものとします",
   "beginYourSession": "セッションを始めましょう",
   "welcomeToYourSession": "Sessionにようこそ",
   "newSession": "新しいセッション",
-  "searchFor...": "会話や連絡先を検索",
+  "searchFor...": "メッセージまたは会話を検索",
   "enterSessionID": "Session ID を入力してください",
   "enterSessionIDOfRecipient": "受信者の Session ID を入力してください",
   "usersCanShareTheir...": "ユーザーは、アカウント設定に移動して「Session ID を共有」をタップするか、QR コードを共有することで、Session ID を共有できます。",
   "message": "メッセージ",
   "appearanceSettingsTitle": "デザイン設定",
-  "permissionSettingsTitle": "アクセス許可",
   "privacySettingsTitle": "プライバシー",
   "notificationsSettingsTitle": "通知",
   "recoveryPhraseEmpty": "リカバリーフレーズを入力してください",
@@ -383,7 +356,7 @@
   "orJoinOneOfThese": "または、以下のグループに参加する…",
   "helpUsTranslateSession": "Sessionの翻訳にご協力ください",
   "translation": "翻訳する",
-  "closedGroupInviteFailTitle": "グループ招待に失敗",
+  "closedGroupInviteFailTitle": "グループ招待に失敗しました",
   "closedGroupInviteFailTitlePlural": "グループ招待に失敗",
   "closedGroupInviteFailMessage": "グループメンバーの招待に成功することができません",
   "closedGroupInviteFailMessagePlural": "すべてのグループメンバーの招待に成功することはできません",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "会話のピン留めの上限",
   "pinConversationLimitToastDescription": "$number$ 件の会話をピン留めすることができます",
   "showUserDetails": "ユーザーの詳細を表示",
-  "latestUnreadIsAbove": "最初の未読メッセージは上記です",
   "sendRecoveryPhraseTitle": "復元フレーズを送信中",
   "sendRecoveryPhraseMessage": "あなたのアカウントにアクセスするため復元フレーズを送信しようとしています。このメッセージを送信してもよろしいですか？",
   "dialogClearAllDataDeletionFailedTitle": "データは削除されていません",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "通知設定 $setting$",
   "surveyTitle": "セッションアンケートに参加する",
   "goToOurSurvey": "アンケートへ移動",
-  "blockAll": "全てブロック",
+  "clearAll": "すべて消去する",
   "messageRequests": "メッセージリクエスト",
   "requestsSubtitle": "保留中のリクエスト",
   "requestsPlaceholder": "リクエストなし",
-  "messageRequestsDescription": "メッセージリクエスト受信トレイを有効化",
+  "hideRequestBannerDescription": "新しいメッセージ・リクエストを受信するまでメッセージ・リクエストバナーを非表示にします。",
   "incomingCallFrom": "'$name$' からの着信",
   "ringing": "呼び出し中...",
   "establishingConnection": "接続を確立中...",
@@ -458,10 +430,26 @@
   "callMissedNotApproved": "この会話を承認していないため、'$name$' からの通話が失敗しました。最初にメッセージを送信してください。",
   "callMediaPermissionsDescription": "他のユーザーからの音声通話やビデオ通話を受け入れることができます",
   "callMediaPermissionsDialogContent": "現在の音声/ビデオ通話の実装においては、あなたのIPアドレスがOxen Foundationサーバー及び通話/着信ユーザーに表示されます。",
-  "menuCall": "通話",
   "startedACall": "$name$ と通話しました",
   "answeredACall": "$name$ と通話",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "データベースの切り取り",
+  "trimDatabaseDescription": "メッセージデータベースのサイズを直近の10,000件まで縮小します。",
+  "trimDatabaseConfirmationBody": "$deleteAmount$ の古い受信メッセージを削除してもよろしいですか？",
+  "pleaseWaitOpenAndOptimizeDb": "データベースを開き、最適化するまでお待ちください...",
+  "messageRequestPending": "メッセージ・リクエストは現在承認待ちです",
+  "messageRequestAccepted": "メッセージ・リクエストが承認されました",
+  "messageRequestAcceptedOurs": "$name$さんのメッセージリクエストを承認しました",
+  "messageRequestAcceptedOursNoName": "この友達リクエストを承認しました。",
+  "declineRequestMessage": "こちらの友達リクエストを本当に拒否しますか？",
+  "respondingToRequestWarning": "このユーザーにメッセージを送信すると、自動的にメッセージのリクエストが受け付けられ、あなたのセッションIDが公開されます。",
+  "hideRequestBanner": "メッセージリクエストバナーを非表示にする",
+  "openMessageRequestInbox": "メッセージ・リクエストを表示",
+  "noMessageRequestsPending": "保留中のメッセージ・リクエストはありません",
+  "noMediaUntilApproved": "承認されるまで添付ファイルを送信できません",
+  "mustBeApproved": "この機能を使うには承認する必要があります。",
+  "youHaveANewFriendRequest": "友達申請が来ています。",
+  "clearAllConfirmationTitle": "すべてのメッセージリクエストを削除",
+  "clearAllConfirmationBody": "本当に全てのメッセージリクエストを消去しますか？",
+  "hideBanner": "非表示",
+  "openMessageRequestInboxDescription": "メッセージリクエストの受信トレイを表示"
 }
