--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "ចម្លងបញ្ហា និងចាកចេញ",
   "unknown": "Unknown",
   "databaseError": "បញ្ហាទិន្នន័យ",
@@ -17,15 +16,12 @@
   "editMenuCut": "កាត់",
   "editMenuCopy": "ចម្លង",
   "editMenuPaste": "បិទភ្ជាប់",
-  "editMenuPasteAndMatchStyle": "គំរូបិទភ្ជាប់ និងត្រូវគ្នា",
-  "editMenuDelete": "លុប",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "ជ្រើសរើសទាំងអស់",
   "windowMenuClose": "បិទផ្ទាំង",
   "windowMenuMinimize": "បង្រួមតូច",
   "windowMenuZoom": "ពង្រីក",
-  "windowMenuBringAllToFront": "នាំទាំងអស់ទៅកាន់ពុម្ពអក្សរ",
   "viewMenuResetZoom": "ទំហំជាក់ស្តែង",
   "viewMenuZoomIn": "ពង្រីក",
   "viewMenuZoomOut": "បង្រួម",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "កំពុងផ្ទុក...",
-  "optimizingApplication": "ធ្វើឱ្យកម្មវិធីប្រសើរឡើង ...",
   "done": "Done",
-  "me": "ខ្ញុំ",
-  "view": "បង្ហាញ",
   "youLeftTheGroup": "អ្នកបានចាកចេញពីក្រុម",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "រាយការណ៍បញ្ហាមួយ",
-  "gotIt": "យល់ព្រម!",
-  "submit": "បញ្ជូន",
   "markAllAsRead": "Mark All as Read",
   "incomingError": "បញ្ហាទទួលសារផ្ញើចូល",
   "media": "ឯកសារមេឌា",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "សុំទោស, ឯកសារដែលបានជ្រើសរើស លើសពីទំហំសារដែលបានកំណត់។",
   "unableToLoadAttachment": "មិនអាចផ្ទុកឯកសារភ្ជាប់ដែលបានជ្រើសរើស។",
   "offline": "អហ្វឡាញ",
-  "checkNetworkConnection": "ត្រួតពិនិត្យការតភ្ជាប់បណ្តាញរបស់អ្នក។",
-  "attemptingReconnection": "កំពុងព្យាយាមតភ្ជាប់ឡើងវិញក្នុងពេល $reconnect_duration_in_seconds$ វិនាទី",
-  "submitDebugLog": "កំណត់ត្រាបញ្ហា",
   "debugLog": "កំណត់ត្រាបញ្ហា",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "ចូលទៅកាន់កំណត់ចេញថ្មី",
   "goToSupportPage": "ចូលទៅកាន់ទំព័រគាំទ្រ",
-  "menuReportIssue": "រាយការណ៍បញ្ហាមួយ",
   "about": "About",
-  "speech": "សម្តី",
   "show": "បង្ហាញ",
   "sessionMessenger": "Session",
-  "search": "ស្វែងរក",
   "noSearchResults": "គ្មានលទ្ធផលសម្រាប់ \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "បញ្ជីទំនាក់ទំនង",
@@ -93,9 +78,6 @@
   "replyToMessage": "ឆ្លើយតបសារ",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "រកមិនឃើញឯកសារដើម",
-  "originalMessageNotAvailable": "ឯកសារដើមលែងមានទៀតហើយ",
-  "messageFoundButNotLoaded": "រកឃើញសារដើម ប៉ុន្តែមិនអាចផ្ទុក។ រំកិលចុះក្រោម ដើម្បីផ្ទុកវា។",
-  "recording": "Recording",
   "you": "អ្នក",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "ដើម្បីបញ្ជូនសារសំឡេង អនុញ្ញាតឲ្យSignal Desktop ចូលប្រើប្រាស់ម៉ៃក្រូហ្វូនរបស់អ្នក។",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "លុបសារ",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "ពី",
   "to": "ទៅ",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "រូបភាពបានផ្ញើ ក្នុងការសន្ទនា",
   "imageCaptionIconAlt": "រូបតំណាងបង្ហាញថារូបភាពនេះមានចំណងជើង",
   "addACaption": "ដាក់ចំណងជើង...",
-  "copy": "Copy",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "រក្សាទុក",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "ការអនុញ្ញាត",
-  "general": "ទូទៅ",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "បើកការត្រួតពិនិត្យអក្ខរាវិរុទ្ធនៃពាក្យដែលបានបញ្ចូលក្នុងប្រអប់ផ្ញើសារ",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "ការជូនដំណឹង",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "ពេលទទួលសារ បង្ហាញការជូនដំណឹងដែលមាន៖",
   "disableNotifications": "បិទការជូនដំណឹង",
   "nameAndMessage": "ទាំងឈ្មោះអ្នកផ្ញើ និងសារ",
@@ -171,13 +156,7 @@
   "notificationFrom": "ពី៖",
   "notificationMostRecent": "ថ្មីៗបំផុត៖",
   "sendFailed": "ផ្ញើបរាជ័យ",
-  "expiredWarning": "ជំនាន់ Session Desktop នេះ បានហួសសុពលភាព។ សូមដំឡើងទីកាន់ជំនាន់ចុងក្រោយ ដើម្បីបន្តការផ្ញើសារ។",
-  "upgrade": "ដំឡើង",
   "mediaMessage": "សារមេឌា",
-  "timestamp_s": "ឥឡូវ",
-  "timestamp_m": "1 នាទី",
-  "timestamp_h": "1 ម៉ោង",
-  "timestampFormat_M": "ខែ ថ្ងៃ",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "ដោះការហាមឃាត់លេខទំនាក់ទំនងនេះ ដើម្បីផ្ញើសារ។",
   "unblockGroupToSend": "មិនការទប់ស្កាត់ក្រុមនេះ ដើម្បីផ្ញើសារ។",
@@ -223,7 +202,6 @@
   "startConversation": "ចាប់ផ្តើមការសន្ទនាថ្មី...",
   "invalidNumberError": "លេខមិនត្រឹមត្រូវ",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "មានបច្ចុប្បន្នភាព Session",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
