--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Kopijuoti klaidą ir išeiti",
   "unknown": "Unknown",
   "databaseError": "Duomenų bazės klaida",
@@ -17,15 +16,12 @@
   "editMenuCut": "Iškirpti",
   "editMenuCopy": "Kopijuoti",
   "editMenuPaste": "Įdėti",
-  "editMenuPasteAndMatchStyle": "Įdėti ir atitikti stilių",
-  "editMenuDelete": "Ištrinti",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Žymėti viską",
   "windowMenuClose": "Užverti langą",
   "windowMenuMinimize": "Suskleisti",
   "windowMenuZoom": "Mastelis",
-  "windowMenuBringAllToFront": "Perkelti visus į priekį",
   "viewMenuResetZoom": "Įprastas dydis",
   "viewMenuZoomIn": "Didinti",
   "viewMenuZoomOut": "Mažinti",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Įkeliama...",
-  "optimizingApplication": "Optimizuojama programa...",
   "done": "Atlikta",
-  "me": "Aš",
-  "view": "Rodyti",
   "youLeftTheGroup": "Jūs išėjote iš grupės",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Neskaityta žinutė",
   "unreadMessages": "Neskaitytos žinutės",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Pranešti apie klaidą",
-  "gotIt": "Supratau",
-  "submit": "Pateikti",
   "markAllAsRead": "Žymėti visas kaip skaitytas",
   "incomingError": "Klaida, apdorojant gaunamą žinutę",
   "media": "Medija",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Atleiskite, pasirinktas failas viršija žinutės dydžio apribojimus.",
   "unableToLoadAttachment": "Nepavyko įkelti pasirinkto priedo.",
   "offline": "Atsijungta",
-  "checkNetworkConnection": "Patikrinkite savo tinklo ryšį.",
-  "attemptingReconnection": "Bandoma jungtis iš naujo po $reconnect_duration_in_seconds$ sekundžių",
-  "submitDebugLog": "Derinimo žurnalas",
   "debugLog": "Derinimo žurnalas",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Rodyti derinimo žurnalą",
   "goToReleaseNotes": "Pereiti į laidos informaciją",
   "goToSupportPage": "Pereiti į palaikymo puslapį",
-  "menuReportIssue": "Pranešti apie klaidą",
   "about": "Apie",
-  "speech": "Šneka",
   "show": "Rodyti",
   "sessionMessenger": "Session",
-  "search": "Ieškoti",
   "noSearchResults": "\"$searchTerm$\" negrąžino jokių rezultatų",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Adresatai ir grupės",
   "contactsHeader": "Kontaktai",
   "messagesHeader": "Žinutės",
   "settingsHeader": "Nustatymai",
@@ -93,9 +78,6 @@
   "replyToMessage": "Atsakyti į žinutę",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "Pradinė žinutė nerasta",
-  "originalMessageNotAvailable": "Pradinė žinutė daugiau nebeprieinama",
-  "messageFoundButNotLoaded": "Pradinė žinutė rasta, tačiau neįkelta. Slinkite žemyn, norėdami ją įkelti.",
-  "recording": "Recording",
   "you": "Jūs",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Norėdami siųsti garso žinutes, suteikite Session Desktop prieigą prie savo mikrofono.",
@@ -112,11 +94,11 @@
   "delete": "Ištrinti",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "Ištrinti visiems",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
+  "deleteMessageQuestion": "Ištrinti šią žinutę?",
   "deleteMessages": "Ištrinti žinutes",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Nuo",
   "to": "skirta",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Pokalbyje išsiųstas paveikslas",
   "imageCaptionIconAlt": "Piktograma, rodanti, kad šis paveikslas turi paaiškinimą",
   "addACaption": "Pridėti paaiškinimą...",
-  "copy": "Kopijuoti",
   "copySessionID": "Kopijuoti Session ID",
   "copyOpenGroupURL": "Kopijuoti grupės URL",
   "save": "Įrašyti",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Įrašyta",
-  "permissions": "Leidimai",
-  "general": "Bendra",
   "tookAScreenshot": "$name$ padarė ekrano kopiją",
   "savedTheFile": "$name$ įsirašė mediją",
   "linkPreviewsTitle": "Siųsti nuorodų peržiūras",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Rašybos tikrinimas",
   "spellCheckDescription": "Įjungti rašybos tikrinimą tekstui, kuris įvedamas į žinutės rašymo langelį",
   "spellCheckDirty": "Norėdami taikyti naujus nustatymus, privalote paleisti Session iš naujo",
-  "notifications": "Pranešimai",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Kai gaunamos žinutės, rodyti pranešimus, kuriuose atskleidžiama:",
   "disableNotifications": "Išjungti pranešimus",
   "nameAndMessage": "Ir siuntėjo vardas, ir žinutė",
@@ -171,13 +156,7 @@
   "notificationFrom": "Nuo:",
   "notificationMostRecent": "Paskiausi:",
   "sendFailed": "Išsiuntimas nepavyko",
-  "expiredWarning": "Pasibaigė šios Session Desktop skirtos versijos galiojimas. Norint tęsti susirašinėjimą, prašome atsinaujinti iki naujausios versijos.",
-  "upgrade": "Naujinti",
   "mediaMessage": "Medija žinutė",
-  "timestamp_s": "dabar",
-  "timestamp_m": "1 minutė",
-  "timestamp_h": "1 valanda",
-  "timestampFormat_M": "MMM D",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "Atblokuokite šį kontaktą, kad išsiųstumėte žinutę.",
   "unblockGroupToSend": "Norėdami siųsti žinutę, atblokuokite šią grupę.",
@@ -223,7 +202,6 @@
   "startConversation": "Pradėti naują pokalbį…",
   "invalidNumberError": "Neteisingas numeris",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Yra prieinamas Session atnaujinimas",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Šalinti su jūsų paskyra susietą slaptažodį",
   "enterPassword": "Įveskite slaptažodį",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Įveskite slaptažodį",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Neteisingas URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Susieti įrenginį",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Išvaizda",
-  "permissionSettingsTitle": "Leidimai",
   "privacySettingsTitle": "Privatumas",
   "notificationsSettingsTitle": "Pranešimai",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Dalyvaukite mūsų seanso apklausoje ",
   "goToOurSurvey": "Eikite į mūsų apklausą",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
