--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Privacybeleid",
   "copyErrorAndQuit": "Foutmelding kopiëren en afsluiten",
   "unknown": "Onbekend",
   "databaseError": "Databasefout",
@@ -17,38 +16,30 @@
   "editMenuCut": "Knippen",
   "editMenuCopy": "Kopiëren",
   "editMenuPaste": "Plakken",
-  "editMenuPasteAndMatchStyle": "Plakken en stijl overnemen",
-  "editMenuDelete": "Wissen",
-  "editMenuDeleteContact": "Contact Verwijderen",
-  "editMenuDeleteGroup": "Verwijder Groep",
+  "editMenuDeleteContact": "Verwijder contactpersoon",
+  "editMenuDeleteGroup": "Verwijder groep",
   "editMenuSelectAll": "Alles selecteren",
   "windowMenuClose": "Venster sluiten",
   "windowMenuMinimize": "Minimaliseren",
   "windowMenuZoom": "Zoomen",
-  "windowMenuBringAllToFront": "Alle vensters naar voorgrond brengen",
   "viewMenuResetZoom": "Werkelijke grootte",
   "viewMenuZoomIn": "Inzoomen",
   "viewMenuZoomOut": "Uitzoomen",
   "viewMenuToggleFullScreen": "Volledigschermmodus",
   "viewMenuToggleDevTools": "Ontwikkelopties weergeven",
-  "contextMenuNoSuggestions": "Geen suggesties ",
+  "contextMenuNoSuggestions": "Geen suggesties",
   "openGroupInvitation": "Open group uitnodiging",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "groepnaam\n",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Weet je zeker dat je lid wilt worden van de $roomName$ open groep?",
-  "enterSessionIDOrONSName": "Voer Sessie ID of ONS naam in",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Aansluiten bij $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Weet u zeker dat u zich bij de $roomName$ open groep wilt aansluiten?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "enterSessionIDOrONSName": "Voer Session-ID of ONS naam in",
   "loading": "Bezig met laden…",
-  "optimizingApplication": "Toepassing aan het optimaliseren…",
-  "done": "Gereed",
-  "me": "Ik",
-  "view": "Bekijken",
+  "done": "Klaar",
   "youLeftTheGroup": "Je hebt de groep verlaten",
   "youGotKickedFromGroup": "Je bent verwijderd van de groep.",
-  "unreadMessage": "Ongelezen bericht",
   "unreadMessages": "Ongelezen berichten",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Dit logboek wordt opgeslagen op uw bureaublad.",
   "reportIssue": "Meld een probleem",
-  "gotIt": "Begrepen!",
-  "submit": "Verzenden",
   "markAllAsRead": "Markeer alles als gelezen",
   "incomingError": "Fout bij het verwerken van een inkomend bericht",
   "media": "Media",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Sorry, het geselecteerde bestand overschrijdt de maximale grootte.",
   "unableToLoadAttachment": "Kan geselecteerde bijlage niet laden.",
   "offline": "Offline",
-  "checkNetworkConnection": "Controleer je netwerkverbinding.",
-  "attemptingReconnection": "Poging tot opnieuw verbinden over $reconnect_duration_in_seconds$ seconden",
-  "submitDebugLog": "Foutopsporingslogboek",
   "debugLog": "Foutopsporingslogboek",
-  "showDebugLog": "Toon Debug Log",
+  "showDebugLog": "Toon Foutopsporing Log",
   "goToReleaseNotes": "Ga naar uitgaveopmerkingen",
   "goToSupportPage": "Ga naar ondersteuningspagina",
-  "menuReportIssue": "Meld een probleem",
   "about": "Over",
-  "speech": "Spraak",
   "show": "Tonen",
   "sessionMessenger": "Sessie",
-  "search": "Zoeken",
   "noSearchResults": "Geen resultaten voor ‘$searchTerm$’",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Contactpersonen en groepen",
   "contactsHeader": "Contacten",
   "messagesHeader": "Berichten",
   "settingsHeader": "Instellingen",
@@ -93,16 +78,13 @@
   "replyToMessage": "Bericht beantwoorden",
   "replyingToMessage": "Antwoord naar:",
   "originalMessageNotFound": "Oorspronkelijk bericht niet gevonden",
-  "originalMessageNotAvailable": "Oorspronkelijk bericht niet meer beschikbaar",
-  "messageFoundButNotLoaded": "Oorspronkelijk bericht gevonden, maar niet opgehaald. Scroll naar boven om het op te halen.",
-  "recording": "Opname",
   "you": "Jij",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Om een audiobericht te versturen moet je Session Desktop toegang tot de microfoon geven.",
   "audio": "Geluid",
   "video": "Video",
   "photo": "Foto",
-  "cannotUpdate": "Kan niet updaten",
+  "cannotUpdate": "Kan niet bijwerken",
   "cannotUpdateDetail": "Sessie Desktop kon niet worden bijgewerkt, maar er is een nieuwe versie beschikbaar. Ga naar https://getsessie. rg/ en installeer de nieuwe versie handmatig, neem dan contact op met support of maak een bug over dit probleem.",
   "ok": "Begrepen",
   "cancel": "Annuleren",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Je hebt geen toestemming om andermans berichten te verwijderen",
   "deleteJustForMe": "Verwijder alleen voor mij",
   "deleteForEveryone": "Verwijder voor iedereen",
-  "deleteMessagesQuestion": "Verwijder die berichten?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Dit bericht verwijderen?",
   "deleteMessages": "Berichten wissen",
-  "deleted": "Verwijderd",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Dit bericht is verwijderd",
   "from": "Van",
   "to": "aan",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Afbeelding verstuurd in gesprek",
   "imageCaptionIconAlt": "Pictogram dat laat zien dat deze afbeelding een bijschrift heeft",
   "addACaption": "Voeg een bijschrift toe…",
-  "copy": "Kopiëren",
   "copySessionID": "Sessie-ID kopiëren",
   "copyOpenGroupURL": "Kopiëer groep URL",
   "save": "Opslaan",
   "saveLogToDesktop": "Logboek naar bureaublad opslaan",
   "saved": "Opgeslagen",
-  "permissions": "Toestemmingen",
-  "general": "Algemeen",
   "tookAScreenshot": "$name$ heeft een schermafdruk gemaakt",
   "savedTheFile": "Media opgeslagen door $name$",
   "linkPreviewsTitle": "Verstuur Link-voorbeelden",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spellingcontrole",
   "spellCheckDescription": "Gebruik spellingscontrole voor de tekst in het berichtinvoerveld",
   "spellCheckDirty": "Je moet Session opnieuw starten, om uw nieuwe instellingen toe te passen",
-  "notifications": "Meldingen",
   "readReceiptSettingDescription": "Bekijk en deel wanneer berichten zijn gelezen (laat een lees bevestiging toe in alle sessies).",
   "readReceiptSettingTitle": "Leesbevestigingen",
   "typingIndicatorsSettingDescription": "Bekijk en deel wanneer berichten worden getypt (geldt voor alle sessies).",
   "typingIndicatorsSettingTitle": "Typindicatoren",
   "zoomFactorSettingTitle": "Zoom factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Toon wanneer een bericht ontvangen wordt meldingen die het volgende weergeven:",
   "disableNotifications": "Meldingen uitschakelen",
   "nameAndMessage": "Naam van afzender en berichtinhoud",
@@ -171,13 +156,7 @@
   "notificationFrom": "Van:",
   "notificationMostRecent": "Meest recent:",
   "sendFailed": "Verzenden mislukt",
-  "expiredWarning": "Deze versie van Session Desktop is verouderd. Opwaardeer naar de laatste versie om verder te chatten.",
-  "upgrade": "Opwaarderen",
   "mediaMessage": "Mediabericht",
-  "timestamp_s": "nu",
-  "timestamp_m": "1 minuut",
-  "timestamp_h": "1 uur",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Voeg a. u. b. een bericht toe.",
   "unblockToSend": "Deblokkeer dit contact om een bericht te verzenden.",
   "unblockGroupToSend": "Deblokkeer deze groep om een bericht te verzenden.",
@@ -223,7 +202,6 @@
   "startConversation": "Begin een nieuw gesprek…",
   "invalidNumberError": "Ongeldig nummer",
   "failedResolveOns": "Gefaald de ONS naam op te lossen",
-  "successUnlinked": "Je apparaat is met succes ontkoppeld",
   "autoUpdateSettingTitle": "Automatisch bijwerken",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Update voor Session beschikbaar",
@@ -248,7 +226,6 @@
   "blocked": "Geblokkeerd",
   "blockedSettingsTitle": "Geblokkeerde contacten",
   "unbanUser": "Gebruiker deblokkeren",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Gebruiker gedeblokkeerd",
   "userUnbanFailed": "Deblokkeren mislukt!",
   "banUser": "Gebruiker uitsluiten",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Verwijder het wachtwoord dat aan je account is gekoppeld",
   "enterPassword": "Voer a. u. b. je wachtwoord in",
   "confirmPassword": "Bevestig Wachtwoord",
-  "pasteLongPasswordToastTitle": "De inhoud van het klembord is langer dan de maximale wachtwoordlengte van $max_pwd_len$ tekens.",
   "showRecoveryPhrasePasswordRequest": "Voer a. u. b. je wachtwoord in",
   "recoveryPhraseSavePromptMain": "Jou herstel zin is de hoofdsleutel van jou Session ID - Je kunt deze gebruiken om je Session ID te herstellen als je de toegang tot jouw apparaat verliest. Sla jouw herstel zin veilig op en geef het aan niemand.",
   "invalidOpenGroupUrl": "Ongeldige URL",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Jij bent niet de maker",
   "onlyAdminCanRemoveMembersDesc": "Alleen de maker van de groep kan gebruikers verwijderen",
   "createAccount": "Create Account",
-  "signIn": "Aanmelden",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "In systeembalk houden",
+  "startInTrayDescription": "Sessie blijft uitgevoerd in de achtergrond wanneer je het venster sluit",
   "yourUniqueSessionID": "Zeg hallo tegen jou Session-ID",
   "allUsersAreRandomly...": "Jou Session-ID is het unieke adres dat mensen kunnen gebruiken om contact met u op te nemen op Session. Ontworpen zonder verbinding met je echte identiteit, is jou Session-ID volledig anoniem en privé.",
   "getStarted": "Aan de slag",
@@ -345,22 +320,20 @@
   "anonymous": "Anoniem",
   "removeResidueMembers": "Als u op OK klikt, worden deze leden ook verwijderd bij het verlaten van de groep.",
   "enterDisplayName": "Kies een weergavenaam",
-  "enterOptionalPassword": "Wachtwoord invoeren (optioneel)",
   "continueYourSession": "Ga verder met je sessie",
   "linkDevice": "Koppel een apparaat",
   "restoreUsingRecoveryPhrase": "Herstel je account",
   "or": "of",
-  "ByUsingThisService...": "Door gebruik te maken van deze service, gaat u akkoord met onze <a href=\"https://getsession.org/legal/#tos\">Gebruiksvoorwaarden</a> en <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin je sessie.",
   "welcomeToYourSession": "Welkom bij Session",
   "newSession": "Nieuwe sessie",
-  "searchFor...": "Zoeken naar gesprekken of contacten",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Uw Session-ID",
   "enterSessionIDOfRecipient": "Voer de Session ID van de ontvanger in",
   "usersCanShareTheir...": "Gebruikers kunnen hun Session-ID delen door naar hun accountinstellingen te gaan en op \"Deel Session-ID\" te tikken, of door hun QR-code te delen.",
   "message": "Bericht",
   "appearanceSettingsTitle": "Weergave",
-  "permissionSettingsTitle": "Toestemmingen",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Meldingen",
   "recoveryPhraseEmpty": "Voer uw herstelzin in",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Limiet vastgezette gesprekken",
   "pinConversationLimitToastDescription": "Je kan alleen $number$ gesprekken vastzetten",
   "showUserDetails": "Toon gebruikers informatie",
-  "latestUnreadIsAbove": "Eerste ongelezen bericht staat boven",
   "sendRecoveryPhraseTitle": "Herstelzin verzenden",
   "sendRecoveryPhraseMessage": "Je probeert uw herstel zin te versturen welke kan worden gebruikt om toegang te krijgen tot jou account. Weet je zeker dat je dit bericht wilt versturen?",
   "dialogClearAllDataDeletionFailedTitle": "Gegevens niet verwijderd",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Meldingen - $setting$",
   "surveyTitle": "Neem deel aan onze Session enquête",
   "goToOurSurvey": "Ga naar onze enquête",
-  "blockAll": "Blokkeer Alles",
+  "clearAll": "Clear All",
   "messageRequests": "Berichtverzoeken",
   "requestsSubtitle": "Lopende verzoeken",
   "requestsPlaceholder": "Geen verzoeken",
-  "messageRequestsDescription": "Berichtaanvraag inbox inschakelen",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Inkomende oproep van $name$'",
   "ringing": "Gaat over...",
   "establishingConnection": "Verbinding maken...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Geen audio-invoer gevonden",
   "callMediaPermissionsTitle": "Spraak- en video-oproepen",
   "callMissedCausePermission": "Oproep gemist van '$name$' omdat je de 'Spraak- en video-oproep' permissie nodig hebt in de privacy-instellingen.",
-  "callMissedNotApproved": "Oproep gemist van '$name$' omdat je dit gesprek nog niet hebt goedgekeurd. Stuur hem eerst een bericht.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Sta toegang toe tot het accepteren van spraak- en video-oproepen van andere gebruikers",
   "callMediaPermissionsDialogContent": "De huidige implementatie van spraak / video-oproepen zal uw IP-adres blootstellen aan de Oxen Foundation servers en de bel/gebelde gebruiker.",
-  "menuCall": "Bellen",
   "startedACall": "Je belde $name$",
   "answeredACall": "Bel met $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Database bijknippen",
+  "trimDatabaseDescription": "Vermindert uw berichtendatabase tot uw laatste 10.000 berichten.",
+  "trimDatabaseConfirmationBody": "Weet u zeker dat u uw $deleteAmount$ oudste ontvangen berichten wilt verwijderen?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
