--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Regulamin i Polityka prywatności",
   "copyErrorAndQuit": "Skopiuj błąd i zakończ",
   "unknown": "Nieznany",
   "databaseError": "Błąd bazy danych",
@@ -17,15 +16,12 @@
   "editMenuCut": "Wytnij",
   "editMenuCopy": "Kopiuj",
   "editMenuPaste": "Wklej",
-  "editMenuPasteAndMatchStyle": "Wklej i dopasuj styl",
-  "editMenuDelete": "Usuń",
   "editMenuDeleteContact": "Usuń kontakt",
   "editMenuDeleteGroup": "Usuń grupę",
   "editMenuSelectAll": "Zaznacz wszystko",
   "windowMenuClose": "Zamknij okno",
   "windowMenuMinimize": "Minimalizuj",
   "windowMenuZoom": "Powiększ",
-  "windowMenuBringAllToFront": "Przenieś wszystko na wierzch",
   "viewMenuResetZoom": "Domyślny rozmiar",
   "viewMenuZoomIn": "Przybliż",
   "viewMenuZoomOut": "Oddal",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Otwórz zaproszenie do grupy",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Dołączyć do $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Czy na pewno chcesz dołączyć do otwartej grupy $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Wprowadź Session ID lub nazwę ONS",
   "loading": "Ładowanie...",
-  "optimizingApplication": "Optymalizowanie aplikacji...",
   "done": "Gotowe",
-  "me": "Ja",
-  "view": "Zobacz",
   "youLeftTheGroup": "Opuściłeś(aś) grupę.",
   "youGotKickedFromGroup": "Usunięto cię z grupy.",
-  "unreadMessage": "Nieprzeczytana wiadomość",
   "unreadMessages": "Nieprzeczytane wiadomości",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Ten dziennik zostanie zapisany na Twoim komputerze.",
   "reportIssue": "Zgłoś problem",
-  "gotIt": "Rozumiem",
-  "submit": "Wyślij",
   "markAllAsRead": "Oznacz wszystkie jako przeczytane",
   "incomingError": "Błąd przy obsłudze przychodzącej wiadomości.",
   "media": "Multimedia",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Rozmiar tego załącznika przekracza limit wiadomości.",
   "unableToLoadAttachment": "Przepraszamy, wystąpił błąd podczas dodawania załącznika.",
   "offline": "Rozłączony",
-  "checkNetworkConnection": "Sprawdź połączenie z internetem.",
-  "attemptingReconnection": "Ponowne połączenie za $reconnect_duration_in_seconds$ sekund(-y)",
-  "submitDebugLog": "Wyślij log debugowania",
   "debugLog": "Dziennik Debugowania",
   "showDebugLog": "Pokaż logi debugowania",
   "goToReleaseNotes": "Przejdź do informacji o wersji",
   "goToSupportPage": "Przejdź do strony wsparcia",
-  "menuReportIssue": "Zgłoś problem",
   "about": "O mnie",
-  "speech": "Mów",
   "show": "Pokaż",
   "sessionMessenger": "Session",
-  "search": "Szukaj",
   "noSearchResults": "Brak wyników dla \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Kontakty i grupy",
   "contactsHeader": "Kontakty",
   "messagesHeader": "Wiadomości",
   "settingsHeader": "Ustawienia",
@@ -93,9 +78,6 @@
   "replyToMessage": "Odpowiedz na wiadomość",
   "replyingToMessage": "Odpowiadanie do:",
   "originalMessageNotFound": "Nie znaleziono oryginalnej wiadomości",
-  "originalMessageNotAvailable": "Oryginalna wiadomość nie jest już dostępna",
-  "messageFoundButNotLoaded": "Znaleziono oryginalną wiadomość, ale nie została załadowana. Przewiń w górę, aby załadować.",
-  "recording": "Nagrywanie",
   "you": "Ty",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Aby wysyłać wiadomości głosowe, zezwól Session na dostęp do mikrofonu.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Nie masz uprawnień do usunięcia wiadomości innych",
   "deleteJustForMe": "Usuń tylko dla mnie",
   "deleteForEveryone": "Usuń dla wszystkich",
-  "deleteMessagesQuestion": "Usunąć te wiadomości?",
+  "deleteMessagesQuestion": "Usunąć $count$ wiadomość?",
   "deleteMessageQuestion": "Usunąć tę wiadomość?",
   "deleteMessages": "Usuń konwersację",
-  "deleted": "Usunięte",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Ta wiadomość została usunięta",
   "from": "Od:",
   "to": "Do:",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Obraz wysłany w rozmowie",
   "imageCaptionIconAlt": "Ikona informująca o tekście, który zawiera grafika",
   "addACaption": "Dodaj podpis...",
-  "copy": "Kopiuj",
   "copySessionID": "Skopiuj Session ID",
   "copyOpenGroupURL": "Skopiuj adres URL grupy",
   "save": "Zapisz",
   "saveLogToDesktop": "Zapisz logi na pulpicie",
   "saved": "Zapisano",
-  "permissions": "Uprawnienia",
-  "general": "Ogólne",
   "tookAScreenshot": "$name$ wykonał zrzut ekranu",
   "savedTheFile": "Media zapisane przez $name$",
   "linkPreviewsTitle": "Podgląd linków",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Sprawdzanie pisowni",
   "spellCheckDescription": "Włącz sprawdzanie pisowni podczas pisania wiadomości",
   "spellCheckDirty": "Musisz zrestartować Session, aby zastosować nowe ustawienia",
-  "notifications": "Powiadomienia",
   "readReceiptSettingDescription": "Zobacz i udostępnij przeczytanie wiadomości (umożliwia zobaczenie odczytań we wszystkich sesjach).",
   "readReceiptSettingTitle": "Potwierdzenia przeczytania",
   "typingIndicatorsSettingDescription": "Zobacz i wysyłaj powiadomienie o pisaniu wiadomości (dotyczy wszystkich sesji).",
   "typingIndicatorsSettingTitle": "Wskaźniki pisania",
   "zoomFactorSettingTitle": "Współczynnik powiększenia",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Po otrzymaniu wiadomości, pokaż powiadomienie:",
   "disableNotifications": "Wycisz powiadomienia",
   "nameAndMessage": "Z nazwą nadawcy i wiadomością",
@@ -171,13 +156,7 @@
   "notificationFrom": "Od:",
   "notificationMostRecent": "Najnowszy:",
   "sendFailed": "Nie udało się wysłać",
-  "expiredWarning": "Ta wersja Session Desktop jest przestarzała. Aby nadal wysyłać wiadomości, wykonaj aktualizację.",
-  "upgrade": "Aktualizuj",
   "mediaMessage": "Wiadomość multimedialna",
-  "timestamp_s": "Teraz",
-  "timestamp_m": "1 minuta",
-  "timestamp_h": "1 godzina",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Wpisz wiadomość.",
   "unblockToSend": "Odblokuj ten kontakt, aby wysłać wiadomość.",
   "unblockGroupToSend": "Odblokuj tę grupę, aby wysłać wiadomość.",
@@ -223,7 +202,6 @@
   "startConversation": "Rozpocznij nową rozmowę...",
   "invalidNumberError": "Nieprawidłowy numer",
   "failedResolveOns": "Nie udało się ustalić nazwy ONS",
-  "successUnlinked": "Twoje urządzenie zostało rozłączone pomyślnie",
   "autoUpdateSettingTitle": "Automatyczna aktualizacja",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Dostępna aktualizacja aplikacji Session",
@@ -248,7 +226,6 @@
   "blocked": "Zablokowany",
   "blockedSettingsTitle": "Zablokowane kontakty",
   "unbanUser": "Odbanuj użytkownika",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Użytkownik odbanowany pomyślnie",
   "userUnbanFailed": "Odbanowanie nie powiodło się!",
   "banUser": "Zbanuj użytkownika",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Usuń hasło powiązane z twoim kontem",
   "enterPassword": "Podaj swoje hasło",
   "confirmPassword": "Potwierdź hasło",
-  "pasteLongPasswordToastTitle": "Zawartość schowka przekracza maksymalną długość hasła $max_pwd_len$ znaków.",
   "showRecoveryPhrasePasswordRequest": "Podaj swoje hasło",
   "recoveryPhraseSavePromptMain": "Twoja fraza odzyskiwania jest kluczem głównym do identyfikatora Session - możesz go użyć do przywrócenia identyfikatora Session, jeśli stracisz dostęp do urządzenia. Przechowuj swoją frazę odzyskiwania w bezpiecznym miejscu i nikomu jej nie udostępniaj.",
   "invalidOpenGroupUrl": "Nieprawidłowy URL",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Nie jesteś właścicielem grupy",
   "onlyAdminCanRemoveMembersDesc": "Tylko twórca grupy może usunąć użytkowników",
   "createAccount": "Create Account",
-  "signIn": "Zaloguj się",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "Utrzymuj w zasobniku systemowym",
+  "startInTrayDescription": "Session nadal działa w tle po zamknięciu okna",
   "yourUniqueSessionID": "Przywitaj się z identyfikatorem Session",
   "allUsersAreRandomly...": "Twój identyfikator Session to unikalny adres, za pomocą którego można się z Tobą kontaktować w Sesji. Bez połączenia z twoją prawdziwą tożsamością, identyfikator Session jest z założenia całkowicie anonimowy i prywatny.",
   "getStarted": "Rozpocznij",
@@ -345,22 +320,20 @@
   "anonymous": "Anonimowy",
   "removeResidueMembers": "Kliknięcie ok usunie również tych członków, którzy opuścili grupę.",
   "enterDisplayName": "Wprowadź wyświetlaną nazwe",
-  "enterOptionalPassword": "Podaj hasło (opcjonalne)",
   "continueYourSession": "Kontynuuj swoją sesję",
   "linkDevice": "Połącz urządzenie",
   "restoreUsingRecoveryPhrase": "Przywróć swoje konto",
   "or": "lub",
-  "ByUsingThisService...": "Korzystając z tej usługi, akceptujesz nasze <a href=\"https://getsession.org/legal/#tos\">Warunki korzystania z usługi</a> i <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Politykę prywatności</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Rozpocznij swój Session.",
   "welcomeToYourSession": "Witamy w twoim Session",
   "newSession": "Nowa Session",
-  "searchFor...": "Szukaj konwersacji lub kontaktów",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Wpisz identyfikator Session",
   "enterSessionIDOfRecipient": "Wprowadź identyfikator Session odbiorcy",
   "usersCanShareTheir...": "Użytkownicy mogą udostępnić swój identyfikator Session, przechodząc do ustawień konta i stukając opcję Udostępnij identyfikator Session lub udostępniając kod QR.",
   "message": "Wiadomość",
   "appearanceSettingsTitle": "Wygląd",
-  "permissionSettingsTitle": "Uprawnienia",
   "privacySettingsTitle": "Prywatność",
   "notificationsSettingsTitle": "Powiadomienia",
   "recoveryPhraseEmpty": "Wpisz swoją frazę odzyskiwania",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Limit przypiętych konwersacji",
   "pinConversationLimitToastDescription": "Możesz przypiąć tylko $number$ konwersacji",
   "showUserDetails": "Pokaż szczegóły użytkownika",
-  "latestUnreadIsAbove": "Pierwsza nieprzeczytana wiadomość jest powyżej",
   "sendRecoveryPhraseTitle": "Wysyłanie frazy odzyskiwania",
   "sendRecoveryPhraseMessage": "Próbujesz wysłać frazę odzyskiwania, która może być użyta do uzyskania dostępu do twojego konta. Czy na pewno chcesz wysłać tę wiadomość?",
   "dialogClearAllDataDeletionFailedTitle": "Dane nie zostały usunięte",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Powiadomienia - $setting$",
   "surveyTitle": "Weź udział w ankiecie Session",
   "goToOurSurvey": "Przejdź do naszej ankiety",
-  "blockAll": "Zablokuj wszystko",
+  "clearAll": "Clear All",
   "messageRequests": "Żądania wiadomości",
   "requestsSubtitle": "Oczekujące Prośby",
   "requestsPlaceholder": "Brak zapytań",
-  "messageRequestsDescription": "Włącz skrzynkę odbiorczą żądanych wiadomości",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Połączenie przychodzące od '$name$'",
   "ringing": "Dzwonienie...",
   "establishingConnection": "Nawiązywanie połączenia...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Nie znaleziono wyjścia dźwięku",
   "callMediaPermissionsTitle": "Połączenia głosowe i wideo",
   "callMissedCausePermission": "Połączenie nieodebrane od '$name$' ponieważ musisz włączyć uprawnienie 'Połączenia głosowe i wideo' w Ustawieniach Prywatności.",
-  "callMissedNotApproved": "Połączenie nieodebrane od '$name$' ponieważ nie zatwierdziłeś/aś jeszcze tej rozmowy. Najpierw wyślij do niego wiadomość.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Zezwala na dostęp do przyjmowania połączeń głosowych i wideo od innych użytkowników",
   "callMediaPermissionsDialogContent": "Obecna implementacja połączeń głosowych/wideo wyświetli Twój adres IP na serwerach Fundacji Oxen i użytkownikowi do którego dzwonisz/dzwoni.",
-  "menuCall": "Zadzwoń",
   "startedACall": "Zadzwoniłeś/aś do $name$",
   "answeredACall": "Połączenie z $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Przytnij bazę danych",
+  "trimDatabaseDescription": "Zmniejsza rozmiar bazy danych do 10 000 ostatnich wiadomości.",
+  "trimDatabaseConfirmationBody": "Czy na pewno chcesz usunąć najstarsze $deleteAmount$ otrzymane wiadomości?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
