--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Termos & Política de Privacidade",
   "copyErrorAndQuit": "Copiar erro e sair",
   "unknown": "Desconhecida",
   "databaseError": "Erro na base de dados",
@@ -17,15 +16,12 @@
   "editMenuCut": "Cortar",
   "editMenuCopy": "Copiar",
   "editMenuPaste": "Colar",
-  "editMenuPasteAndMatchStyle": "Colar texto sem formatação",
-  "editMenuDelete": "Excluir",
   "editMenuDeleteContact": "Excluir contato",
   "editMenuDeleteGroup": "Excluir grupo",
   "editMenuSelectAll": "Selecionar Todas",
   "windowMenuClose": "Fechar janela",
   "windowMenuMinimize": "Minimizar",
   "windowMenuZoom": "Zoom (Ampliar)",
-  "windowMenuBringAllToFront": "Trazer todas para a frente",
   "viewMenuResetZoom": "Tamanho normal",
   "viewMenuZoomIn": "Aumentar zoom",
   "viewMenuZoomOut": "Diminuir zoom",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Convite para grupo aberto",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Entrar em $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Tem certeza que deseja se juntar ao grupo aberto $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Insira seu ID Session ou ONS",
   "loading": "Carregando...",
-  "optimizingApplication": "Otimizando o aplicativo...",
   "done": "Concluído",
-  "me": "Eu",
-  "view": "Ver",
   "youLeftTheGroup": "Você saiu do grupo.",
   "youGotKickedFromGroup": "Você foi removida(o) do grupo.",
-  "unreadMessage": "Mensagem não lida",
   "unreadMessages": "Mensagens não lidas",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Este registro será salvo na sua área de trabalho.",
   "reportIssue": "Relatar um problema",
-  "gotIt": "Entendi",
-  "submit": "Enviar",
   "markAllAsRead": "Marcar todas como lidas",
   "incomingError": "Erro ao receber mensagem",
   "media": "Mídia",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "O anexo excede os limites de tamanho para o tipo de mensagem sendo enviada.",
   "unableToLoadAttachment": "Desculpe, ocorreu um erro ao anexar o documento.",
   "offline": "Off-line",
-  "checkNetworkConnection": "Verifique a sua conexão de rede.",
-  "attemptingReconnection": "Tentando reconectar em $reconnect_duration_in_seconds$ segundos",
-  "submitDebugLog": "Registro de depuração ",
   "debugLog": "Registro de depuração ",
   "showDebugLog": "Mostrar registro de depuração",
   "goToReleaseNotes": "Ir para Notas de Lançamento",
   "goToSupportPage": "Ir para Página de Suporte",
-  "menuReportIssue": "Relatar um problema",
   "about": "Sobre",
-  "speech": "Fala",
   "show": "Exibir",
   "sessionMessenger": "Session",
-  "search": "Procurar",
   "noSearchResults": "Nenhum resultado encontrado para \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Contatos e Grupos",
   "contactsHeader": "Contatos",
   "messagesHeader": "Mensagens",
   "settingsHeader": "Configurações",
@@ -93,9 +78,6 @@
   "replyToMessage": "Responder à mensagem",
   "replyingToMessage": "Respondendo Para:",
   "originalMessageNotFound": "Mensagem original não encontrada",
-  "originalMessageNotAvailable": "Mensagem original indisponível",
-  "messageFoundButNotLoaded": "Mensagem original encontrada. Role para cima para carregar.",
-  "recording": "Gravando",
   "you": "Você",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Para enviar mensagens de áudio permita ao Session acessar o microfone.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Você não tem permissão para excluír as mensagens de outros",
   "deleteJustForMe": "Excluir apenas para mim",
   "deleteForEveryone": "Excluir para todos",
-  "deleteMessagesQuestion": "Excluir mensagens?",
+  "deleteMessagesQuestion": "Excluir $count$ mensagens?",
   "deleteMessageQuestion": "Excluir esta mensagem?",
   "deleteMessages": "Apagar mensagens",
-  "deleted": "Excluído",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Esta mensagem foi excluída",
   "from": "De:",
   "to": "Para:",
@@ -136,30 +118,33 @@
   "lightboxImageAlt": "Imagem enviada na conversa",
   "imageCaptionIconAlt": "Ícone mostrando que esta imagem possui uma legenda",
   "addACaption": "Adicionar legenda...",
-  "copy": "Copiar",
   "copySessionID": "Copiar ID Session",
   "copyOpenGroupURL": "Copiar URL do grupo",
   "save": "Salvar",
-  "saveLogToDesktop": "Salvar log para o desktop",
+  "saveLogToDesktop": "Salvar registro na área de trabalho",
   "saved": "Salvo",
-  "permissions": "Permissões",
-  "general": "Geral",
   "tookAScreenshot": "$name$ fez uma captura de tela",
   "savedTheFile": "Mídia salva por $name$",
   "linkPreviewsTitle": "Enviar Pré-Visualizações De Links",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "Você não terá proteção completa de metadados ao receber pré-visualização de links.",
+  "linkPreviewsConfirmMessage": "Você não terá proteção completa de metadados ao enviar pré-visualizações de links.",
   "mediaPermissionsTitle": "Microfone",
   "mediaPermissionsDescription": "Permita acesso ao microfone",
   "spellCheckTitle": "Corretor ortográfico",
   "spellCheckDescription": "Ativar a verificação ortográfica do texto digitado na caixa de edição de mensagens",
   "spellCheckDirty": "Você precisa reiniciar o Session para aplicar as novas configurações",
-  "notifications": "Notificações",
   "readReceiptSettingDescription": "Ver e compartilhar quando mensagens foram lidas (permite recibos de leitura em todas as sessões).",
   "readReceiptSettingTitle": "Confirmações De Leitura",
   "typingIndicatorsSettingDescription": "Ver e compartilhar quando mensagens estão sendo digitadas (aplica-se a todas as sessões).",
   "typingIndicatorsSettingTitle": "Indicadores De Digitação",
   "zoomFactorSettingTitle": "Fator de zoom",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Quando mensagens chegarem, exibir notificações que mostrem:",
   "disableNotifications": "Silenciar notificações",
   "nameAndMessage": "Nome da pessoa remetente e mensagem",
@@ -171,13 +156,7 @@
   "notificationFrom": "De:",
   "notificationMostRecent": "Última:",
   "sendFailed": "Envio Falhou",
-  "expiredWarning": "Esta versão do Session Desktop expirou. Por favor, atualize-o para a versão mais recente para continuar enviando mensagens.",
-  "upgrade": "Atualizar",
   "mediaMessage": "MMS",
-  "timestamp_s": "Agora",
-  "timestamp_m": "1 minuto",
-  "timestamp_h": "1 hora",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Por favor, insira o corpo da mensagem.",
   "unblockToSend": "Desbloquear este contato para enviar uma mensagem.",
   "unblockGroupToSend": "Desbloquear este grupo para enviar uma mensagem.",
@@ -223,7 +202,6 @@
   "startConversation": "Iniciar uma conversa…",
   "invalidNumberError": "Número inválido",
   "failedResolveOns": "Falha ao resolver o nome ONS",
-  "successUnlinked": "O seu dispositivo foi dessincronizado com sucesso",
   "autoUpdateSettingTitle": "Atualização Automática",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Atualização do Session disponível",
@@ -248,7 +226,6 @@
   "blocked": "Bloqueado",
   "blockedSettingsTitle": "Contatos bloqueados",
   "unbanUser": "Desbanir Usuário",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Usuário desbanido com sucesso",
   "userUnbanFailed": "Desbanimento falhou!",
   "banUser": "Banir usuário",
@@ -260,7 +237,7 @@
   "leaveGroupConfirmation": "Tem certeza de que deseja sair deste grupo?",
   "leaveGroupConfirmationAdmin": "Como és o administrador deste grupo, se deixares ele o mesmo será removido para todos os membros atuais. Tens certeza de que queres deixar este grupo?",
   "cannotRemoveCreatorFromGroup": "Não é possível remover esse usuário",
-  "cannotRemoveCreatorFromGroupDesc": "Tu não podes remover este usuário visto que ele é o criador do grupo.",
+  "cannotRemoveCreatorFromGroupDesc": "Você não pode remover esse usuário já que ele é o criador do grupo.",
   "noContactsForGroup": "Você ainda não possui contatos",
   "failedToAddAsModerator": "Falha ao adicionar usuário como moderador",
   "failedToRemoveFromModerator": "Falha ao remover usuário da lista de moderadores",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remova a senha associada à sua conta",
   "enterPassword": "Por favor, digite sua senha",
   "confirmPassword": "Confirmar senha",
-  "pasteLongPasswordToastTitle": "O conteúdo da área de transferência excede o tamanho máximo de senha de $max_pwd_len$ caracteres.",
   "showRecoveryPhrasePasswordRequest": "Por favor, digite sua senha",
   "recoveryPhraseSavePromptMain": "Sua frase de recuperação é a chave mestra do seu ID Session - você pode usá-la para restaurar seu ID Session se perder o acesso ao seu dispositivo. Armazene sua frase de recuperação em um local seguro e não a entregue a ninguém.",
   "invalidOpenGroupUrl": "URL inválido",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Você não é o criador",
   "onlyAdminCanRemoveMembersDesc": "Somente o criador do grupo pode remover usuários",
   "createAccount": "Create Account",
-  "signIn": "Iniciar sessão",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "Manter na Bandeja do Sistema",
+  "startInTrayDescription": "O Session continua sendo executado em segundo plano quando você fecha a janela",
   "yourUniqueSessionID": "Diga olá ao seu ID Session",
   "allUsersAreRandomly...": "Seu ID Session é o endereço exclusivo que as pessoas podem usar para entrar em contato com você no Session. Sem conexão com sua identidade real, seu ID Session é totalmente anônimo e privado por definição.",
   "getStarted": "Começar",
@@ -345,22 +320,20 @@
   "anonymous": "Anônimo",
   "removeResidueMembers": "Clicar em ok também irá remover os membros assim que eles saírem do grupo.",
   "enterDisplayName": "Digite um nome de exibição",
-  "enterOptionalPassword": "Insira a senha (opcional)",
   "continueYourSession": "Continuar com seu Session",
   "linkDevice": "Sincronize dispositivo",
   "restoreUsingRecoveryPhrase": "Restaurar sua conta",
   "or": "ou",
-  "ByUsingThisService...": "Ao utilizar este serviço, tu concordas com os nossos <a href=\"https://getsession.org/legal/#tos\">Termos de Serviço</a> e <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Políticas de Privacidade</a>",
+  "ByUsingThisService...": "Ao usar este serviço, você concorda com nossos <a href=\"https://getsession.org/terms-of-service\">Termos de Serviço</a> e <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Política de Privacidade</a>",
   "beginYourSession": "Inicie seu Session.",
   "welcomeToYourSession": "Bem-vindo(a) ao seu Session",
   "newSession": "Nova Sessão",
-  "searchFor...": "Procurar por conversas ou contatos",
+  "searchFor...": "Procurar por mensagens ou conversas",
   "enterSessionID": "Digite o ID Session",
   "enterSessionIDOfRecipient": "Digite o ID Session do destinatário",
   "usersCanShareTheir...": "Os usuários podem compartilhar seus IDs Session acessando as configurações da conta e tocando em Compartilhar ID Session, ou compartilhando o código QR.",
   "message": "Mensagem",
   "appearanceSettingsTitle": "Aparência",
-  "permissionSettingsTitle": "Permissões",
   "privacySettingsTitle": "Privacidade",
   "notificationsSettingsTitle": "Notificações",
   "recoveryPhraseEmpty": "Digite sua frase de recuperação",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Limite de conversas fixadas",
   "pinConversationLimitToastDescription": "Você só pode fixar $number$ conversas",
   "showUserDetails": "Mostrar Detalhes do Usuário",
-  "latestUnreadIsAbove": "A primeira mensagem não lida está acima",
   "sendRecoveryPhraseTitle": "Enviando frase de recuperação",
   "sendRecoveryPhraseMessage": "Tu estás tentando enviar a tua frase de recuperação qual pode ser utilizada para acessar a tua conta. Tu tens certeza de que queres enviar esta mensagem?",
   "dialogClearAllDataDeletionFailedTitle": "Dados não excluídos",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notificações - $setting$",
   "surveyTitle": "Responda à pesquisa do Session",
   "goToOurSurvey": "Acessar nossa pesquisa",
-  "blockAll": "Bloquear Todos",
+  "clearAll": "Apagar Tudo",
   "messageRequests": "Pedidos de Mensagem",
   "requestsSubtitle": "Solicitações Pendentes",
   "requestsPlaceholder": "Nenhuma solicitação",
-  "messageRequestsDescription": "Ativar Caixa de Entrada de Requisição de Mensagem",
+  "hideRequestBannerDescription": "Ocultar o banner de notificação de mensagem até você receber uma nova solicitação de mensagem.",
   "incomingCallFrom": "Chamada recebida de '$name$'",
   "ringing": "Chamando...",
   "establishingConnection": "Conectando...",
@@ -458,10 +430,26 @@
   "callMissedNotApproved": "Chamada perdida de '$name$' porque você ainda não aprovou esta conversa. Envie uma mensagem primeiro.",
   "callMediaPermissionsDescription": "Permite o acesso a chamadas de voz e vídeo de outros usuários",
   "callMediaPermissionsDialogContent": "A implementação atual das chamadas de voz/vídeo irá expor seu endereço IP aos servidores da Fundação Oxen e ao usuário chamado.",
-  "menuCall": "Ligar",
   "startedACall": "Você ligou para $name$",
   "answeredACall": "Chamar com $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Cortar banco de dados",
+  "trimDatabaseDescription": "Reduz o tamanho do banco de dados de mensagens para as últimas 10.000 mensagens.",
+  "trimDatabaseConfirmationBody": "Tem certeza que deseja excluir suas $deleteAmount$ mensagens mais antigas recebidas?",
+  "pleaseWaitOpenAndOptimizeDb": "Aguarde enquanto seu banco de dados é aberto e otimizado...",
+  "messageRequestPending": "Sua solicitação de mensagem está pendente",
+  "messageRequestAccepted": "Sua solicitação de mensagem foi aceita",
+  "messageRequestAcceptedOurs": "Você aceitou o pedido de mensagem de $name$",
+  "messageRequestAcceptedOursNoName": "Você aceitou o pedido de mensagem de",
+  "declineRequestMessage": "Tem certeza que deseja recusar este pedido de mensagem?",
+  "respondingToRequestWarning": "Enviar uma mensagem para este usuário automaticamente aceitará seu pedido de mensagem e revelará o seu ID de sessão.",
+  "hideRequestBanner": "Ocultar Banner de requisição de mensagem",
+  "openMessageRequestInbox": "Visualizar solicitações de mensagem",
+  "noMessageRequestsPending": "Nenhuma solicitação de mensagem pendente",
+  "noMediaUntilApproved": "Você não pode enviar anexos até que a conversa seja aprovada",
+  "mustBeApproved": "Esta conversa deve ser aceita para usar esta funcionalidade",
+  "youHaveANewFriendRequest": "Você tem uma nova solicitação de amizade",
+  "clearAllConfirmationTitle": "Limpar todas as solicitações de mensagem",
+  "clearAllConfirmationBody": "Tem certeza de que deseja excluir todas as solicitações de mensagem?",
+  "hideBanner": "Dispensar",
+  "openMessageRequestInboxDescription": "Ver sua caixa de entrada de solicitação de mensagem"
 }
