--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Termeni & Politica de confidențialitate",
   "copyErrorAndQuit": "Copiază eroare și închide aplicația",
   "unknown": "Necunoscut",
   "databaseError": "Eroare de bază de date",
@@ -17,15 +16,12 @@
   "editMenuCut": "Decupează",
   "editMenuCopy": "Copiază",
   "editMenuPaste": "Lipire",
-  "editMenuPasteAndMatchStyle": "Lipește și potrivește stilului existent",
-  "editMenuDelete": "Șterge",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Șterge contact",
+  "editMenuDeleteGroup": "Șterge grup",
   "editMenuSelectAll": "Selectează tot",
   "windowMenuClose": "Închide fereastra",
   "windowMenuMinimize": "Minimizează",
   "windowMenuZoom": "Mărește",
-  "windowMenuBringAllToFront": "Adu toate în față",
   "viewMenuResetZoom": "Mărime actuală",
   "viewMenuZoomIn": "Mărește",
   "viewMenuZoomOut": "Micșorează",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Deschide invitația de grup",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Alăturaţi-vă $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Sunteți sigur că doriți să vă alăturați grupului deschis $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Introdu ID sesiune sau nume ONS",
   "loading": "Se încarcă...",
-  "optimizingApplication": "Se optimizează aplicația...",
   "done": "Gata",
-  "me": "Eu",
-  "view": "Vizualizare",
   "youLeftTheGroup": "Ai părăsit grupul",
   "youGotKickedFromGroup": "Ai fost scos din grup.",
-  "unreadMessage": "Mesaj necitit",
   "unreadMessages": "Mesaje necitite",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Acest log va fi salvat pe desktop.",
   "reportIssue": "Raportează o problemă",
-  "gotIt": "Am înţeles!",
-  "submit": "Trimite",
   "markAllAsRead": "Marchează toate ca citite",
   "incomingError": "Eroare la procesarea mesajului primit",
   "media": "Media",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Ne pare rău, fişierul selectat depăşeşte restricţia de mărime a mesajului.",
   "unableToLoadAttachment": "Nu s-a putut încărca atașamentul selectat.",
   "offline": "Deconectat",
-  "checkNetworkConnection": "Verifică-ți conexiunea la rețea.",
-  "attemptingReconnection": "Se încearcă reconectarea în $reconnect_duration_in_seconds$ secunde",
-  "submitDebugLog": "Jurnal depanare",
   "debugLog": "Jurnalul de depanare",
   "showDebugLog": "Arată jurnalul de depanare",
   "goToReleaseNotes": "Mergi la Notele de Lansare",
   "goToSupportPage": "Mergi la Pagina de Suport",
-  "menuReportIssue": "Raportează o problemă",
   "about": "Despre",
-  "speech": "Vorbire",
   "show": "Afișează",
   "sessionMessenger": "Sesiune",
-  "search": "Căutați",
   "noSearchResults": "Nici un rezultat pentru \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Contate și Grupuri",
   "contactsHeader": "Contacte",
   "messagesHeader": "Mesaje",
   "settingsHeader": "Setări",
@@ -93,9 +78,6 @@
   "replyToMessage": "Răspunde la mesaj",
   "replyingToMessage": "Răspunde la:",
   "originalMessageNotFound": "Mesajul original nu a fost găsit",
-  "originalMessageNotAvailable": "Mesajul original nu mai este disponibil",
-  "messageFoundButNotLoaded": "Mesaj original găsit, dar neîncărcat. Scroll-ează în sus pentru a-l încărca.",
-  "recording": "Se înregistrează",
   "you": "Tu",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Pentru a trimite mesaje audio, permite aplicației Session Desktop accesul la microfonul tău.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Nu aveţi permisiunea de a şterge mesajele altora",
   "deleteJustForMe": "Șterge doar pentru mine",
   "deleteForEveryone": "Șterge pentru toată lumea",
-  "deleteMessagesQuestion": "Ștergi acele mesaje?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Ștergi acest mesaj?",
   "deleteMessages": "Șterge mesajele",
-  "deleted": "Șters",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Acest mesaj a fost șters",
   "from": "De la",
   "to": "către",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Imagine trimisă în conversație",
   "imageCaptionIconAlt": "Pictograma care arată că această imagine are o legendă",
   "addACaption": "Adăugați un titlu...",
-  "copy": "Copiază",
   "copySessionID": "Copiază ID-ul Session",
   "copyOpenGroupURL": "Copiază URL-ul grupului",
   "save": "Salvează",
   "saveLogToDesktop": "Salvează jurnalul pe desktop",
   "saved": "Salvat",
-  "permissions": "Permisiuni",
-  "general": "General",
   "tookAScreenshot": "$name$ a efectuat o captură de ecran",
   "savedTheFile": "Media salvată de $name$",
   "linkPreviewsTitle": "Trimite Previzualizări Link",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Verificare ortografie",
   "spellCheckDescription": "Activează verificarea ortografică a textului introdus în caseta de compoziție a mesajului",
   "spellCheckDirty": "Trebuie să reporniți Session pentru a aplica noile setări",
-  "notifications": "Notificări",
   "readReceiptSettingDescription": "Vezi și distribuie când mesajele au fost citite (permite citirea bonurilor în toate sesiunile).",
   "readReceiptSettingTitle": "Confirmări de citire",
   "typingIndicatorsSettingDescription": "Vezi și distribuie când mesajele sunt tastate (se aplică la toate sesiunile).",
   "typingIndicatorsSettingTitle": "Indicatori tastare",
   "zoomFactorSettingTitle": "Factor de mărire",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Când sosesc mesajele, afişează notificările care arată:",
   "disableNotifications": "Dezactivează notificările",
   "nameAndMessage": "Şi numele expeditorului şi mesajul",
@@ -171,13 +156,7 @@
   "notificationFrom": "De la:",
   "notificationMostRecent": "Cele mai recente:",
   "sendFailed": "Trimitere eșuată",
-  "expiredWarning": "Această versiune de Session Desktop a expirat. Te rog actualizează aplicația la ultima versiune pentru a putea trimite mesaje în continuare.",
-  "upgrade": "Actualizează",
   "mediaMessage": "Mesaj media",
-  "timestamp_s": "acum",
-  "timestamp_m": "1 minut",
-  "timestamp_h": "o oră",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Te rugăm să introduci conținutul mesajului.",
   "unblockToSend": "Deblochează acest contact pentru a putea trimite mesaje.",
   "unblockGroupToSend": "Deblochează acest grup pentru a putea trimite un mesaj.",
@@ -223,7 +202,6 @@
   "startConversation": "Pornește o conversație nouă...",
   "invalidNumberError": "Număr invalid",
   "failedResolveOns": "Eroare la rezolvarea numelui ONS",
-  "successUnlinked": "Dispozitivul dumneavoastră a fost deconectat cu succes",
   "autoUpdateSettingTitle": "Actualizare automată",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Este disponibilă o actualizare de Session ",
@@ -248,7 +226,6 @@
   "blocked": "Blocat",
   "blockedSettingsTitle": "Contacte blocate",
   "unbanUser": "Scoate Interdicția Utilizatorului",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Utilizator debanat cu succes",
   "userUnbanFailed": "Ridicarea accesului anulată!",
   "banUser": "Banează utilizator",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Elimină parola asociată contului tău",
   "enterPassword": "Vă rugăm să introduceţi parola",
   "confirmPassword": "Confirmă parola",
-  "pasteLongPasswordToastTitle": "Conținutul clipboard-ului depășește lungimea maximă a parolei de $max_pwd_len$ caractere.",
   "showRecoveryPhrasePasswordRequest": "Vă rugăm să introduceţi parola",
   "recoveryPhraseSavePromptMain": "Fraza ta de recuperare este cheia principală a ID-ului Session— o poți folosi pentru a restabili ID-ul Session dacă pierzi accesul la dispozitiv. Păstrați fraza de recuperare într-un loc sigur, și nu-l dați nimănui.",
   "invalidOpenGroupUrl": "URL invalid",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Nu ești creatorul grupului",
   "onlyAdminCanRemoveMembersDesc": "Doar creatorul grupului poate elimina utilizatori",
   "createAccount": "Create Account",
-  "signIn": "Conectare",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "Păstrează activ in bară",
+  "startInTrayDescription": "Session va continua să ruleze in fundal după închiderea ferestrei",
   "yourUniqueSessionID": "Salută-ți ID-ul tău de sesiune",
   "allUsersAreRandomly...": "ID-ul de sesiune este adresa ta unică pe care persoanele o pot folosi pentru a te contacta în sesiune. Fără nicio conexiune la identitatea ta reală, ID-ul sesiunii tale este complet anonim și privat prin design.",
   "getStarted": "Începe",
@@ -343,24 +318,22 @@
   "enterRecoveryPhrase": "Introdu fraza de recuperare",
   "displayName": "Nume afişat",
   "anonymous": "Anonim",
-  "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
+  "removeResidueMembers": "Apăsând ok va înlătura acei membrii deoarece au părăsit grupul.",
   "enterDisplayName": "Alege un nume de afișat",
-  "enterOptionalPassword": "Introdu parola (opțional)",
   "continueYourSession": "Continuă sesiunea",
   "linkDevice": "Conectează-te cu un alt dispozitiv",
   "restoreUsingRecoveryPhrase": "Recuperează-ți contul",
   "or": "sau",
-  "ByUsingThisService...": "Utilizând acest serviciu, ești de acord cu <a href=\"https://getsession.org/legal/#tos\">Termenii și condițiile</a> și cu <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Politica de confidențialitate</a>",
+  "ByUsingThisService...": "Utilizând acest serviciu, ești de acord cu <a href=\"https://getsession.org/terms-of-service\">Termenii și condițiile</a> și cu <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Politica de confidențialitate</a>",
   "beginYourSession": "Începe sesiunea.",
   "welcomeToYourSession": "Bine ai venit pe Session",
   "newSession": "Sesiune nouă",
-  "searchFor...": "Căutați conversații sau contacte",
+  "searchFor...": "Caută mesaje sau conversații",
   "enterSessionID": "Introduceți ID-ul Session",
   "enterSessionIDOfRecipient": "Introduceți ID-ul Session sau numele ONS al destinatarului",
   "usersCanShareTheir...": "Utilizatorii pot partaja ID-ul Session intrând în setările lor de cont și apăsând \"Partajează ID-ul Session\" sau partajând codul lor QR.",
   "message": "Mesaj",
   "appearanceSettingsTitle": "Aspect",
-  "permissionSettingsTitle": "Permisiuni",
   "privacySettingsTitle": "Confidenţialitate",
   "notificationsSettingsTitle": "Notificări",
   "recoveryPhraseEmpty": "Introduceți fraza de recuperare",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Arată detaliile utilizatorului",
-  "latestUnreadIsAbove": "Primul mesaj necitit este mai sus",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Datele nu au fost șterse",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notificări - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Spre chestionar",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Solicitări mesaj",
   "requestsSubtitle": "Cereri în așteptare",
   "requestsPlaceholder": "Nicio cerere",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Primire apel de la '$name$'",
   "ringing": "Sună...",
   "establishingConnection": "Stabilire conexiune...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Nu s-a detectat nicio ieșire audio",
   "callMediaPermissionsTitle": "Apeluri audio şi video",
   "callMissedCausePermission": "Apel pierdut de la „$name$” deoarece trebuie să oferi permisiunea pentru „Apeluri vocale și video” din setările de confidențialitate.",
-  "callMissedNotApproved": "Apel pierdut de la '$name$' deoarece nu ai aprobat încă această conversație. Trimite-i un mesaj mai întâi.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Permite accesul la apeluri vocale și video de la alți utilizatori",
   "callMediaPermissionsDialogContent": "Implementarea curentă a apelurilor vocale/video va expune adresa ta IP la serverele Fundației Oxen, precum și numele utilizatorului apelant si cel apelat.",
-  "menuCall": "Apelează",
   "startedACall": "Ai sunat pe $name$",
   "answeredACall": "Apel cu $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
