--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Podmienky & Zásady ochrany osobných údajov",
   "copyErrorAndQuit": "Kopírovať a ukončiť",
   "unknown": "Neznáme",
   "databaseError": "Chyba databázy",
@@ -17,15 +16,12 @@
   "editMenuCut": "Vystrihnúť",
   "editMenuCopy": "Kopírovať",
   "editMenuPaste": "Vložiť",
-  "editMenuPasteAndMatchStyle": "Vložiť a prispôsobiť štýl",
-  "editMenuDelete": "Vymazať",
   "editMenuDeleteContact": "Vymazať kontakt",
   "editMenuDeleteGroup": "Vymazať skupinu",
   "editMenuSelectAll": "Vybrať všetko",
   "windowMenuClose": "Zatvoriť okno",
   "windowMenuMinimize": "Minimalizovať",
   "windowMenuZoom": "Lupa",
-  "windowMenuBringAllToFront": "Priviesť všetko do popredia",
   "viewMenuResetZoom": "Skutočná veľkosť",
   "viewMenuZoomIn": "Priblížiť",
   "viewMenuZoomOut": "Oddialiť",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Pozvánka do otvorenej skupiny",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Pripojiť sa do $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Ste si istí, že sa chcete pripojiť do otvorenej skupiny $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Zadajte Session ID alebo ONS meno",
   "loading": "Nahrávanie...",
-  "optimizingApplication": "Optimalizovanie aplikácie...",
   "done": "Hotovo",
-  "me": "Ja",
-  "view": "Zobraziť",
   "youLeftTheGroup": "Opustili ste skupinu",
   "youGotKickedFromGroup": "Boli ste odstránení zo skupiny.",
-  "unreadMessage": "Neprečítaná Správa",
   "unreadMessages": "Neprečítané Správy",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Tento záznam bude uložený na tvoju plochu.",
   "reportIssue": "Nahlásiť problém",
-  "gotIt": "Rozumiem!",
-  "submit": "Odoslať",
   "markAllAsRead": "Označiť Všetko ako Prečítané",
   "incomingError": "Chyba pri spracovaní prichádzajúcej správy",
   "media": "Médiá",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Ospravedlňujeme sa, vybraný súbor prekročil limit veľkosti správy.",
   "unableToLoadAttachment": "Zvolenú prílohu sa nepodarilo načítať.",
   "offline": "Offline",
-  "checkNetworkConnection": "Skontrolujte svoje sieťové pripojenie.",
-  "attemptingReconnection": "Pokus o znovupripojenie za $reconnect_duration_in_seconds$ sekúnd",
-  "submitDebugLog": "Ladiaci log",
   "debugLog": "Ladiaci Log",
   "showDebugLog": "Zobraziť debug log",
   "goToReleaseNotes": "Navštíviť Poznámky k Vydaniu",
   "goToSupportPage": "Navštíviť Stránku Podpory",
-  "menuReportIssue": "Nahlásiť Problém",
   "about": "Informácie",
-  "speech": "Reč",
   "show": "Zobraziť",
   "sessionMessenger": "Session",
-  "search": "Hľadať",
   "noSearchResults": "Žiadne výsledky pre \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Kontakty a skupiny",
   "contactsHeader": "Kontakty",
   "messagesHeader": "Správy",
   "settingsHeader": "Nastavenia",
@@ -93,9 +78,6 @@
   "replyToMessage": "Odpovedať na správu",
   "replyingToMessage": "Odpovedať na:",
   "originalMessageNotFound": "Pôvodná správa sa nenašla",
-  "originalMessageNotAvailable": "Pôvodná správa už nie je k dispozícii",
-  "messageFoundButNotLoaded": "Pôvodná správa sa našla, ale ešte nebola načítaná. Pre načítanie sa posuňte vyššie.",
-  "recording": "Nahrávanie",
   "you": "Vy",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Pre posielanie zvukových správ, povoľte aplikácii Session Desktop prístup k mikrofónu.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Nemáte právo vymazať správy ostatných",
   "deleteJustForMe": "Vymazať iba pre mňa",
   "deleteForEveryone": "Vymazať pre všetkých",
-  "deleteMessagesQuestion": "Vymazať tieto správy?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Vymazať túto správu?",
   "deleteMessages": "Zmazať správy",
-  "deleted": "Vymazané",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Táto správa bola vymazaná",
   "from": "Od",
   "to": "pre",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Obrázok z konverzácie",
   "imageCaptionIconAlt": "Ikona indukujúca, že tento obrázok má popis",
   "addACaption": "Pridaj popis...",
-  "copy": "Kopírovať",
   "copySessionID": "Kopírovať Session ID",
   "copyOpenGroupURL": "Kopírovať URL skupiny",
   "save": "Uložiť",
   "saveLogToDesktop": "Uložiť log na pracovnú plochu",
   "saved": "Uložené",
-  "permissions": "Povolenia",
-  "general": "Všeobecné",
   "tookAScreenshot": "$name$ odfotil obrazovku",
   "savedTheFile": "$name$ uložil médiá",
   "linkPreviewsTitle": "Posielať náhľady odkazov",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Kontrola pravopisu",
   "spellCheckDescription": "Povoliť kontrolu pravopisu textu zadaného do textového poľa",
   "spellCheckDirty": "Musíťe reštartovať Session pre použitie vašich nových nastavení",
-  "notifications": "Upozornenia",
   "readReceiptSettingDescription": "Zobrazte a zdielajte kedy boli prečítané správy (zapne povrdenie o prečítaní správ vo všetkých reláciach).",
   "readReceiptSettingTitle": "Potvrdenia o Prečítaní",
   "typingIndicatorsSettingDescription": "Vidieť a zdieľať, keď sa píšu správy (aplikované na všetky relácie).",
   "typingIndicatorsSettingTitle": "Indikátory Písania",
   "zoomFactorSettingTitle": "Faktor Zväčšenia",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "V oznámeniach o nových správach ukázať:",
   "disableNotifications": "Vypnúť upozornenia",
   "nameAndMessage": "Meno a správu",
@@ -171,13 +156,7 @@
   "notificationFrom": "Od:",
   "notificationMostRecent": "Najnovšie:",
   "sendFailed": "Odoslanie zlyhalo",
-  "expiredWarning": "Táto verzia aplikácie Session Desktop je zastaralá. Pre pokračovanie ju prosím aktualizujte na najnovšiu verziu.",
-  "upgrade": "Aktualizovať",
   "mediaMessage": "Multimediálna správa",
-  "timestamp_s": "teraz",
-  "timestamp_m": "1 minútou",
-  "timestamp_h": "1 hodina",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Prosím, zadajte text správy.",
   "unblockToSend": "Pre odoslanie správy kontakt odblokujte.",
   "unblockGroupToSend": "Odblokujte skupinu pre poslanie správy.",
@@ -223,7 +202,6 @@
   "startConversation": "Začať nový rozhovor…",
   "invalidNumberError": "Neplatné číslo",
   "failedResolveOns": "Nepodarilo sa vyriešiť ONS meno",
-  "successUnlinked": "Vaše zariadenie bolo úspešne odpojené",
   "autoUpdateSettingTitle": "Auto Akualizácie",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Dostupná aktualizácia pre Session",
@@ -248,7 +226,6 @@
   "blocked": "Blokovaný",
   "blockedSettingsTitle": "Blokované kontakty",
   "unbanUser": "Odvolať Ban",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Ban bol úspešne odvolaný",
   "userUnbanFailed": "Odvolanie banu zlyhalo!",
   "banUser": "Zabanovať Užívateľa",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Odstrániť heslo spojené z Vašim účtom",
   "enterPassword": "Prosím zadajte Vaše heslo",
   "confirmPassword": "Potvrdiť Heslo",
-  "pasteLongPasswordToastTitle": "Obsah schránky presahuje maximálnu dĺžku hesla ktorá je $max_pwd_len$ znakov.",
   "showRecoveryPhrasePasswordRequest": "Prosím zadajte Vaše heslo",
   "recoveryPhraseSavePromptMain": "Vaša obnovovacia fráza je hlavný kľúč k Vášmu Session ID - môžete ho použíť na obnovenie Vášho Session ID ak stratíte prístup k vášmu zariadeniu. Uložte vašu obnovovaciu frázu na bezpečnom mieste, a nedávajte ju nikomu.",
   "invalidOpenGroupUrl": "Nesprávna URL",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Nie ste tvorca",
   "onlyAdminCanRemoveMembersDesc": "Iba tvorca skupiny môže odstrániť používateľov",
   "createAccount": "Create Account",
-  "signIn": "Prihlásiť Sa",
   "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayDescription": "Session pobeží na pozadí aj po tom, čo zavrieš okno",
   "yourUniqueSessionID": "Povedz ahoj tvojmu Session ID",
   "allUsersAreRandomly...": "Tvoj Session ID je unikátna adresa ľudia môžu používať aby Vás kontaktovali cez Session. Zo žiadným spojením ku vašej reálnej identite, Váš Session ID je úplne anonymný a súkromný.",
   "getStarted": "Začať",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymný",
   "removeResidueMembers": "Kliknutím ok tiež vymažete týchto používateľov keďže odišli zo skupiny.",
   "enterDisplayName": "Zadajte používateľské meno",
-  "enterOptionalPassword": "Zadajte heslo (nepovinné)",
   "continueYourSession": "Pokračujte Váš Session",
   "linkDevice": "Spojiť Zariadenie",
   "restoreUsingRecoveryPhrase": "Obnoviť váš účet",
   "or": "alebo",
-  "ByUsingThisService...": "Používaním tejto služby súhlasíte z našimi <a href=\"https://getsession.org/legal/#tos\">Podmienkami Používania</a> a <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Zásadami Ochrany Súkromia</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Začať Váš Session.",
   "welcomeToYourSession": "Vitajte vo vašej Session",
   "newSession": "Nový Session",
-  "searchFor...": "Vyhľadajte konverzáciu alebo kontakty",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Zadajte Session ID",
   "enterSessionIDOfRecipient": "Zadajte Session ID alebo ONS meno adresáta",
   "usersCanShareTheir...": "Používatelia môžu zdieľať ich Session ID tak, že pôjdu do nastavení konta a ťuknutím \"Zdieľat Session ID\", alebo zdielaním ich QR kódu.",
   "message": "Správa",
   "appearanceSettingsTitle": "Vzhľad",
-  "permissionSettingsTitle": "Povolenia",
   "privacySettingsTitle": "Súkromie",
   "notificationsSettingsTitle": "Upozornenia",
   "recoveryPhraseEmpty": "Zadajte obnovovaciu frázu",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Limit pripnutých konverzácií",
   "pinConversationLimitToastDescription": "Môžete pripnúť iba $number$ konverzácii",
   "showUserDetails": "Zobraziť Detaily Používateľa",
-  "latestUnreadIsAbove": "Prvá neprečítaná správa je hore",
   "sendRecoveryPhraseTitle": "Posielanie Obnovovacej Frázy",
   "sendRecoveryPhraseMessage": "Pokúšate sa poslať vašu obnovovaciu frázu ktorá môže byť použítá na prístup k Vášmu účtu. Ste si istí že chcete poslať túto správu?",
   "dialogClearAllDataDeletionFailedTitle": "Dáta nevymazané",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Upozornenia - $setting$",
   "surveyTitle": "Zúčastnite sa Session Prieskumu",
   "goToOurSurvey": "Choďte na náš prieskum",
-  "blockAll": "Zablokovať Všetkých",
+  "clearAll": "Clear All",
   "messageRequests": "Žiadosti o Správu",
   "requestsSubtitle": "Čakajúce Žiadosti",
   "requestsPlaceholder": "Žiadne žiadosti",
-  "messageRequestsDescription": "Zapnúť Príjmanie Žiadostí o Správu",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Prichádzajúci hovor od '$name$'",
   "ringing": "Zvoním...",
   "establishingConnection": "Nadväzujem spojenie...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Nebol nájdeny zvukový výstup",
   "callMediaPermissionsTitle": "Hlasové a video hovory",
   "callMissedCausePermission": "Zmeškaný hovor od '$name$' pretože potrebujete zapnúť povolenie 'Hlasové a video hovory' v Nastaveniach Súkromia.",
-  "callMissedNotApproved": "Zmeškaný hovor od '$name$', keďže ste túto konverzáciu ešte neschválili. Pošlite mu najprv správu.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Povoliť prístup na príjmanie hlasových a video hovorov od ostatných používateľov",
   "callMediaPermissionsDialogContent": "Súčasná implementácia hlasových/video hovorov odhalí vašu IP adresu serverom Oxen Foundation a volajúcemu/volanému používateľovi.",
-  "menuCall": "Hovor",
   "startedACall": "Volali ste $name$",
   "answeredACall": "Volať z $name$",
   "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseDescription": "Zmenší veľkosť tvojej databázy správ na tvojich posledných 10 000 správ.",
+  "trimDatabaseConfirmationBody": "Určite chceš vymazať svoje najstaršie prijaté správy? ($deleteAmount$)",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
