--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Kopiraj napako in zapusti aplikacijo",
   "unknown": "Neznano",
   "databaseError": "Napaka v bazi podatkov",
@@ -17,15 +16,12 @@
   "editMenuCut": "Odreži",
   "editMenuCopy": "Kopiraj",
   "editMenuPaste": "Prilepi",
-  "editMenuPasteAndMatchStyle": "Prilepi in spoji oblikovanje",
-  "editMenuDelete": "Izbriši",
   "editMenuDeleteContact": "Izbriši stik",
   "editMenuDeleteGroup": "Izbriši skupino",
   "editMenuSelectAll": "Izberi vse",
   "windowMenuClose": "Zapri okno",
   "windowMenuMinimize": "Pomanjšaj",
   "windowMenuZoom": "Povečava",
-  "windowMenuBringAllToFront": "Prikaži vse na površju",
   "viewMenuResetZoom": "Privzeta velikost",
   "viewMenuZoomIn": "Približaj",
   "viewMenuZoomOut": "Oddalji",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Nalagam ...",
-  "optimizingApplication": "Optimiziranje nastavitev ...",
   "done": "Končano",
-  "me": "Jaz",
-  "view": "Preglej",
   "youLeftTheGroup": "Zapustili ste skupino",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Neprebrano sporočilo",
   "unreadMessages": "Neprebrana sporočila",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Prijava napake",
-  "gotIt": "Razumem!",
-  "submit": "Objavi",
   "markAllAsRead": "Označi vse kot prebrano",
   "incomingError": "Napaka pri obdelavi dohodnega sporočila",
   "media": "Medijske datoteke",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Izbrana datoteka presega največjo dovoljeno velikost.",
   "unableToLoadAttachment": "Izbrane priponke ni bilo mogoče zagnati.",
   "offline": "Ni povezave z internetom",
-  "checkNetworkConnection": "Preverite svojo internetno povezavo",
-  "attemptingReconnection": "Naslednji poskus povezave: $reconnect_duration_in_seconds$ s",
-  "submitDebugLog": "Sistemska zabeležba",
   "debugLog": "Sistemska zabeležba",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Opombe k izdaji",
   "goToSupportPage": "Podporna stran",
-  "menuReportIssue": "Prijava napake",
   "about": "O programu",
-  "speech": "Nagovor",
   "show": "Prikaži",
   "sessionMessenger": "Session",
-  "search": "Iskanje",
   "noSearchResults": "Ni rezultata za \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Stiki",
@@ -93,9 +78,6 @@
   "replyToMessage": "Odgovor na sporočilo",
   "replyingToMessage": "Odgovori:",
   "originalMessageNotFound": "Izvorno sporočilo ni bilo najdeno",
-  "originalMessageNotAvailable": "Izvorno sporočilo ni več na voljo",
-  "messageFoundButNotLoaded": "Izvorno sporočilo je bilo najdeno, vendar še ni naloženo. Če ga želite naložiti, se pomaknite navzgor.",
-  "recording": "Snemanje",
   "you": "Vi",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Za pošiljanje glasovnih sporočil potrebuje aplikacija Session Desktop dostop do vašega mikrofona.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Izbriši le zame",
   "deleteForEveryone": "Izbriši za vse",
-  "deleteMessagesQuestion": "Izbriši ta sporočila?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Izbriši to sporočilo?",
   "deleteMessages": "Izbriši sporočila",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "To sporočilo je bilo izbrisano",
   "from": "Pošiljatelj",
   "to": "v",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Slika je bila poslana tekom pogovora",
   "imageCaptionIconAlt": "Ikona, ki označuje, da ima ta slika besedilo",
   "addACaption": "Dodaj besedilo ...",
-  "copy": "Kopiraj",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Shrani",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Shrani",
-  "permissions": "Dovoljenja",
-  "general": "Splošno",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Vklop črkovalnika v okencu za vnašanje sporočila",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "Obvestila",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Vsebina obvestila o prejemu sporočila:",
   "disableNotifications": "obvestila so izklopljena",
   "nameAndMessage": "ime pošiljatelja in sporočilo",
@@ -171,13 +156,7 @@
   "notificationFrom": "Od:",
   "notificationMostRecent": "Najnovejše:",
   "sendFailed": "Pošiljanje ni uspelo",
-  "expiredWarning": "Pričujoča različica programa Session Desktop je potekla. Za ponovno delovanje morate program posodobiti na zadnjo različico.",
-  "upgrade": "Posodobi",
   "mediaMessage": "Multimedijsko sporočilo",
-  "timestamp_s": "ravnokar",
-  "timestamp_m": "1 minuto",
-  "timestamp_h": "1 uro",
-  "timestampFormat_M": "D. MMM",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "Za pošiljanje sporočila morate najprej odblokirati ta stik",
   "unblockGroupToSend": "Odblokiraj to skupino za pošiljanje sporočila.",
@@ -223,7 +202,6 @@
   "startConversation": "Začni nov pogovor ...",
   "invalidNumberError": "Neveljavna številka",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Na voljo je posodobitev aplikacije Session",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
