--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Uslovi i politika privatnosti",
   "copyErrorAndQuit": "Iskopiraj grešku i zatvori",
   "unknown": "Nepoznato",
   "databaseError": "Greška baze podataka",
@@ -17,15 +16,12 @@
   "editMenuCut": "Iseci",
   "editMenuCopy": "Kopiraj",
   "editMenuPaste": "Nalepi",
-  "editMenuPasteAndMatchStyle": "Nalepi i uskladi stil",
-  "editMenuDelete": "Obriši",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Select All",
   "windowMenuClose": "Zatvori prozor",
   "windowMenuMinimize": "Minimizuj",
   "windowMenuZoom": "Zumiraj",
-  "windowMenuBringAllToFront": "Postavi sve ispred",
   "viewMenuResetZoom": "Stvarna vеličina",
   "viewMenuZoomIn": "Uvećaj",
   "viewMenuZoomOut": "Umanji",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Pozivnica za otvorenu grupu",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Pridruži se $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Da li ste li sigurni da želite da se pridružite otvorenoj grupi $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Unesite ID sesije ili naziv ONS -a",
   "loading": "Učitavanje...",
-  "optimizingApplication": "Optimizovanje aplikacije...",
   "done": "Završeno",
-  "me": "Ја",
-  "view": "Pogled",
   "youLeftTheGroup": "Napustili ste grupu.",
   "youGotKickedFromGroup": "Izbačeni ste iz grupe.",
-  "unreadMessage": "Nepročitana poruka",
   "unreadMessages": "Nepročitane poruke",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Prijavite problem",
-  "gotIt": "Jasno",
-  "submit": "Пошаљи",
   "markAllAsRead": "Označi svе kao pročitano",
   "incomingError": "Greška u prijemu dolazne poruke",
   "media": "Медији",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Жао нам је, ваша датотека превазилази ограничење величине.",
   "unableToLoadAttachment": "Unable to load selected attachment.",
   "offline": "Ван мреже",
-  "checkNetworkConnection": "Проверите вашу везу са мрежом.",
-  "attemptingReconnection": "Поновно повезивање за $reconnect_duration_in_seconds$ секунде/и",
-  "submitDebugLog": "Извештај о грешкама",
   "debugLog": "Izveštaj o greškama",
   "showDebugLog": "Prikaži beleške otklanjanja grešaka",
   "goToReleaseNotes": "Idite na napomene o verziji",
   "goToSupportPage": "Idite na stranicu za podršku",
-  "menuReportIssue": "Prijavi problem",
   "about": "O nama",
-  "speech": "Govor",
   "show": "Prikaži",
   "sessionMessenger": "Sеsija",
-  "search": "Тражи",
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Контакти",
@@ -93,9 +78,6 @@
   "replyToMessage": "Odgovori na poruku",
   "replyingToMessage": "Odgovori:",
   "originalMessageNotFound": "Оригинална порука није нађена",
-  "originalMessageNotAvailable": "Оригинална порука више није доступна",
-  "messageFoundButNotLoaded": "Originalna poruka je pronađena, ali nije učitana. Skrolujte nagore da biste je učitali.",
-  "recording": "Snimanje",
   "you": "Ti",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "To send audio messages, allow Session Desktop to access your microphone.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Nemate dozvolu da brišete tuđe poruke",
   "deleteJustForMe": "Obriši samo za mene",
   "deleteForEveryone": "Obriši za sve",
-  "deleteMessagesQuestion": "Izbriši ove poruke?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Izbriši ovu poruku?",
   "deleteMessages": "Уклони пошиљке",
-  "deleted": "Obrisano",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Poruka je izbrisana",
   "from": "Од",
   "to": "to",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Slika je poslata u razgovoru",
   "imageCaptionIconAlt": "Ikona pokazuje da ova slika ima naslov",
   "addACaption": "Dodaj natpis...",
-  "copy": "Kopiraj",
   "copySessionID": "Kreiraj Session ID",
   "copyOpenGroupURL": "Kopiraj URL-ove grupa",
   "save": "Сачувај",
   "saveLogToDesktop": "Sačuvati beleške na desktop",
   "saved": "Sačuvano",
-  "permissions": "Dozvole",
-  "general": "Опште",
   "tookAScreenshot": "$name$ je uradio screenshot",
   "savedTheFile": "Medij je sačuvao $name$",
   "linkPreviewsTitle": "Pošalji preglede veza",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Provеra pravopisa",
   "spellCheckDescription": "Omogući proveru pravopisa teksta",
   "spellCheckDirty": "Neophodno je da ponovo pokrenute sesiju da biste primenili nova podešavanja",
-  "notifications": "Обавештења",
   "readReceiptSettingDescription": "Omogući i deli informaciju kada su poruke pročitane (omogućava potvrde o čitanju u svim sesijama).",
   "readReceiptSettingTitle": "Pročitano",
   "typingIndicatorsSettingDescription": "Gledajte i delite dok se poruke unose (odnosi se na sve sesije).",
   "typingIndicatorsSettingTitle": "Indikatori pisanja",
   "zoomFactorSettingTitle": "Faktor zumiranja",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Садржај обавештења за новопристигле поруке:",
   "disableNotifications": "Искључи обавештења",
   "nameAndMessage": "Име дописника и порука",
@@ -171,13 +156,7 @@
   "notificationFrom": "Od:",
   "notificationMostRecent": "Najnovije:",
   "sendFailed": "Send failed",
-  "expiredWarning": "Ваша верзија Session-а за десктоп је застарела. Да би сте наставили дописивање, молимо вас да ажурирате програм.",
-  "upgrade": "Ажурирај",
   "mediaMessage": "Без текста",
-  "timestamp_s": "сада",
-  "timestamp_m": "1 минут",
-  "timestamp_h": "1 час",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Molimo unesite poruku.",
   "unblockToSend": "Одблокирајте дописника да би послали поруку.",
   "unblockGroupToSend": "Unblock this group to send a message.",
@@ -223,7 +202,6 @@
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Неисправан број",
   "failedResolveOns": "Rešavanje ONSa nije uspelo",
-  "successUnlinked": "Veza sa vašim uređajem je uspešno opozvana",
   "autoUpdateSettingTitle": "Automatsko ažuriranje",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Нова верзија Session-а је доступна",
@@ -248,7 +226,6 @@
   "blocked": "Blokiran",
   "blockedSettingsTitle": "Blokirani kontakti",
   "unbanUser": "Odblokiraj korisnika",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Korisnik je uspešno odblokiran",
   "userUnbanFailed": "Nesupešno!",
   "banUser": "Zabrani korisnika",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Uklonite lozinku povezanu sa vašim nalogom",
   "enterPassword": "Unesite lozinku",
   "confirmPassword": "Potvrda lozinke",
-  "pasteLongPasswordToastTitle": "Sadržaj premašuje maksimalnu dužinu lozinke od $max_pwd_len$ znakova.",
   "showRecoveryPhrasePasswordRequest": "Unesite lozinku",
   "recoveryPhraseSavePromptMain": "Fraza za oporavak je glavni ključ za Session ID - možete ga koristiti za vraćanje ISession ID-a ako izgubite pristup svom uređaju. Čuvajte frazu za oporavak na sigurnom mestu i ne delite je nisakim.",
   "invalidOpenGroupUrl": "Neispravan URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "Vi niste kreator",
   "onlyAdminCanRemoveMembersDesc": "Samo kreator grupe može ukloniti korisnike",
   "createAccount": "Create Account",
-  "signIn": "Prijava",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Ovo je tvoj ID sesije",
@@ -345,22 +320,20 @@
   "anonymous": "Anonimno",
   "removeResidueMembers": "Klikom na \"ok\" uklonićete i te članove kada su napustili grupu.",
   "enterDisplayName": "Unesite vaš nadimak",
-  "enterOptionalPassword": "Lozinka (opciono)",
   "continueYourSession": "Nastavi sesiju",
   "linkDevice": "Poveži urežaj",
   "restoreUsingRecoveryPhrase": "Povratite svoj nalog",
   "or": "ili",
-  "ByUsingThisService...": "Korišćenjem ove usluge prihvatate naše <a href=\"https://getsession.org/legal/#tos\">uslove korišćenja</a> i <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">politiku privatnosti</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Pokrenite svoju sesiju.",
   "welcomeToYourSession": "Dobrodošli na vašu sesiju",
   "newSession": "Nova sеsija",
-  "searchFor...": "Potražite razgovore ili kontakte",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Unesite Session ID",
   "enterSessionIDOfRecipient": "Unesite Session ID ili ONS ime primaoca",
   "usersCanShareTheir...": "Korisnici mogu da podele svoj Session ID tako što će otići u podešavanja naloga i dodirnuti „Share Session ID“ ili podeliti svoj QR kod.",
   "message": "Poruka",
   "appearanceSettingsTitle": "Izglеd",
-  "permissionSettingsTitle": "Dozvole",
   "privacySettingsTitle": "Privatnost",
   "notificationsSettingsTitle": "Notifikacije",
   "recoveryPhraseEmpty": "Unesite frazu za oporavak",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Limit zalepljenih konverzacija",
   "pinConversationLimitToastDescription": "Možete zalepiti najviše $number$ konverzacija",
   "showUserDetails": "Pokaži detalje korisnika",
-  "latestUnreadIsAbove": "Prva nepročitana poruka je gore",
   "sendRecoveryPhraseTitle": "Slanje fraze za oporavak",
   "sendRecoveryPhraseMessage": "Pokušavate da pošaljete svoju frazu za oporavak koja se može koristiti za pristup vašem nalogu. Jeste li sigurni da želite poslati ovu poruku?",
   "dialogClearAllDataDeletionFailedTitle": "Podaci nisu obrisani",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifikacije - $setting$",
   "surveyTitle": "Popunite našu Session anketu",
   "goToOurSurvey": "Idite na našu anketu",
-  "blockAll": "Blokiraj Sve",
+  "clearAll": "Clear All",
   "messageRequests": "Zahtevi za poruke",
   "requestsSubtitle": "Zahtev na čekanju",
   "requestsPlaceholder": "Nema zahteva",
-  "messageRequestsDescription": "Omogući prijemno sanduče za zahteve poruka",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Zove Vas $name$",
   "ringing": "Zvoni...",
   "establishingConnection": "Uspostavljanjе vеzе...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Nije pronađen audio izlaz",
   "callMediaPermissionsTitle": "Glasovni i video poziv",
   "callMissedCausePermission": "Propušten poziv od $name$ jer morate da omogućite dozvolu za 'Glasovne i video pozive' u podešavanjima Privatnosti.",
-  "callMissedNotApproved": "Propušten poziv od $name$ jer još niste odobrili ovaj razgovor. Prvo mu pošaljite poruku.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Dozvoli pristup za prihvatanje glasovnih i video poziva od drugih korisnika",
   "callMediaPermissionsDialogContent": "Trenutna implementacija glasovnog/video poziva će izložiti Vašu IP adresu, serverima Oxen Fondacije i korisniku sa kojim imate poziv.",
-  "menuCall": "Poziv",
   "startedACall": "Pozvali ste $name$",
   "answeredACall": "Poziv sa $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
