--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Vilkor och sekretesspolicy",
   "copyErrorAndQuit": "Kopiera felmeddelande och avsluta",
   "unknown": "Okänd",
   "databaseError": "Databasfel",
@@ -17,15 +16,12 @@
   "editMenuCut": "Klipp ut",
   "editMenuCopy": "Kopiera",
   "editMenuPaste": "Klistra in",
-  "editMenuPasteAndMatchStyle": "Klistra in och matcha stil",
-  "editMenuDelete": "Radera",
   "editMenuDeleteContact": "Radera kontakt",
   "editMenuDeleteGroup": "Radera grupp",
   "editMenuSelectAll": "Markera alla",
   "windowMenuClose": "Stäng fönster",
   "windowMenuMinimize": "Minimera",
   "windowMenuZoom": "Zooma",
-  "windowMenuBringAllToFront": "Ta fram alla",
   "viewMenuResetZoom": "Aktuella storlek",
   "viewMenuZoomIn": "Zooma in",
   "viewMenuZoomOut": "Zooma ut",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Öppen gruppinbjudan",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Gå med i $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Är du säker på att du vill gå med i $roomName$s öppna grupp?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Ange sessions-ID eller ONS-namn",
   "loading": "Läser in...",
-  "optimizingApplication": "Optimerar applikationen...",
   "done": "Slutfört",
-  "me": "Jag",
-  "view": "Visa",
   "youLeftTheGroup": "Du lämnade gruppen",
   "youGotKickedFromGroup": "Du togs bort från gruppen.",
-  "unreadMessage": "Olästa meddelande",
   "unreadMessages": "Olästa meddelanden",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Den här loggen kommer att sparas på skrivbordet.",
   "reportIssue": "Anmäl ett programfel",
-  "gotIt": "Uppfattat!",
-  "submit": "Skicka",
   "markAllAsRead": "Markera alla som lästa",
   "incomingError": "Fel med att hantera inkommande meddelande",
   "media": "Media",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Tyvärr, filen du har valt överstiger maximalt tillåten filstorlek.",
   "unableToLoadAttachment": "Kunde inte läsa in vald bilaga",
   "offline": "Ej ansluten",
-  "checkNetworkConnection": "Kontrollera din nätverksanslutning.",
-  "attemptingReconnection": "Försöker återansluta om $reconnect_duration_in_seconds$  sekunder",
-  "submitDebugLog": "Loggfil för felsökning",
   "debugLog": "Felsökningslogg",
   "showDebugLog": "Visa felsökningslogg",
   "goToReleaseNotes": "Gå till versionsanteckningar",
   "goToSupportPage": "Gå till supportsidan",
-  "menuReportIssue": "Rapportera ett fel",
   "about": "Om",
-  "speech": "Tal",
   "show": "Visa",
   "sessionMessenger": "Session",
-  "search": "Sök",
   "noSearchResults": "Inga resultat för \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Kontakter och grupper",
   "contactsHeader": "Kontakter",
   "messagesHeader": "Meddelanden",
   "settingsHeader": "Inställningar",
@@ -93,17 +78,14 @@
   "replyToMessage": "Svara på meddelande",
   "replyingToMessage": "Svarar på:",
   "originalMessageNotFound": "Originalmeddelande hittades inte",
-  "originalMessageNotAvailable": "Originalmeddelande inte längre tillgängligt",
-  "messageFoundButNotLoaded": "Originalmeddelande hittades, men lästes inte in. Skrolla upp för att läsa in det.",
-  "recording": "Spelar in ",
   "you": "Du",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Om du vill skicka röstmeddelanden måste Session Desktop ha tillgång till din mikrofon.",
   "audio": "Ljud",
   "video": "Video",
   "photo": "Foto",
-  "cannotUpdate": "Kunde inte uppdatera",
-  "cannotUpdateDetail": "Session Desktop kunde inte uppdateras, det finns en ny version tillgänglig. Gå till https://getsession.org/ och installera den nya versionen manuellt, och sedan kontakta support eller lämna in ett meddelande om det här problemet.",
+  "cannotUpdate": "Kan inte uppdatera",
+  "cannotUpdateDetail": "Session Desktop kunde inte uppdateras, men det finns en ny version tillgänglig. Vänligen besök https://getsession.org/ och installera den nya versionen manuellt, kontakta sedan antingen support eller skicka ett meddelande om fel kring det här problemet.",
   "ok": "OK",
   "cancel": "Avbryt",
   "close": "Stäng",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Du har inte behörighet att ta bort andras meddelanden",
   "deleteJustForMe": "Radera bara för mig",
   "deleteForEveryone": "Radera för alla",
-  "deleteMessagesQuestion": "Radera dessa meddelanden?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Radera detta meddelande?",
   "deleteMessages": "Radera meddelanden",
-  "deleted": "Raderat",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Detta meddelande har tagits bort",
   "from": "Från",
   "to": "till",
@@ -125,7 +107,7 @@
   "sendMessage": "Skicka ett meddelande",
   "groupMembers": "Gruppmedlemmar",
   "moreInformation": "Mer information",
-  "resend": "Återsänd",
+  "resend": "Skicka på nytt",
   "deleteConversationConfirmation": "Vill du radera denna konversation för alltid?",
   "clearAllData": "Rensa all data",
   "deleteAccountWarning": "Detta kommer att ta bort dina meddelanden och kontakter permanent.",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Bild skickad i konversation",
   "imageCaptionIconAlt": "Ikon visandes att denna bild har en bildtext",
   "addACaption": "Lägg till en rubrik...",
-  "copy": "Kopiera",
   "copySessionID": "Kopiera Session-ID",
   "copyOpenGroupURL": "Kopiera gruppens URL",
   "save": "Spara",
   "saveLogToDesktop": "Spara loggen på skrivbordet",
   "saved": "Sparad",
-  "permissions": "Behörigheter",
-  "general": "Generell",
   "tookAScreenshot": "$name$ tog en skärmdump",
   "savedTheFile": "Media sparad av $name$",
   "linkPreviewsTitle": "Skicka förhandsvisningar av länk",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Kontrollera stavning",
   "spellCheckDescription": "Slå på stavningskontroll för text som anges i meddelandefältet",
   "spellCheckDirty": "Du måste starta om Session för att tillämpa dina nya inställningar",
-  "notifications": "Aviseringar",
   "readReceiptSettingDescription": "Se och dela när meddelanden har lästs (aktiverar läskvitton i alla sessioner).",
   "readReceiptSettingTitle": "Läskvitton",
   "typingIndicatorsSettingDescription": "Se och dela när meddelanden skrivs (gäller för alla sessioner).",
   "typingIndicatorsSettingTitle": "Skriv Indikatorer",
   "zoomFactorSettingTitle": "Zoomfaktor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "När du får meddelanden, visa aviseringar som visar:",
   "disableNotifications": "Stäng av aviseringar",
   "nameAndMessage": "Både sändarens namn och meddelande",
@@ -171,13 +156,7 @@
   "notificationFrom": "Från:",
   "notificationMostRecent": "Nyligen:",
   "sendFailed": "Att skicka meddelandet misslyckades",
-  "expiredWarning": "Den här versionen av Session Desktop har utgått. Vänligen uppgradera till den senaste versionen för att fortsätta chatta.",
-  "upgrade": "Uppgradera",
   "mediaMessage": "Mediameddelande",
-  "timestamp_s": "nyss",
-  "timestamp_m": "1 minut",
-  "timestamp_h": "1 timme",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Ange ett meddelande.",
   "unblockToSend": "Avblockera denna kontakt för att skicka meddelanden.",
   "unblockGroupToSend": "Avblockera denna grupp för att skicka meddelanden.",
@@ -199,7 +178,7 @@
   "disappearingMessages": "Försvinnande meddelanden",
   "changeNickname": "Ändra smeknamn",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "Nytt Smeknamn",
+  "nicknamePlaceholder": "Nytt smeknamn",
   "changeNicknameMessage": "Ange ett smeknamn för användaren",
   "timerOption_0_seconds_abbreviated": "av",
   "timerOption_5_seconds_abbreviated": "5 sek",
@@ -223,7 +202,6 @@
   "startConversation": "Starta en ny konversation…",
   "invalidNumberError": "Felaktigt nummer",
   "failedResolveOns": "Misslyckades att lösa ONS-namnet",
-  "successUnlinked": "Din enhet har avkopplats",
   "autoUpdateSettingTitle": "Uppdatera automatiskt",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Uppdatering för Session tillgänglig",
@@ -248,10 +226,9 @@
   "blocked": "Blockerad",
   "blockedSettingsTitle": "Blockerade kontakter",
   "unbanUser": "Avbannlys användaren",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Användaren har blivit avbannlyst",
   "userUnbanFailed": "Obannlysning misslyckades!",
-  "banUser": "Bannlys användaren",
+  "banUser": "Stäng av användare",
   "banUserAndDeleteAll": "Bannlys och radera alla",
   "userBanned": "User banned successfully",
   "userBanFailed": "Bannlysning misslyckades!",
@@ -260,7 +237,7 @@
   "leaveGroupConfirmation": "Är du säker på att du vill lämna denna grupp?",
   "leaveGroupConfirmationAdmin": "Eftersom du är administratör för denna grupp, om du lämnar kommer den tas bort för alla nuvarande medlemmar. Är du säker på att du vill lämna denna grupp?",
   "cannotRemoveCreatorFromGroup": "Kan inte ta bort denna användare",
-  "cannotRemoveCreatorFromGroupDesc": "Du kan inte ta bort den här användaren eftersom de är gruppens skapare.",
+  "cannotRemoveCreatorFromGroupDesc": "Du kan inte ta bort denna användare eftersom de är skaparen av gruppen.",
   "noContactsForGroup": "Du har inga kontakter än",
   "failedToAddAsModerator": "Kunde inte lägga till användaren som moderator",
   "failedToRemoveFromModerator": "Det gick inte att ta bort användaren från moderatorlistan",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Ta bort lösenordet för ditt konto",
   "enterPassword": "Ange ditt lösenord",
   "confirmPassword": "Bekräfta lösenord",
-  "pasteLongPasswordToastTitle": "Innehållet i urklipp överskrider den maximala lösenordslängden på $max_pwd_len$ tecken.",
   "showRecoveryPhrasePasswordRequest": "Ange ditt lösenord",
   "recoveryPhraseSavePromptMain": "Din återställningsfras är huvudnyckeln till ditt Session-ID – du kan använda den för att återställa ditt Session-ID om du förlorar åtkomst till enheten. Förvara din återställningsfras på en säker plats, och ge den inte till någon.",
   "invalidOpenGroupUrl": "Ogiltig URL",
@@ -300,7 +276,7 @@
   "changePasswordInvalid": "Det gamla lösenordet du angav är felaktigt",
   "removePasswordInvalid": "Felaktigt lösenord",
   "setPasswordTitle": "Ange ett lösenord",
-  "changePasswordTitle": "Ändrat Lösenord",
+  "changePasswordTitle": "Ändrat lösenord",
   "removePasswordTitle": "Tog bort lösenord",
   "setPasswordToastDescription": "Ditt lösenord har angetts. Håll det säkert.",
   "changePasswordToastDescription": "Ditt lösenord har ändrats. Håll det säkert.",
@@ -325,16 +301,15 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Ta bort från moderatorer",
   "add": "Lägg till",
-  "addingContacts": "Lägger till kontaker i $name$",
+  "addingContacts": "Lägger till kontakter till $name$",
   "noContactsToAdd": "Inga kontakter att lägga till",
   "noMembersInThisGroup": "Inga andra medlemmar i gruppen",
   "noModeratorsToRemove": "inga moderatorer att ta bort",
   "onlyAdminCanRemoveMembers": "Du är inte skaparen",
   "onlyAdminCanRemoveMembersDesc": "Endast skaparen av gruppen kan ta bort användare",
   "createAccount": "Create Account",
-  "signIn": "Logga in",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "Behåll i systemfältet",
+  "startInTrayDescription": "Session fortsätter att köras i bakgrunden när du stänger fönstret",
   "yourUniqueSessionID": "Säg hej till ditt Session-ID",
   "allUsersAreRandomly...": "Ditt session-ID är en unik adress folk kan använda för att kontakta dig på Session. Utan koppling till din riktiga identitet, ditt Sessions-ID är helt anonymt och privat.",
   "getStarted": "Kom igång",
@@ -345,22 +320,20 @@
   "anonymous": "Anonym",
   "removeResidueMembers": "Om du klickar ok kommer också dessa medlemmar att tas bort när de lämnat gruppen.",
   "enterDisplayName": "Ange ett visningsnamn",
-  "enterOptionalPassword": "Ange lösenord (frivilligt)",
   "continueYourSession": "Fortsätt med din Session",
   "linkDevice": "Koppla enhet",
   "restoreUsingRecoveryPhrase": "Återställ ditt konto",
   "or": "eller",
-  "ByUsingThisService...": "Genom att använda denna tjänst godkänner du våra <a href=\"https://getsession.org/legal/#tos\">Användarvillkor</a> och <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Sekretesspolicy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Börja din Session.",
   "welcomeToYourSession": "Välkommen till Session",
   "newSession": "Ny Session",
-  "searchFor...": "Sök efter konversationer eller kontakter",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Ange Session-ID",
   "enterSessionIDOfRecipient": "Ange Session-ID eller ONS-namnet på mottagaren",
   "usersCanShareTheir...": "Användare kan dela sitt Session-ID genom att gå in på Kontoinställningar och trycka på \"Dela Session-ID\" eller genom att dela sin QR-kod.",
   "message": "Meddelande",
   "appearanceSettingsTitle": "Utseende",
-  "permissionSettingsTitle": "Behörigheter",
   "privacySettingsTitle": "Sekretess",
   "notificationsSettingsTitle": "Aviseringar",
   "recoveryPhraseEmpty": "Ange din återställningsfras",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Gräns för fästa konversationer",
   "pinConversationLimitToastDescription": "Du kan bara fästa $number$ konversationer",
   "showUserDetails": "Visa användardetaljer",
-  "latestUnreadIsAbove": "Första olästa meddelandet är ovanför",
   "sendRecoveryPhraseTitle": "Skickar återställningsfras",
   "sendRecoveryPhraseMessage": "Du försöker skicka din återställningsfras som kan användas för att komma åt ditt konto. Är du säker på att du vill skicka detta meddelande?",
   "dialogClearAllDataDeletionFailedTitle": "Uppgifterna raderades inte",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifierings - $setting$",
   "surveyTitle": "Gör vår Session enkät",
   "goToOurSurvey": "Gå till vår enkät",
-  "blockAll": "Blockera alla",
+  "clearAll": "Clear All",
   "messageRequests": "Meddelandeförfrågningar",
   "requestsSubtitle": "Pågående förfrågningar",
   "requestsPlaceholder": "Inga förfrågningar",
-  "messageRequestsDescription": "Aktivera meddelandeförfrågan",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Inkommande samtal från '$name$'",
   "ringing": "Ringer...",
   "establishingConnection": "Etablerar anslutning...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Ingen ljudutmatning hittades",
   "callMediaPermissionsTitle": "Röst- och videosamtal",
   "callMissedCausePermission": "Missade ett samtal från \"$name$\" eftersom du måste aktivera behörigheten \"Röst- och videosamtal\" i Sekretessinställningarna.",
-  "callMissedNotApproved": "Missade ett samtal från '$name$' eftersom du inte har godkänt denna konversation än. Skicka ett meddelande till honom först.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Tillåter åtkomst att acceptera röst- och videosamtal från andra användare",
   "callMediaPermissionsDialogContent": "Den nuvarande implementeringen av röst-/videosamtal kommer att avslöja din IP-adress för Oxen Foundations servrar och den samtalande användaren.",
-  "menuCall": "Ring",
   "startedACall": "Du ringde $name$",
   "answeredACall": "Samtal med $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Trimma databasen",
+  "trimDatabaseDescription": "Minskar storleken på ditt meddelande databas till dina senaste 10.000 meddelanden.",
+  "trimDatabaseConfirmationBody": "Är du säker på att du vill ta bort dina $deleteAmount$ äldsta mottagna meddelanden?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
