--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Şartlar ve Gizlilik Politikası",
   "copyErrorAndQuit": "Hatayı kopyala ve çık",
   "unknown": "Bilinmeyen",
   "databaseError": "Veritabanı hatası",
@@ -17,15 +16,12 @@
   "editMenuCut": "Kes",
   "editMenuCopy": "Kopyala",
   "editMenuPaste": "Yapıştır",
-  "editMenuPasteAndMatchStyle": "Yapıştır ve Stille Eşleştir",
-  "editMenuDelete": "Sil",
   "editMenuDeleteContact": "Kişiyi Sil",
   "editMenuDeleteGroup": "Grubu Sil",
   "editMenuSelectAll": "Tümünü Seç",
   "windowMenuClose": "Pencereyi Kapat",
   "windowMenuMinimize": "Küçült",
   "windowMenuZoom": "Yakınlaştır",
-  "windowMenuBringAllToFront": "Hepsini Öne Getir",
   "viewMenuResetZoom": "Normal Boyut",
   "viewMenuZoomIn": "Yakınlaştır",
   "viewMenuZoomOut": "Uzaklaştır",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Açık grup daveti",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$'e katıl?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "$roomName$ açık gurubuna katılmak istediğinize emin misiniz?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Session Kimliğini veya ONS adını girin",
   "loading": "Yükleniyor...",
-  "optimizingApplication": "Uygulama optimize ediliyor...",
   "done": "Tamamlandı",
-  "me": "Ben",
-  "view": "Görüntüle",
   "youLeftTheGroup": "Gruptan ayrıldınız",
   "youGotKickedFromGroup": "Gruptan atıldınız.",
-  "unreadMessage": "Okunmamış İletiler",
-  "unreadMessages": "Okunmamış İleti",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "unreadMessages": "Okunmamış İletiler",
+  "debugLogExplanation": "Bu sistem günlüğü masaüstünüze kaydedilecektir.",
   "reportIssue": "Sorun bildir",
-  "gotIt": "Anladım!",
-  "submit": "Gönder",
   "markAllAsRead": "Tümünü Okundu Olarak İşaretle",
   "incomingError": "Gelen ileti işlenirken hata oluştu",
   "media": "Medya",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Üzgünüz, seçilen dosya ileti boyutu kısıtlamalarını aşıyor.",
   "unableToLoadAttachment": "Seçilen eklenti yüklenemedi.",
   "offline": "Çevrimdışı",
-  "checkNetworkConnection": "Ağ bağlantınızı kontrol edin.",
-  "attemptingReconnection": "Yeniden bağlantı kurma $reconnect_duration_in_seconds$ saniye içerisinde tekrar denenecektir.",
-  "submitDebugLog": "Hata ayıklama günlüğü",
   "debugLog": "Hata Ayıklama Günlüğü",
   "showDebugLog": "Hata Ayıklama Günlüğünü Göster",
   "goToReleaseNotes": "Sürüm Notlarına Git",
   "goToSupportPage": "Destek Sayfasına Git",
-  "menuReportIssue": "Sorun Bildir",
   "about": "Hakkında",
-  "speech": "Konuşma",
   "show": "Göster",
   "sessionMessenger": "oturum",
-  "search": "Ara",
   "noSearchResults": "\"$searchTerm$\" için arama sonucu yok",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Arama sırasında çıkan Kişiler ve Gruplar bölümü başlığının sonuçları",
   "contactsHeader": "Kişiler",
   "messagesHeader": "İletiler",
   "settingsHeader": "Ayarlar",
@@ -93,9 +78,6 @@
   "replyToMessage": "İletiyi Yanıtla",
   "replyingToMessage": "Adlı kişiye yanıt olarak:",
   "originalMessageNotFound": "İletinin aslı bulunamadı",
-  "originalMessageNotAvailable": "İletinin aslı artık mevcut değil",
-  "messageFoundButNotLoaded": "İletinin aslı bulundu, ama yüklenmedi. Yüklemek için yukarıya kaydırın.",
-  "recording": "Kayıtlar",
   "you": "Siz",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Sesli iletiler göndermek için, Session Desktop'ın mikrofonunuza erişimine izin verin.",
@@ -103,20 +85,20 @@
   "video": "Video",
   "photo": "Fotoğraf",
   "cannotUpdate": "Güncellenemiyor",
-  "cannotUpdateDetail": "Session masaüstü uygulaması güncellenemedi, ancak yeni bir sürüm mevcut. Lütfen https://getsession.org/ adresine gidin ve yeni sürümü el ile yükleyin, ardından destek ile iletişime geçin veya bu sorunu bildirin.",
+  "cannotUpdateDetail": "Session masaüstü uygulaması güncellenemedi, ancak yeni bir sürüm mevcut. Lütfen https://getsession.org/ adresine gidin ve yeni sürümü manuel olarak yükleyin, ardından destek ile iletişime geçin veya bu sorun hakkında bir bug oluşturun.",
   "ok": "TAMAM",
   "cancel": "İptal",
   "close": "Kapat",
   "continue": "Devam Et",
   "error": "Hata",
   "delete": "Sil",
-  "messageDeletionForbidden": "Başkalarının iletilerini silme izniniz yok",
+  "messageDeletionForbidden": "Başkalarının mesajlarını silmek için yetkiniz bulunmamaktadır",
   "deleteJustForMe": "Sadece benim için sil",
   "deleteForEveryone": "Herkes için sil",
-  "deleteMessagesQuestion": "Bu iletiler silinsin mi?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Bu ileti silinsin mi?",
   "deleteMessages": "İletileri sil",
-  "deleted": "Silindi",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Bu ileti silindi",
   "from": "Gönderen",
   "to": "alıcı",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Konuşmada gönderilen görüntü",
   "imageCaptionIconAlt": "Bu görüntünün başlığı olduğunu gösteren ikon",
   "addACaption": "Bir başlık ekleyin...",
-  "copy": "Kopyala",
   "copySessionID": "Session Kimliğini Kopyala",
   "copyOpenGroupURL": "Grubun URL'sini Kopyala",
   "save": "Kaydet",
   "saveLogToDesktop": "Günlüğü masaüstüne kaydet",
   "saved": "Kaydedildi",
-  "permissions": "İzinler",
-  "general": "Genel",
   "tookAScreenshot": "$name$ ekran görüntüsü aldı",
   "savedTheFile": "Medya, $name$ tarafından kaydedildi",
   "linkPreviewsTitle": "Bağlantı Önizlemelerini Gönder",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Yazım Denetimi",
   "spellCheckDescription": "İleti kutusuna girilen sözcüklerin denetlenmesini etkinleştir",
   "spellCheckDirty": "Yeni ayarların uygulanması için Session'ı yeniden başlatmanız gerekiyor",
-  "notifications": "Bildirimler",
   "readReceiptSettingDescription": "Mesajlar okunduğunda (Tüm oturumlara kaydedilir) görün ve paylaşın.",
   "readReceiptSettingTitle": "Gelenleri Oku",
   "typingIndicatorsSettingDescription": "Mesajlar yazılıyor olduğunda (Tüm oturumlara kaydedilir) görün ve paylaşın.",
   "typingIndicatorsSettingTitle": "Yazıyor Göstergesi",
   "zoomFactorSettingTitle": "Yakınlaştırma faktörü",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "İleti geldiğinde şunların olduğu bildirim göster:",
   "disableNotifications": "Bildirimleri devre dışı bırak",
   "nameAndMessage": "Gönderenin adını ve iletisini",
@@ -171,13 +156,7 @@
   "notificationFrom": "Kimden:",
   "notificationMostRecent": "En son:",
   "sendFailed": "Gönderme başarısız",
-  "expiredWarning": "Session Desktop'ın bu sürümünün süresi doldu. İletişime devam etmek için lütfen en son sürüme geçin.",
-  "upgrade": "Yükselt",
   "mediaMessage": "Medya iletisi",
-  "timestamp_s": "şimdi",
-  "timestamp_m": "1 dakika",
-  "timestamp_h": "1 saat",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Lütfen bir mesaj girin.",
   "unblockToSend": "İleti göndermek için bu kişinin engellenmesini kaldırın.",
   "unblockGroupToSend": "İleti göndermek için bu grubun engellenmesini kaldırın.",
@@ -223,7 +202,6 @@
   "startConversation": "Yeni sohbet başlat…",
   "invalidNumberError": "Geçersiz numara",
   "failedResolveOns": "ONS adını çözümlemede başarısız oldu",
-  "successUnlinked": "Cihazınızın başarıyla eşleştirmesi kaldırıldı",
   "autoUpdateSettingTitle": "Otomatik Güncelleme",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Session güncellemesi mevcut",
@@ -248,7 +226,6 @@
   "blocked": "Engellendi",
   "blockedSettingsTitle": "Engellenmiş kişiler",
   "unbanUser": "Kullanıcı Engelini Kaldır",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Kullanıcının engeli başarıyla kaldırıldı",
   "userUnbanFailed": "Engelini kaldırma başarısız!",
   "banUser": "Kullanıcıyı Engelle",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Hesabınızla birleşmiş parolayı silme",
   "enterPassword": "Lütfen şifrenizi girin",
   "confirmPassword": "Şifreyi Doğrula",
-  "pasteLongPasswordToastTitle": "Pano içeriği $max_pwd_len$ karakter parola uzunluğunu aşıyor.",
   "showRecoveryPhrasePasswordRequest": "Lütfen şifrenizi girin",
   "recoveryPhraseSavePromptMain": "Kurtarma ifadeniz Session ID'nizin asıl anahtarıdır; cihazınıza erişiminizi kaybederseniz Session ID'nizi geri yüklemek için bunu kullanabilirsiniz. Kurtarma ifadenizi güvenli bir yerde saklayın ve kimseye vermeyin.",
   "invalidOpenGroupUrl": "Geçersiz URL",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Kurucu değilsiniz",
   "onlyAdminCanRemoveMembersDesc": "Sadece grubun kurucusu kullanıcıları silebilir",
   "createAccount": "Create Account",
-  "signIn": "Giriş yap",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "Sistem Tepsisinde Sakla",
+  "startInTrayDescription": "Session pencereyi kapattığınızda tel arka planda çalışmaya devam eder",
   "yourUniqueSessionID": "Session kimliğinize merhaba deyin",
   "allUsersAreRandomly...": "Session Kimliğiniz, kişilerin Session'da sizinle iletişim kurmak için kullanabileceği benzersiz adrestir. Gerçek kimliğinizle hiçbir bağlantısı olmadan, Session Kimliğiniz tasarım gereği tamamen anonim ve özeldir.",
   "getStarted": "Başlayın",
@@ -345,22 +320,20 @@
   "anonymous": "Anonim",
   "removeResidueMembers": "Tamama tıklamak ayrıca gruptan ayrılan kullanıcıları da silecek.",
   "enterDisplayName": "Görünen adı girin",
-  "enterOptionalPassword": "Şifre (isteğe bağlı)",
   "continueYourSession": "Session'ına Devam et",
   "linkDevice": "Cihaz Bağla",
   "restoreUsingRecoveryPhrase": "Hesabını geri yükle",
   "or": "veya",
-  "ByUsingThisService...": "Bu hizmeti kullanarak, <a href=\"https://getsession.org/legal/#tos\">Hizmet Şartlarımızı\n</a> ve <a href=\"https://getsession.gorg/privacypolicy/\" target=\"_blank\"> Gizlilik Politikamızı kabul etmiş sayılırsınız</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Session'ını başlat.",
   "welcomeToYourSession": "Session'a hoşgeldiniz",
   "newSession": "Yeni Session",
-  "searchFor...": "Konuşmaları veya kişileri ara",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Session ID'ni gir",
   "enterSessionIDOfRecipient": "Alıcının Session ID'sini veya ONS adını girin",
   "usersCanShareTheir...": "Kullanıcılar, hesap ayarlarına gidip \"Session ID'ni Paylaş\"a dokunarak veya QR kodlarını paylaşarak Session Kimliklerini paylaşabilirler.",
   "message": "İleti",
   "appearanceSettingsTitle": "Görünüm",
-  "permissionSettingsTitle": "İzinler",
   "privacySettingsTitle": "Gizlilik",
   "notificationsSettingsTitle": "Bildirimler",
   "recoveryPhraseEmpty": "Kurtarma metninizi girin",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Sabitlenmiş konuşmalalimiti",
   "pinConversationLimitToastDescription": "Yalnızca $number$ ileti dizisini sabitleyebilirsiniz",
   "showUserDetails": "Kullanıcı Detaylarını Göster",
-  "latestUnreadIsAbove": "İlk okunmamış mesaj yukarıda",
   "sendRecoveryPhraseTitle": "Kurtarma Sözcük Grubunu Gönder",
   "sendRecoveryPhraseMessage": "Hesabınıza erişmek için kullanılabilecek kurtarma ifadenizi göndermeye çalışıyorsunuz. Bu mesajı göndermek istediğinizden emin misiniz?",
   "dialogClearAllDataDeletionFailedTitle": "Veri silinmedi",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Bildirimler - $setting$",
   "surveyTitle": "Session Anketimizi alın",
   "goToOurSurvey": "Anketimize gidin",
-  "blockAll": "Tümünü Engelle",
+  "clearAll": "Clear All",
   "messageRequests": "İleti İstekleri",
   "requestsSubtitle": "Bekleyen İstekler",
   "requestsPlaceholder": "İstek yok",
-  "messageRequestsDescription": "Mesaj İstek Kutusunu Etkinleştir",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "$name$'den Gelen arama",
   "ringing": "Çalıyor...",
   "establishingConnection": "Bağlantı kuruluyor...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Ses çıkışı bulunamadı",
   "callMediaPermissionsTitle": "Sesli ve görüntülü aramalar",
   "callMissedCausePermission": "'$name$' tarafından cevaplanmayan çağrınız var çünkü Gizlilik Ayarlarında 'Sesli ve görüntülü aramalar' iznini etkinleştirmeniz gerekiyor.",
-  "callMissedNotApproved": "Bu konuşmayı henüz onaylamadığınız için '$name$' adlı kişiden gelen arama cevapsız. Önce ona mesaj at.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Diğer kullanıcılardan gelen sesli ve görüntülü aramaları kabul etme erişimine izin verir",
   "callMediaPermissionsDialogContent": "Sesli/görüntülü aramaların mevcut uygulaması, IP adresinizi Oxen Foundation sunucularına ve arayan/aranan kullanıcıya ifşa edecektir.",
-  "menuCall": "Ara",
   "startedACall": "$name$ kullanıcısını aradınız",
   "answeredACall": "$name$ ile ara",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Veritabanını Düzenle",
+  "trimDatabaseDescription": "Mesaj veritabanınızın boyutunu son 10,000 mesajınıza kadar düşürür.",
+  "trimDatabaseConfirmationBody": "Alınan en eski $deleteAmount$ mesajınızı silmek istediğinizden emin misiniz?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
