--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "协议与隐私政策",
   "copyErrorAndQuit": "复制出错信息并退出",
   "unknown": "未知",
   "databaseError": "数据库错误",
@@ -17,15 +16,12 @@
   "editMenuCut": "剪切",
   "editMenuCopy": "复制",
   "editMenuPaste": "粘帖",
-  "editMenuPasteAndMatchStyle": "粘帖并调整格式",
-  "editMenuDelete": "删除",
   "editMenuDeleteContact": "删除联系人",
   "editMenuDeleteGroup": "删除群组",
   "editMenuSelectAll": "全选",
   "windowMenuClose": "关闭窗口",
   "windowMenuMinimize": "最小化",
   "windowMenuZoom": "缩放",
-  "windowMenuBringAllToFront": "全部打开到前台",
   "viewMenuResetZoom": "实际大小",
   "viewMenuZoomIn": "放大",
   "viewMenuZoomOut": "缩小",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "公开群组邀请",
   "joinOpenGroupAfterInvitationConfirmationTitle": "加入 $roomName$ 吗？",
   "joinOpenGroupAfterInvitationConfirmationDesc": "您确定要加入公开群组 $roomName$ 吗？",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "输入Session ID或ONS名称",
   "loading": "加载中...",
-  "optimizingApplication": "正在优化程序...",
   "done": "完成",
-  "me": "我",
-  "view": "查看",
   "youLeftTheGroup": "你已经离开了群组",
   "youGotKickedFromGroup": "您已被移出群组。",
-  "unreadMessage": "未读消息",
   "unreadMessages": "未读消息",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "此日志将被保存到您的桌面。",
   "reportIssue": "反馈错误信息",
-  "gotIt": "了解",
-  "submit": "提交",
   "markAllAsRead": "全部标为已读",
   "incomingError": "处理传入消息时出错",
   "media": "媒体",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "对不起，所选文件超过最大限制。",
   "unableToLoadAttachment": "无法加载选中的附件。",
   "offline": "离线",
-  "checkNetworkConnection": "检查网络连接状态",
-  "attemptingReconnection": "在 $reconnect_duration_in_seconds$ 秒后尝试重新连接",
-  "submitDebugLog": "调试日志",
   "debugLog": "调试日志",
   "showDebugLog": "显示调试日志",
   "goToReleaseNotes": "前往发布说明",
   "goToSupportPage": "前往支持页面",
-  "menuReportIssue": "反馈问题",
   "about": "关于",
-  "speech": "语音",
   "show": "显示",
   "sessionMessenger": "Session会话",
-  "search": "搜索",
   "noSearchResults": "没有找到 “$searchTerm$” 相关结果",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "联系人和群组",
   "contactsHeader": "联系人",
   "messagesHeader": "信息",
   "settingsHeader": "设置",
@@ -93,9 +78,6 @@
   "replyToMessage": "回复消息",
   "replyingToMessage": "正回复给:",
   "originalMessageNotFound": "找不到原始消息",
-  "originalMessageNotAvailable": "原始消息失效",
-  "messageFoundButNotLoaded": "原始消息可用，但尚未加载。向上滑动可加载。",
-  "recording": "录音中",
   "you": "您",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "发送音频消息前，请先允许 Session Desktop访问您的麦克风。",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "您无权删除他人的对话消息",
   "deleteJustForMe": "仅在我的设备上删除",
   "deleteForEveryone": "为所有人删除",
-  "deleteMessagesQuestion": "删除这些消息吗？",
+  "deleteMessagesQuestion": "是否删除已被选择$count$条信息？",
   "deleteMessageQuestion": "删除这条消息？",
   "deleteMessages": "删除消息",
-  "deleted": "已删除",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "该消息已被删除",
   "from": "来自",
   "to": "向",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "对话中的图片",
   "imageCaptionIconAlt": "显示这张图片有注释的图标",
   "addACaption": "添加注释...",
-  "copy": "复制",
   "copySessionID": "复制 Session ID",
   "copyOpenGroupURL": "复制群组链接",
   "save": "保存",
   "saveLogToDesktop": "保存日志到桌面",
   "saved": "已保存",
-  "permissions": "权限",
-  "general": "通用",
   "tookAScreenshot": "$name$ 做了屏幕截图。",
   "savedTheFile": "$name$ 保存了媒体内容。",
   "linkPreviewsTitle": "发送链接预览",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "拼写检查",
   "spellCheckDescription": "启用输入框拼写检查",
   "spellCheckDirty": "您必须重新启动Session才能应用您的新设置",
-  "notifications": "提醒",
   "readReceiptSettingDescription": "查看和分享消息何时被阅读(允许在所有会话中读取收据)。",
   "readReceiptSettingTitle": "已读回执",
   "typingIndicatorsSettingDescription": "查看和分享何时消息被输入(适用于所有会话)。",
   "typingIndicatorsSettingTitle": "键入指示器",
   "zoomFactorSettingTitle": "缩放倍数",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "收到消息时，显示通知：",
   "disableNotifications": "关闭提醒",
   "nameAndMessage": "发件人和信息提醒",
@@ -171,13 +156,7 @@
   "notificationFrom": "来自：",
   "notificationMostRecent": "最近：",
   "sendFailed": "发送失败",
-  "expiredWarning": "此桌面版Signal已过期，请升级到最新版本以继续发送消息。",
-  "upgrade": "升级",
   "mediaMessage": "附件信息",
-  "timestamp_s": "现在",
-  "timestamp_m": "1分钟",
-  "timestamp_h": "1小时",
-  "timestampFormat_M": "MMM-D",
   "messageBodyMissing": "请输入消息正文。",
   "unblockToSend": "取消屏蔽此联系人以发送消息。",
   "unblockGroupToSend": "取消屏蔽此群组以发送消息。",
@@ -223,7 +202,6 @@
   "startConversation": "开始新会话...",
   "invalidNumberError": "无效的号码",
   "failedResolveOns": "无法解析数据！",
-  "successUnlinked": "您的设备已成功取消关联",
   "autoUpdateSettingTitle": "自动更新",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Session 有可用更新",
@@ -248,7 +226,6 @@
   "blocked": "已加入黑名单",
   "blockedSettingsTitle": "屏蔽的联系人",
   "unbanUser": "解封用户",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "用户解封成功",
   "userUnbanFailed": "解封失败！",
   "banUser": "封禁用户",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "删除与您的帐户关联的密码",
   "enterPassword": "请输入您的密码",
   "confirmPassword": "确认密码",
-  "pasteLongPasswordToastTitle": "剪贴板内容超过了 $max_pwd_len$ 密码的最大字符长度。",
   "showRecoveryPhrasePasswordRequest": "请输入您的密码",
   "recoveryPhraseSavePromptMain": "您的恢复口令是Session ID的主密钥 - 如果您无法访问您的现有设备，则可以使用它在其他设备上恢复您的Session ID。请将您的恢复口令存储在安全的地方，不要将其提供给任何人。",
   "invalidOpenGroupUrl": "无效的链接",
@@ -331,10 +307,9 @@
   "noModeratorsToRemove": "没有可删除的管理员",
   "onlyAdminCanRemoveMembers": "你不是创建者",
   "onlyAdminCanRemoveMembersDesc": "只有群组的创建者可以移除用户",
-  "createAccount": "Create Account",
-  "signIn": "登录",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "createAccount": "创建账号",
+  "startInTrayTitle": "保留在系统托盘",
+  "startInTrayDescription": "当您关闭窗口后，Session会在后台继续运行",
   "yourUniqueSessionID": "向您的Session ID打个招呼吧",
   "allUsersAreRandomly...": "您的Session ID是其他用户在与您聊天时使用的独一无二的地址。Session ID与您的真实身份无关，它在设计上完全是匿名且私密的。",
   "getStarted": "开始使用",
@@ -345,26 +320,24 @@
   "anonymous": "匿名用戶",
   "removeResidueMembers": "点击确定会在这些成员离开群组时删除",
   "enterDisplayName": "输入您想显示的名称",
-  "enterOptionalPassword": "输入密码(可选)",
   "continueYourSession": "继续使用您的Session ID",
   "linkDevice": "关联设备",
   "restoreUsingRecoveryPhrase": "恢复您的帐号",
   "or": "或者",
-  "ByUsingThisService...": "通过使用此服务，您同意我们的 <a href=\"https://getsession.org/legal/#tos\">服务条款</a> 和 <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">隐私政策</a>",
+  "ByUsingThisService...": "使用服务过程中，您同意并接受我们的 <a href=\"https://getsession.org/terms-of-service\">服务条款</a> 和 <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">隐私政策</a>",
   "beginYourSession": "开始<您的会话。",
   "welcomeToYourSession": "欢迎来到 Session 。",
   "newSession": "新建私人聊天",
-  "searchFor...": "搜索对话内容或联系人",
+  "searchFor...": "搜索消息或对话",
   "enterSessionID": "输入Session ID",
   "enterSessionIDOfRecipient": "输入对方的Session ID 或者 ONS 名称",
   "usersCanShareTheir...": "用户可以通过进入帐号设置并点击\"共享Session ID\"来分享自己的Session ID，或通过共享其二维码来分享其Session ID。",
   "message": "消息",
   "appearanceSettingsTitle": "外观",
-  "permissionSettingsTitle": "权限",
   "privacySettingsTitle": "隐私",
   "notificationsSettingsTitle": "通知",
   "recoveryPhraseEmpty": "输入您的恢复口令",
-  "displayNameEmpty": "Please pick a display name",
+  "displayNameEmpty": "请设定一个名称",
   "members": "$count$ 位成员",
   "joinOpenGroup": "加入公开群组",
   "newClosedGroup": "创建私密群组",
@@ -414,18 +387,17 @@
   "pinConversationLimitTitle": "置顶对话上限",
   "pinConversationLimitToastDescription": "你只能置顶 $number$ 个聊天",
   "showUserDetails": "显示用户信息",
-  "latestUnreadIsAbove": "第一条未读消息在上方",
   "sendRecoveryPhraseTitle": "正在发送恢复口令",
   "sendRecoveryPhraseMessage": "您正在尝试发送恢复口令，它能用来登录和访问您的账号。\n您确定要发送该消息吗？",
   "dialogClearAllDataDeletionFailedTitle": "未删除数据",
   "dialogClearAllDataDeletionFailedDesc": "出现未知错误，数据删除失败。您想要仅在此设备中删除数据吗？",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "您想要仅在此设备中删除数据吗？",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "仅在此设备中删除数据吗？",
   "dialogClearAllDataDeletionFailedMultiple": "数据删除失败。节点错误： $snodes$",
-  "dialogClearAllDataDeletionQuestion": "您想仅清空此设备，还是删除整个账号？",
+  "dialogClearAllDataDeletionQuestion": "仅清空此设备上的数据，还是删除整个账号？",
   "deviceOnly": "仅设备",
   "entireAccount": "整个账号",
-  "areYouSureDeleteDeviceOnly": "是否仅删除这台设备的数据？",
-  "areYouSureDeleteEntireAccount": "是否仅删除您的整个账号，包括网络数据？",
+  "areYouSureDeleteDeviceOnly": "是否仅删除这台设备上的数据？",
+  "areYouSureDeleteEntireAccount": "确认是否删除您的整个账户信息，包括网络数据？",
   "iAmSure": "确认",
   "recoveryPhraseSecureTitle": "就快要完成了！",
   "recoveryPhraseRevealMessage": "通过发送恢复口令，保障您账号安全。展示恢复口令，并将其储存到安全的地方。",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "通知设置 - $setting$",
   "surveyTitle": "参加我们的产品问卷调研",
   "goToOurSurvey": "跳转至问卷",
-  "blockAll": "屏蔽全部",
+  "clearAll": "清除全部",
   "messageRequests": "消息请求",
   "requestsSubtitle": "待处理的请求",
   "requestsPlaceholder": "无请求",
-  "messageRequestsDescription": "启用消息请求收件箱",
+  "hideRequestBannerDescription": "在您收到新的消息请求之前，隐藏此消息请求通知。",
   "incomingCallFrom": "'$name$' 来电",
   "ringing": "响铃中...",
   "establishingConnection": "正在建立连接……",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "找不到音频输出",
   "callMediaPermissionsTitle": "语音和视频通话",
   "callMissedCausePermission": "未接听 '$name$'，因为您需要在隐私设置中启用“语音和视频通话”权限。",
-  "callMissedNotApproved": "因为您尚未批准联系人'$name$'，此来电未接通。请先给对方发送一条信息。",
+  "callMissedNotApproved": "因为您尚未接受此对话，'$name$'的来电未接通。请先给联系人发送一条信息。",
   "callMediaPermissionsDescription": "允许访问以接听其他用户的语音和视频通话。",
   "callMediaPermissionsDialogContent": "当前的语音/视频通话机制会将 IP 地址暴露给 Oxen Foundation 服务器以及与您通话的用户。",
-  "menuCall": "呼叫",
   "startedACall": "您呼叫了 $name$",
   "answeredACall": "与 $name$ 通话",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "修整数据库",
+  "trimDatabaseDescription": "将您的消息数据库大小减少到您最近的 10,000 条消息。",
+  "trimDatabaseConfirmationBody": "您确定要删除您收到的最旧的 $deleteAmount$ 条消息吗？",
+  "pleaseWaitOpenAndOptimizeDb": "请稍候，您的数据库正在打开并优化...",
+  "messageRequestPending": "您的消息请求正在等待中",
+  "messageRequestAccepted": "您的消息请求已被接受",
+  "messageRequestAcceptedOurs": "您已接受$name$的消息请求",
+  "messageRequestAcceptedOursNoName": "您已接受该消息请求",
+  "declineRequestMessage": "您确定要拒绝此消息请求吗？",
+  "respondingToRequestWarning": "发送消息给此用户将自动接受他们的消息请求并暴露您的账号。",
+  "hideRequestBanner": "隐藏消息请求提示",
+  "openMessageRequestInbox": "查看消息请求",
+  "noMessageRequestsPending": "没有待处理的消息请求",
+  "noMediaUntilApproved": "在对话被接受前您不能发送附件",
+  "mustBeApproved": "此对话须被接受才可使用该功能",
+  "youHaveANewFriendRequest": "您有一个新的好友申请",
+  "clearAllConfirmationTitle": "清除所有的消息请求",
+  "clearAllConfirmationBody": "您确定要清除所有的消息请求吗？",
+  "hideBanner": "隐藏消息提示",
+  "openMessageRequestInboxDescription": "查看消息请求信箱"
 }
