--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "शर्तें और गोपनीयता नीति",
   "copyErrorAndQuit": "चूक कॉपी करें और छोड़ दें",
   "unknown": "अनजान",
   "databaseError": "डेटाबेस त्रुटि",
@@ -17,15 +16,12 @@
   "editMenuCut": "कट",
   "editMenuCopy": "कॉपी करें",
   "editMenuPaste": "पेस्ट करें",
-  "editMenuPasteAndMatchStyle": "Paste and Match Style",
-  "editMenuDelete": "हटाना",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Select All",
   "windowMenuClose": "विंडो बंद करें",
   "windowMenuMinimize": "छोटा करें",
   "windowMenuZoom": "ज़ूम",
-  "windowMenuBringAllToFront": "सभी को सामने लाओ",
   "viewMenuResetZoom": "वास्तविक आकार",
   "viewMenuZoomIn": "बड़ा करें",
   "viewMenuZoomOut": "छोटा करें",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "ग्रुप आमंत्रण खोलें",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$ से जुड़ें?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "क्या आप $roomName$ open ग्रुप से जुड़ना चाहते हैं?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Session आईडी या ओएनएस नाम दर्ज करें",
   "loading": "लोड हो रहा है",
-  "optimizingApplication": "Optimizing application...",
   "done": "पूरा हुआ",
-  "me": "मुझे",
-  "view": "राय",
   "youLeftTheGroup": "आपने समूह छोड़ दिया",
   "youGotKickedFromGroup": "इस समूह से आप हटा दिए गए",
-  "unreadMessage": "अपठित मेसेजस",
   "unreadMessages": "अपठित मेसेजस",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "मामले की रिपोर्ट करें",
-  "gotIt": "समझ गया!",
-  "submit": "जमा करें",
   "markAllAsRead": "सभी को पढ़ा हुआ मार्क करें",
   "incomingError": "Error handling incoming message",
   "media": "मीडिया",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "क्षमा करें, चयनित दस्तावेज का आकार संदेश आकार प्रतिबंध से अधिक है।",
   "unableToLoadAttachment": "Unable to load selected attachment.",
   "offline": "ऑफ़लाइन",
-  "checkNetworkConnection": "अपने नेटवर्क कनेक्शन की जांच करें।",
-  "attemptingReconnection": "फिर से कनेक्ट करने का प्रयास करना$reconnect_duration_in_seconds$सेकंड",
-  "submitDebugLog": "डीबग लॉग",
   "debugLog": "लॉग को डीबग करें",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "रिलीज़ नोट्स पे जाइए",
   "goToSupportPage": "सहायता पेज पर जाएँ",
-  "menuReportIssue": "समस्या की रिपोर्ट करें…",
   "about": "हमारे बारे में",
-  "speech": "भाषण",
   "show": "दिखाना",
   "sessionMessenger": "सैशन",
-  "search": "सर्च",
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "संपर्क",
@@ -93,9 +78,6 @@
   "replyToMessage": "Reply to Message",
   "replyingToMessage": "को जवाब दे रहे हैं",
   "originalMessageNotFound": "मूल संदेश नहीं मिला",
-  "originalMessageNotAvailable": "मूल संदेश अब उपलब्ध नहीं है",
-  "messageFoundButNotLoaded": "मूल्य सन्देश मिला है, परन्तु लोड नहीं हुआ। लोड करने के लिए ऊपर स्क्रॉल कीजिये",
-  "recording": "रिकॉर्डिंग",
   "you": "आप",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "To send audio messages, allow Session Desktop to access your microphone.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "संदेश हटाएँ",
-  "deleted": "हटा दिया गया",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "किस से",
   "to": "to",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Image sent in conversation",
   "imageCaptionIconAlt": "Icon showing that this image has a caption",
   "addACaption": "Add a caption...",
-  "copy": "Copy",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "संरक्षित करें",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "Permissions",
-  "general": "General",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check of text entered in message composition box",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "सूचनाएं",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "जब संदेश आए, सूचना दिखाए जिस्से पता चले:",
   "disableNotifications": "सूचनाए बंद करे ",
   "nameAndMessage": "प्रेषक का नाम और संदेश दोनों",
@@ -171,13 +156,7 @@
   "notificationFrom": "From:",
   "notificationMostRecent": "Most recent:",
   "sendFailed": "Send failed",
-  "expiredWarning": "Session डेस्कटॉप का यह संस्करण समाप्त हो गया है। संदेश जारी रखने के लिए कृपया नवीनतम संस्करण में नवीनीकृत करें।",
-  "upgrade": "अपग्रेड",
   "mediaMessage": "मीडिया संदेश",
-  "timestamp_s": "अभी व",
-  "timestamp_m": "1 मिनट",
-  "timestamp_h": "1 घंटा",
-  "timestampFormat_M": "एमएमएम  डीडी ",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "कोई संदेश भेजने के लिए इस संपर्क को अनवरोधित करें",
   "unblockGroupToSend": "Unblock this group to send a message.",
@@ -190,17 +169,17 @@
   "timerOption_30_seconds": "30 सेकंड",
   "timerOption_1_minute": "1 मिनट",
   "timerOption_5_minutes": "5 minutes",
-  "timerOption_30_minutes": "30 minutes",
+  "timerOption_30_minutes": "30 मिनट",
   "timerOption_1_hour": "1 घंटा",
   "timerOption_6_hours": "6 hours",
-  "timerOption_12_hours": "12 hours",
+  "timerOption_12_hours": "12 घंटे",
   "timerOption_1_day": "1 दिन",
   "timerOption_1_week": "1 सप्ताह",
   "disappearingMessages": "गायब होने वाले संदेश",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "उपनाम बदलें",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "नया उपनाम",
+  "changeNicknameMessage": "इस उपयोगकर्ता के लिए एक उपनाम दर्ज करें",
   "timerOption_0_seconds_abbreviated": "बंद",
   "timerOption_5_seconds_abbreviated": "5 एस",
   "timerOption_10_seconds_abbreviated": "10 एस",
@@ -213,42 +192,40 @@
   "timerOption_12_hours_abbreviated": "12 घंटे",
   "timerOption_1_day_abbreviated": "1 डी",
   "timerOption_1_week_abbreviated": "1 सप्ताह",
-  "disappearingMessagesDisabled": "Disappearing messages disabled",
+  "disappearingMessagesDisabled": "गायब होने वाले संदेश अक्षम",
   "disabledDisappearingMessages": "$name$ disabled disappearing messages",
   "youDisabledDisappearingMessages": "You disabled disappearing messages",
   "timerSetTo": "टाइमर पर सेट $time$",
-  "noteToSelf": "Note to Self",
-  "hideMenuBarTitle": "Hide Menu Bar",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "noteToSelf": "खुद पर ध्यान दें",
+  "hideMenuBarTitle": "मेनू बार छुपाएं",
+  "hideMenuBarDescription": "सिस्टम मेनू बार दृश्यता टॉगल करें",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "अमान्य संख्या",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
-  "autoUpdateSettingTitle": "Auto Update",
+  "autoUpdateSettingTitle": "स्वयमेव अद्यतन हो जाना",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
-  "autoUpdateNewVersionTitle": "Session update available",
-  "autoUpdateNewVersionMessage": "There is a new version of Session available.",
-  "autoUpdateNewVersionInstructions": "Press Restart Session to apply the updates.",
-  "autoUpdateRestartButtonLabel": "Restart Session",
-  "autoUpdateLaterButtonLabel": "Later",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateNewVersionTitle": "Session अद्यतन उपलब्ध",
+  "autoUpdateNewVersionMessage": "Session का एक नया संस्करण उपलब्ध है।",
+  "autoUpdateNewVersionInstructions": "अद्यतन लागू करने के लिए Session पुनरारंभ करें दबाएं।",
+  "autoUpdateRestartButtonLabel": "Session फिर से शुरू करें",
+  "autoUpdateLaterButtonLabel": "बाद में",
+  "autoUpdateDownloadButtonLabel": "डाउनलोड",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "क्या आप अपडेट डाउनलोड करना चाहेंगे?",
   "leftTheGroup": "$name$ left the group",
-  "multipleLeftTheGroup": "$name$ left the group",
-  "updatedTheGroup": "Group updated",
+  "multipleLeftTheGroup": "$name$ ने समूह छोड़ दिया",
+  "updatedTheGroup": "समूह अपडेट किया गया",
   "titleIsNow": "Group name has been set to '$name$'",
   "joinedTheGroup": "$name$ joined the group",
   "multipleJoinedTheGroup": "$names$ joined the group",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
+  "kickedFromTheGroup": "$name$ को समूह से हटा दिया गया था।",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
-  "unblocked": "Unblocked",
-  "blocked": "Blocked",
+  "blockUser": "खंड",
+  "unblockUser": "अनब्लॉक",
+  "unblocked": "अनब्लॉक किया",
+  "blocked": "अवरोधित",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
