--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Termini e Politica sulla privacy",
   "copyErrorAndQuit": "Copia l'errore ed esci",
   "unknown": "Sconosciuto",
   "databaseError": "Errore del database",
@@ -17,15 +16,12 @@
   "editMenuCut": "Taglia",
   "editMenuCopy": "Copia",
   "editMenuPaste": "Incolla",
-  "editMenuPasteAndMatchStyle": "Incolla e Unisci Formattazione",
-  "editMenuDelete": "Cancella",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "Elimina contatto",
+  "editMenuDeleteGroup": "Elimina gruppo",
   "editMenuSelectAll": "Seleziona Tutto",
   "windowMenuClose": "Chiudi la finestra",
   "windowMenuMinimize": "Minimizza",
   "windowMenuZoom": "Ingrandisci",
-  "windowMenuBringAllToFront": "Porta tutto in primo piano",
   "viewMenuResetZoom": "Dimensione attuale",
   "viewMenuZoomIn": "Aumenta zoom",
   "viewMenuZoomOut": "Diminuisci zoom",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Apri invito di gruppo",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Unirsi a $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Sei sicuro di voler unirti al gruppo aperto $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Inserisci Session ID o nome ONS",
   "loading": "Caricamento...",
-  "optimizingApplication": "Ottimizzazione applicazione...",
   "done": "Fatto",
-  "me": "Io",
-  "view": "Vedi",
   "youLeftTheGroup": "Hai lasciato il gruppo.",
   "youGotKickedFromGroup": "Sei stato rimosso da questo gruppo.",
-  "unreadMessage": "Messaggio non letto",
   "unreadMessages": "Messaggi non letti",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Questo log verrà salvato sul desktop.",
   "reportIssue": "Segnala un problema",
-  "gotIt": "Capito",
-  "submit": "Invia",
   "markAllAsRead": "Segna tutto come letto",
   "incomingError": "Errore messaggio in arrivo",
   "media": "Media",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "L'allegato che stai cercando di inviare supera le dimensioni consentite",
   "unableToLoadAttachment": "Attenzione, c'è stato un errore nell'inviare il tuo allegato.",
   "offline": "Disconnesso",
-  "checkNetworkConnection": "Verifica la tua connessione.",
-  "attemptingReconnection": "Tentativo di riconessione tra $reconnect_duration_in_seconds$ secondi.",
-  "submitDebugLog": "Log di debug",
   "debugLog": "Log di debug",
   "showDebugLog": "Mostra Log Di Debug",
   "goToReleaseNotes": "Vai alle note di rilascio",
   "goToSupportPage": "Vai alla pagina di supporto",
-  "menuReportIssue": "Segnala un problema",
   "about": "A riguardo",
-  "speech": "Parlato",
   "show": "Mostra",
   "sessionMessenger": "Session",
-  "search": "Cerca",
   "noSearchResults": "Nessun risultato trovato per \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Contatti e Gruppi",
   "contactsHeader": "Contatti",
   "messagesHeader": "Messaggi",
   "settingsHeader": "Impostazioni",
@@ -93,9 +78,6 @@
   "replyToMessage": "Rispondi al messaggio",
   "replyingToMessage": "Rispondendo a:",
   "originalMessageNotFound": "Messaggio originale non trovato",
-  "originalMessageNotAvailable": "Messaggio originale non più disponibile",
-  "messageFoundButNotLoaded": "Messaggio originale trovato, ma non caricato. Scorri verso l'alto per caricarlo.",
-  "recording": "Registrazione",
   "you": "Tu",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Per poter mandare un messaggio audio, permetti a Session di accedere al tuo microfono.",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Non hai il permesso di eliminare i messaggi degli altri",
   "deleteJustForMe": "Elimina solo per me",
   "deleteForEveryone": "Elimina per tutti",
-  "deleteMessagesQuestion": "Eliminare questi messaggi?",
+  "deleteMessagesQuestion": "Eliminare $count$ messaggi?",
   "deleteMessageQuestion": "Cancellare questo messaggio?",
   "deleteMessages": "Elimina messaggi",
-  "deleted": "Eliminata",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Questo messaggio è stato eliminato",
   "from": "Da:",
   "to": "A:",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Immagine inviata nella conversazione",
   "imageCaptionIconAlt": "Icona che mostra che questa immagine ha una didascalia",
   "addACaption": "Aggiungi una didascalia...",
-  "copy": "Copia",
   "copySessionID": "Copia Session ID",
   "copyOpenGroupURL": "Copia L'Url Del Gruppo",
   "save": "Salva",
   "saveLogToDesktop": "Salva log sul desktop",
   "saved": "Salvato",
-  "permissions": "Permessi",
-  "general": "Generale",
   "tookAScreenshot": "$name$ ha fatto uno screenshot",
   "savedTheFile": "Media salvati da $name$",
   "linkPreviewsTitle": "Invia Anteprime Dei Link",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Controllo ortografico",
   "spellCheckDescription": "Abilita il controllo ortografico del testo inserito nella casella di composizione",
   "spellCheckDirty": "È necessario riavviare Session per applicare le modifiche",
-  "notifications": "Notifiche",
   "readReceiptSettingDescription": "Vedi e condividi quando i messaggi sono stati letti (abilita le ricevute di lettura in tutte le sessioni).",
   "readReceiptSettingTitle": "Conferme Di Lettura",
   "typingIndicatorsSettingDescription": "Vedi e condividi quando vengono digitati messaggi (si applica a tutte le sessioni).",
   "typingIndicatorsSettingTitle": "Indicatori Di Scrittura",
   "zoomFactorSettingTitle": "Fattore Ingrandimento",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "All'arrivo dei messaggi, mostra le notifiche che rivelano:",
   "disableNotifications": "Silenzia notifiche",
   "nameAndMessage": "Sia il mittente che il messaggio",
@@ -171,13 +156,7 @@
   "notificationFrom": "Da:",
   "notificationMostRecent": "Più recente:",
   "sendFailed": "Invio Non Riuscito",
-  "expiredWarning": "Questa versione di Session Desktop è scaduta. Per continuare a chattare aggiornala all'ultima versione.",
-  "upgrade": "Aggiorna",
   "mediaMessage": "Messaggio multimediale",
-  "timestamp_s": "Ora",
-  "timestamp_m": "1 minuto",
-  "timestamp_h": "1 ora",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Inserisci un corpo di messaggio.",
   "unblockToSend": "Per inviare un messaggio sblocca questo contatto.",
   "unblockGroupToSend": "Sblocca questo gruppo per inviare un messaggio.",
@@ -223,7 +202,6 @@
   "startConversation": "Inizia una nuova conversazione...",
   "invalidNumberError": "Numero non valido",
   "failedResolveOns": "Impossibile risolvere il nome ONS",
-  "successUnlinked": "Il dispositivo è stato scollegato correttamente",
   "autoUpdateSettingTitle": "Aggiornamento automatico",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Aggiornamento Session disponibile",
@@ -248,7 +226,6 @@
   "blocked": "Bloccato",
   "blockedSettingsTitle": "Contatti bloccati",
   "unbanUser": "Sblocca Utente",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "Utente sbloccato con successo",
   "userUnbanFailed": "Sblocco fallito!",
   "banUser": "Banna utente",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Rimuovi la password associata al tuo account",
   "enterPassword": "Per favore inserisci la tua password",
   "confirmPassword": "Conferna password",
-  "pasteLongPasswordToastTitle": "Il contenuto degli appunti supera la lunghezza massima della password di $max_pwd_len$ caratteri.",
   "showRecoveryPhrasePasswordRequest": "Per favore inserisci la tua password",
   "recoveryPhraseSavePromptMain": "La frase di recupero è la chiave principale per la Sessione ID: puoi usarla per ripristinare la Sessione ID se perdi l'accesso al dispositivo. Conserva la frase di recupero in un luogo sicuro e non rivelarla a nessuno.",
   "invalidOpenGroupUrl": "URL non valido",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Non sei il creatore",
   "onlyAdminCanRemoveMembersDesc": "Solo il creatore del gruppo può rimuovere gli utenti",
   "createAccount": "Create Account",
-  "signIn": "Accedi",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "Mantieni nella barra di sistema",
+  "startInTrayDescription": "Session continuerà ad essere eseguito in background quando chiudi la finestra",
   "yourUniqueSessionID": "Ecco la tua Sessione ID",
   "allUsersAreRandomly...": "La Sessione ID è l'indirizzo univoco che le persone possono utilizzare per contattarti su una Sessione. Senza alcuna connessione con la tua vera identità, la Sessione ID è totalmente anonimo e privato fin dal incezione.",
   "getStarted": "Inizia qui",
@@ -345,22 +320,20 @@
   "anonymous": "Anonimo",
   "removeResidueMembers": "Facendo clic su ok rimuoverà anche quei membri che hanno lasciato il gruppo.",
   "enterDisplayName": "Inserisci il nome da visualizzare",
-  "enterOptionalPassword": "Inserisci password (opzionale)",
   "continueYourSession": "Continua la Sessione",
   "linkDevice": "Collega dispositivo",
   "restoreUsingRecoveryPhrase": "Ripristina il tuo account",
   "or": "o",
-  "ByUsingThisService...": "Utilizzando questo servizio, accetti i nostri <a href=\"https://getsession.org/legal/#tos\">Termini di Servizio</a> e <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Informativa sulla privacy</a>",
+  "ByUsingThisService...": "Utilizzando questo servizio, accetti i nostri <a href=\"https://getsession.org/terms-of-service\">Termini di Servizio</a> e <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Informativa sulla privacy</a>",
   "beginYourSession": "Inizia la tua Session.",
   "welcomeToYourSession": "Benvenuto su Session",
   "newSession": "Nuova sessione",
-  "searchFor...": "Ricerca conversazioni o contatti",
+  "searchFor...": "Cerca messaggi o conversazioni",
   "enterSessionID": "Inserisci la Sessione ID",
   "enterSessionIDOfRecipient": "Inserisci la Sessione ID del destinatario",
   "usersCanShareTheir...": "Gli utenti possono condividere la propria Sessione ID accedendo alle impostazioni del proprio account e toccando Condividi la Sessione ID o condividendo il proprio codice QR.",
   "message": "Messaggio",
   "appearanceSettingsTitle": "Aspetto",
-  "permissionSettingsTitle": "Permessi",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifiche",
   "recoveryPhraseEmpty": "Inserisci la frase di recupero",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Limite conversazioni fissate",
   "pinConversationLimitToastDescription": "Puoi fissare solo $number$ conversazioni",
   "showUserDetails": "Mostra Dettagli Utente",
-  "latestUnreadIsAbove": "Il primo messaggio non letto è sopra",
   "sendRecoveryPhraseTitle": "Invio Frase Di Recupero",
   "sendRecoveryPhraseMessage": "Stai tentando di inviare la frase di recupero che può essere utilizzata per accedere al tuo account. Sei sicuro di voler inviare questo messaggio?",
   "dialogClearAllDataDeletionFailedTitle": "Dati non eliminati",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifiche - $setting$",
   "surveyTitle": "Fai il nostro sondaggio di Session",
   "goToOurSurvey": "Vai al sondaggio",
-  "blockAll": "Blocca Tutti",
+  "clearAll": "Cancella tutto",
   "messageRequests": "Richieste Di Messaggio",
   "requestsSubtitle": "Richieste in Attesa",
   "requestsPlaceholder": "Nessuna richiesta",
-  "messageRequestsDescription": "Abilita Messaggio Richiesta In Arrivo",
+  "hideRequestBannerDescription": "Nascondi il banner della richiesta di messaggio finché non riceverai una nuova richiesta di messaggio.",
   "incomingCallFrom": "Chiamata in arrivo da '$name$'",
   "ringing": "Squilla...",
   "establishingConnection": "Connessione in corso...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Nessuna uscita audio trovata",
   "callMediaPermissionsTitle": "Chiamate vocali e video",
   "callMissedCausePermission": "Chiamata persa da '$name$' perché è necessario abilitare l'autorizzazione 'Voce e videochiamate' nelle Impostazioni Privacy.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Chiamata persa da '$name$' poiché non hai ancora approvato questa conversazione. Invia prima un messaggio.",
   "callMediaPermissionsDescription": "Consente l'accesso per accettare chiamate vocali e video da altri utenti",
   "callMediaPermissionsDialogContent": "L'attuale implementazione di chiamate vocali/video esporrà il tuo indirizzo IP ai server Oxen Foundation e all'utente chiamante/chiamato.",
-  "menuCall": "Chiamata",
   "startedACall": "Hai chiamato $name$",
   "answeredACall": "Chiamata con $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Pulisci Database",
+  "trimDatabaseDescription": "Riduci il database dei messaggi a un massimo di 10.000.",
+  "trimDatabaseConfirmationBody": "Sei sicuro di voler eliminare $deleteAmount$ messaggi ricevuti?",
+  "pleaseWaitOpenAndOptimizeDb": "Attendere mentre il database viene aperto e ottimizzato...",
+  "messageRequestPending": "La tua richiesta di messaggio è attualmente in sospeso",
+  "messageRequestAccepted": "La tua richiesta di messaggio è stata accettata",
+  "messageRequestAcceptedOurs": "Hai accettato la richiesta di messaggio di $name$",
+  "messageRequestAcceptedOursNoName": "Hai accettato la richiesta di messaggio",
+  "declineRequestMessage": "Sei sicuro di voler rifiutare questa richiesta di messaggio?",
+  "respondingToRequestWarning": "L'invio di un messaggio a questo utente approverà automaticamente la sua richiesta di messaggio e rivelerà l'ID della sessione.",
+  "hideRequestBanner": "Nascondi Banner Di Richiesta Messaggio",
+  "openMessageRequestInbox": "Richieste Di Messaggio",
+  "noMessageRequestsPending": "Nessuna richiesta di messaggi in sospeso",
+  "noMediaUntilApproved": "Non è possibile inviare allegati finché la conversazione non sarà approvata",
+  "mustBeApproved": "Questa conversazione deve essere accettata per usare questa funzione",
+  "youHaveANewFriendRequest": "Hai una nuova richiesta d'amicizia",
+  "clearAllConfirmationTitle": "Elimina Tutte Le Richieste Di Messaggio",
+  "clearAllConfirmationBody": "Sei sicuro di voler eliminare tutte le richieste di messaggio?",
+  "hideBanner": "Nascondi",
+  "openMessageRequestInboxDescription": "Casella di richieste messaggio"
 }
