--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "პირობები და კონფიდენციალურობის პოლიტიკა",
   "copyErrorAndQuit": "შეცდომის დაკოპირება და გათიშვა",
   "unknown": "უცნობი",
   "databaseError": "მონაცემთა ბაზის შეცდომა",
@@ -17,15 +16,12 @@
   "editMenuCut": "ამოჭრა",
   "editMenuCopy": "დაკოპირება",
   "editMenuPaste": "ჩასმა",
-  "editMenuPasteAndMatchStyle": "ჩასმა სტილის დამთხვევით",
-  "editMenuDelete": "წაშლა",
-  "editMenuDeleteContact": "Delete Contact",
-  "editMenuDeleteGroup": "Delete Group",
+  "editMenuDeleteContact": "კონტაქტის წაშლა",
+  "editMenuDeleteGroup": "ჯგუფის წაშლა",
   "editMenuSelectAll": "მონიშნე ყველა",
   "windowMenuClose": "ფანჯრის დახურვა",
   "windowMenuMinimize": "ჩაკეცვა",
   "windowMenuZoom": "მასშტაბი",
-  "windowMenuBringAllToFront": "ყველას წინ გამოტანა",
   "viewMenuResetZoom": "რეალური ზომა",
   "viewMenuZoomIn": "მოახლოვება",
   "viewMenuZoomOut": "დაშორება",
@@ -35,22 +31,17 @@
   "openGroupInvitation": "ღია ჯგუფის მოწვევა",
   "joinOpenGroupAfterInvitationConfirmationTitle": "შევიდეთ $roomName$-ში?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "დარწმუნებული ხართ, რომ ღია ჯგუფ $roomName$-ში შესვლა გსურთ?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "მიუთითეთ Session ID ან ONS სახელი",
   "loading": "იტვირთება...",
-  "optimizingApplication": "აპლიკაციის ოპტიმიზირება...",
   "done": "შესრულებულია",
-  "me": "მე",
-  "view": "ხედი",
   "youLeftTheGroup": "თქვენ დატოვეთ ჯგუფი.",
   "youGotKickedFromGroup": "თქვენ დაგატოვებინეს ჯგუფი.",
-  "unreadMessage": "წაუკითხავი შეტყობინება",
   "unreadMessages": "წაუკითხავი შეტყობინება",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "ჩანაწერები შენახული იქნება თქვენს სამუშაო მაგიდაზე.",
   "reportIssue": "პრობლემის მოხსენება",
-  "gotIt": "გასაგებია",
-  "submit": "გაგზავნა",
   "markAllAsRead": "ყველას მონიშვნა წაკითხულად",
-  "incomingError": "Error handling incoming message",
+  "incomingError": "ნაპოვნი იქნა შეცდომა შემომავალი შეტყობინების დამუშავებისას",
   "media": "მედია",
   "mediaEmptyState": "მედია ცარიელია",
   "documents": "დოკუმენტები",
@@ -60,45 +51,36 @@
   "thisWeek": "ამ კვირაში",
   "thisMonth": "ამ თვეს",
   "voiceMessage": "ხმოვანი შეტყობინება",
-  "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
-  "previewThumbnail": "Thumbnail link preview for $domain$",
-  "stagedImageAttachment": "Draft image attachment: $path$",
-  "oneNonImageAtATimeToast": "Sorry, there is a limit of one non-image attachment per message",
-  "cannotMixImageAndNonImageAttachments": "Sorry, you cannot mix images with other file types in one message",
-  "maximumAttachments": "Maximum number of attachments reached. Please send remaining attachments in a separate message.",
-  "fileSizeWarning": "Attachment exceeds size limits for the type of message you're sending.",
-  "unableToLoadAttachment": "Sorry, there was an error setting your attachment.",
+  "stagedPreviewThumbnail": "Draft მონახაზის ბმულის გადახედვა $domain$-ისთვის",
+  "previewThumbnail": "მინიატურების ბმულის გადახედვა $domain$-ისთვის",
+  "stagedImageAttachment": "სურათის დანართის მონახაზი: $path$",
+  "oneNonImageAtATimeToast": "უკაცრავად, თითო შეტყობინებაზე არის ერთი დანართის მიმაგრების ლიმიტი",
+  "cannotMixImageAndNonImageAttachments": "უკაცრავად, თქვენ არ შეგიძლიათ სურათების სხვა ტიპის ფაილებთან ერთად შერევა ერთ შეტყობინებაში",
+  "maximumAttachments": "მიღწეულია დანართების მაქსიმალური რაოდენობა. გთხოვთ, დარჩენილი დანართები გამოაგზავნოთ ცალკე შეტყობინებაში.",
+  "fileSizeWarning": "დანართი აჭარბებს ზომის ლიმიტს იმ ტიპის შეტყობინებისთვის, რომელსაც აგზავნით.",
+  "unableToLoadAttachment": "უკაცრავად, თქვენი დანართის დაყენებისას მოხდა შეცდომა.",
   "offline": "ხაზგარეშე",
-  "checkNetworkConnection": "Check your network connection.",
-  "attemptingReconnection": "Attempting reconnect in $reconnect_duration_in_seconds$ seconds",
-  "submitDebugLog": "Debug log",
-  "debugLog": "Debug Log",
-  "showDebugLog": "Show Debug Log",
-  "goToReleaseNotes": "Go to Release Notes",
-  "goToSupportPage": "Go to Support Page",
-  "menuReportIssue": "Report an Issue",
+  "debugLog": "გამართვის ჟურნალი",
+  "showDebugLog": "გამართვის ჟურნალის ჩვენება",
+  "goToReleaseNotes": "გადადით გამოშვების ჩანაწერებზე",
+  "goToSupportPage": "გადადით მხარდაჭერის გვერდზე",
   "about": "შესახებ",
-  "speech": "Speech",
   "show": "ჩვენება",
-  "sessionMessenger": "Session",
-  "search": "ძიება",
+  "sessionMessenger": "სესია",
   "noSearchResults": "\"$searchTerm$\" -ზე არაფერი მოიძებნა",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "კონტაქტები და ჯგუფები",
   "contactsHeader": "კონტაქტები",
   "messagesHeader": "შეტყობინებები",
   "settingsHeader": "პარამეტრები",
-  "typingAlt": "Typing animation for this conversation",
-  "contactAvatarAlt": "Avatar for contact $name$",
+  "typingAlt": "ამ საუბრისთვის ბეჭდვის ანიმაციის აკრეფა",
+  "contactAvatarAlt": "ავატარი კონტაქტისთვის $name$",
   "downloadAttachment": "მიმაგრებული ფაილის გადმოტვირთვა",
   "replyToMessage": "პასუხი",
   "replyingToMessage": "პასუხობთ:",
-  "originalMessageNotFound": "Original message not found",
-  "originalMessageNotAvailable": "Original message no longer available",
-  "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
-  "recording": "ჩანაწერი",
+  "originalMessageNotFound": "პირველი შეტყობინება ვერ მოიძებნა",
   "you": "თქვენ",
-  "audioPermissionNeededTitle": "Microphone Access Required",
-  "audioPermissionNeeded": "You can enable microphone access under: Settings (Gear icon) => Privacy",
+  "audioPermissionNeededTitle": "საჭიროა მიკროფონზე წვდომა",
+  "audioPermissionNeeded": "შეგიძლიათ ჩართოთ მიკროფონზე წვდომა ქვემოთ: პარამეტრები (გადაცემის ხატულა) => კონფიდენციალურობა",
   "audio": "აუდიო",
   "video": "ვიდეო",
   "photo": "ფოტო",
@@ -110,40 +92,37 @@
   "continue": "გაგრძელება",
   "error": "შეცდომა",
   "delete": "წაშლა",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Delete just for me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
-  "deleteMessages": "Delete Messages",
-  "deleted": "Deleted",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "from": "From:",
-  "to": "To:",
-  "sent": "Sent",
-  "received": "Received",
-  "sendMessage": "Message",
-  "groupMembers": "Group members",
-  "moreInformation": "More information",
-  "resend": "Resend",
-  "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
-  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
-  "quoteThumbnailAlt": "Thumbnail of image from quoted message",
-  "imageAttachmentAlt": "Image attached to message",
-  "videoAttachmentAlt": "Screenshot of video attached to message",
-  "lightboxImageAlt": "Image sent in conversation",
-  "imageCaptionIconAlt": "Icon showing that this image has a caption",
-  "addACaption": "Add a caption...",
-  "copy": "Copy",
-  "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "messageDeletionForbidden": "თქვენ არ გაქვთ იმის უფლება რომ წაშალოთ სხვისი შეტყობინებები",
+  "deleteJustForMe": "წაშლა მხოლოდ ჩემთვის",
+  "deleteForEveryone": "წაშლა ყველასთვის",
+  "deleteMessagesQuestion": "წაშლით $count$ შეტყობინებებს?",
+  "deleteMessageQuestion": "გსურთ ამ შეტყობინების წაშლა?",
+  "deleteMessages": "შეტყობინებების წაშლა",
+  "deleted": "$count$ deleted",
+  "messageDeletedPlaceholder": "ეს შეტყობინება წაშლილია",
+  "from": "სგან:\nდან:",
+  "to": "ვის:",
+  "sent": "გაგზავნილი",
+  "received": "მიღებული",
+  "sendMessage": "შეტყობინება",
+  "groupMembers": "ჯგუფის წევრები",
+  "moreInformation": "მეტი ინფორმაცია",
+  "resend": "თავიდან გაგზავნა",
+  "deleteConversationConfirmation": "გსურთ რომ სამუდამოდ წაშალოთ შეტყობინებები ამ სასაუბროში?",
+  "clearAllData": "ყველა მონაცემის გასუფთავება",
+  "deleteAccountWarning": "ეს სამუდამოდ წაშლის თქვენს შეტყობინებებს და კონტაქტებს.",
+  "deleteContactConfirmation": "დარწმუნებული ხართ, რომ გსურთ ამ მიმოწერის წაშლა?",
+  "quoteThumbnailAlt": "სურათის მინიატურა ციტირებული გზავნილიდან",
+  "imageAttachmentAlt": "შეტყობინებას მიმაგრებული სურათი",
+  "videoAttachmentAlt": "შეტყობინებას მიმაგრებული ვიდეოს ეკრანის ასლი",
+  "lightboxImageAlt": "სურათი გაგზავნილია სასაუბროში",
+  "imageCaptionIconAlt": "სიმბოლო, რომელიც აჩვენებს, რომ ამ სურათს აქვს წარწერა",
+  "addACaption": "დაამატეთ წარწერა...",
+  "copySessionID": "დააკოპირეთ სესიის ID",
+  "copyOpenGroupURL": "კონტექსტის მენიუს მოქმედება გრუპის ლინკის დაკოპირებისთვის",
   "save": "Save",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "Permissions",
-  "general": "General",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check of text entered in message composition box",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "Notifications",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "When messages arrive, display notifications that reveal...",
   "disableNotifications": "Mute notifications",
   "nameAndMessage": "Name and content",
@@ -171,13 +156,7 @@
   "notificationFrom": "From:",
   "notificationMostRecent": "Most recent:",
   "sendFailed": "Send Failed",
-  "expiredWarning": "This version of Session has expired. Please upgrade to the latest version to continue messaging.",
-  "upgrade": "Upgrade",
   "mediaMessage": "Media message",
-  "timestamp_s": "Now",
-  "timestamp_m": "1 minute",
-  "timestamp_h": "1 hour",
-  "timestampFormat_M": "MMM D",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "Unblock this contact to send a message.",
   "unblockGroupToSend": "This group is blocked. Unlock it if you would like to send a message.",
@@ -223,7 +202,6 @@
   "startConversation": "Start New Conversation",
   "invalidNumberError": "Invalid Session ID or ONS Name",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on startup",
   "autoUpdateNewVersionTitle": "Session update available",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban this user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
