--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Vilkår og personvernerklæring",
   "copyErrorAndQuit": "Kopier feilmelding og avslutt",
   "unknown": "Ukjent",
   "databaseError": "Databasefeil",
@@ -17,15 +16,12 @@
   "editMenuCut": "Klipp ut",
   "editMenuCopy": "Kopier",
   "editMenuPaste": "Lim inn",
-  "editMenuPasteAndMatchStyle": "Lim inn med gjeldende stil",
-  "editMenuDelete": "Slett",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Velg alt",
   "windowMenuClose": "Lukk vindu",
   "windowMenuMinimize": "Minimer",
   "windowMenuZoom": "Zoom",
-  "windowMenuBringAllToFront": "Bring alle til toppen",
   "viewMenuResetZoom": "Opprinnelig størrelse",
   "viewMenuZoomIn": "Zoom inn",
   "viewMenuZoomOut": "Zoom ut",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Invitasjon til åpen gruppe",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Bli med i $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Er du sikker på at du vil bli med i den åpne gruppen $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Angi Session-ID eller ONS-navn",
   "loading": "Laster...",
-  "optimizingApplication": "Optimerer applikasjonen...",
   "done": "Ferdig",
-  "me": "Meg",
-  "view": "Vis",
   "youLeftTheGroup": "Du har forlatt gruppen.",
   "youGotKickedFromGroup": "Du ble fjernet fra gruppen.",
-  "unreadMessage": "Ulest melding",
   "unreadMessages": "Uleste meldinger",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Rapporter et problem",
-  "gotIt": "Oppfattet",
-  "submit": "Send inn",
   "markAllAsRead": "Merk alt som lest",
   "incomingError": "Feil under behandling av innkommende beskjed",
   "media": "Media",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Vedlegget overskrider størrelsesbegrensninger for beskjedtypen du sender.",
   "unableToLoadAttachment": "Beklager, det skjedde en feil ved stilling av vedlegget ditt.",
   "offline": "Frakoblet",
-  "checkNetworkConnection": "Kontroller nettverksforbindelsen din.",
-  "attemptingReconnection": "Forsøker å koble til på nytt om $reconnect_duration_in_seconds$ sekunder",
-  "submitDebugLog": "Feilsøkingslogg",
   "debugLog": "Feilsøkingslogg",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Gå til utgivelsesmerknader",
   "goToSupportPage": "Gå til støttesiden",
-  "menuReportIssue": "Rapporter et problem",
   "about": "Om",
-  "speech": "Tale",
   "show": "Vis",
   "sessionMessenger": "Økt",
-  "search": "Søk",
   "noSearchResults": "Ingen resultater funnet for «$searchTerm$»",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakter",
@@ -93,9 +78,6 @@
   "replyToMessage": "Svar på beskjed",
   "replyingToMessage": "Svarer på:",
   "originalMessageNotFound": "Opprinnelig beskjed ikke funnet",
-  "originalMessageNotAvailable": "Opprinnelig beskjed er ikke lenger tilgjengelig",
-  "messageFoundButNotLoaded": "Opprinnelig beskjed funnet, men ikke lastet inn. Rull oppover for å laste den.",
-  "recording": "Tar opp",
   "you": "Du",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Du kan aktivere mikrofontilgang under: Innstillinger (Tannhjulssymbol) => Personvern",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "Du har ikke tillatelse til å slette andres beskjeder",
   "deleteJustForMe": "Slett kun for meg",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Slett beskjeder",
-  "deleted": "Slettet",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Denne beskjeden er slettet",
   "from": "Fra:",
   "to": "Til:",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Bilde sendt i samtale",
   "imageCaptionIconAlt": "Symbol som viser at dette bildet har en bildetekst",
   "addACaption": "Legg til bildetekst...",
-  "copy": "Kopier",
   "copySessionID": "Kopier Session-ID",
   "copyOpenGroupURL": "Kopier gruppens URL",
   "save": "Lagre",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Lagret",
-  "permissions": "Tillatelser",
-  "general": "Generelt",
   "tookAScreenshot": "$name$ tok et skjermbilde",
   "savedTheFile": "Media lagret av $name$",
   "linkPreviewsTitle": "Send forhåndsvisning av lenker",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Stavekontroll",
   "spellCheckDescription": "Aktiver stavekontroll av tekst inntastet i feltet for forfatting av beskjeder",
   "spellCheckDirty": "Du må starte Session på nytt for at dine nye innstillinger skal tre i kraft",
-  "notifications": "Varsler",
   "readReceiptSettingDescription": "Se og del når beskjeder er lest (aktiverer lesekvitteringer i alle økter).",
   "readReceiptSettingTitle": "Lesekvitteringer",
   "typingIndicatorsSettingDescription": "Se og del når beskjeder blir skrevet (gjelder alle økter).",
   "typingIndicatorsSettingTitle": "Inntastingsindikatorer",
   "zoomFactorSettingTitle": "Zoomfaktor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Ved innkommende beskjeder, vis varsler som avslører:",
   "disableNotifications": "Deaktiver varsler",
   "nameAndMessage": "Navn og innhold",
@@ -171,13 +156,7 @@
   "notificationFrom": "Fra:",
   "notificationMostRecent": "Siste:",
   "sendFailed": "Sending mislyktes",
-  "expiredWarning": "Denne versjonen av Session er foreldet. Vennligst oppgrader til den siste versjonen for å fortsette med å sende beskjeder.",
-  "upgrade": "Oppgrader",
   "mediaMessage": "Mediebeskjed",
-  "timestamp_s": "Nå",
-  "timestamp_m": "1 minutt",
-  "timestamp_h": "1 time",
-  "timestampFormat_M": "D. MMM",
   "messageBodyMissing": "Vennligst tast inn beskjedinnhold.",
   "unblockToSend": "Avblokker denne kontakten for å sende en beskjed.",
   "unblockGroupToSend": "Denne gruppen er blokkert. Avblokker den hvis du ønsker å sende en beskjed.",
@@ -223,7 +202,6 @@
   "startConversation": "Start ny samtale",
   "invalidNumberError": "Ugyldig Session-ID eller ONS-navn",
   "failedResolveOns": "Fant ikke ONS-navnet",
-  "successUnlinked": "Lyktes med å fjerne sammenkoblingen med enheten",
   "autoUpdateSettingTitle": "Automatisk oppdatering",
   "autoUpdateSettingDescription": "Se etter oppdateringer automatisk ved oppstart",
   "autoUpdateNewVersionTitle": "Session-oppdatering tilgjengelig",
@@ -248,7 +226,6 @@
   "blocked": "Blokkert",
   "blockedSettingsTitle": "Blokkerte kontakter",
   "unbanUser": "Opphev utestengelse av bruker",
-  "unbanUserConfirm": "Er du sikker på at du vil oppheve utestengelsen av brukeren?",
   "userUnbanned": "Bruker ikke lenger utestengt",
   "userUnbanFailed": "Oppheving av utestengelse mislyktes!",
   "banUser": "Utesteng bruker",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Fjern passordet forbundet med kontoen din",
   "enterPassword": "Vennligst skriv inn passordet ditt",
   "confirmPassword": "Bekreft passordet",
-  "pasteLongPasswordToastTitle": "Innholdet av utklippstavlen overskrider den maksimale passordlengden på $max_pwd_len$ tegn.",
   "showRecoveryPhrasePasswordRequest": "Vennligst skriv inn passordet ditt",
   "recoveryPhraseSavePromptMain": "Gjenopprettelsesfrasen din er hovednøkkelen til Session-IDen din – du kan bruke den for å gjenopprette Session-IDen din dersom du mister tilgang til enheten din. Arkiver gjenopprettelsesfrasen din på et trygt sted, og ikke gi den til noen.",
   "invalidOpenGroupUrl": "Ugyldig URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "Du er ikke skaperen av gruppen",
   "onlyAdminCanRemoveMembersDesc": "Kun skaperen av gruppen kan fjerne brukere",
   "createAccount": "Opprett konto",
-  "signIn": "Logg på",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Si hei til din Session-ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonym",
   "removeResidueMembers": "Ved å klikke OK vil også disse medlemmene fjernes, ettersom de forlot gruppen.",
   "enterDisplayName": "Skriv inn navnet som skal vises",
-  "enterOptionalPassword": "Skriv inn passord (valgfritt)",
   "continueYourSession": "Fortsett økten din",
   "linkDevice": "Koble sammen enhet",
   "restoreUsingRecoveryPhrase": "Gjenopprett kontoen din",
   "or": "eller",
-  "ByUsingThisService...": "Ved å bruke denne tjenesten, samtykker du i våre <a href=\"https://getsession.org/legal/#tos\">tjenestevilkår</a> og <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">personvernserklæring</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Start økten din.",
   "welcomeToYourSession": "Velkommen til økten din",
   "newSession": "Ny økt",
-  "searchFor...": "Søk etter samtaler eller kontakter",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Skriv inn Session-ID",
   "enterSessionIDOfRecipient": "Skriv inn mottakerens Session-ID eller ONS-navn",
   "usersCanShareTheir...": "Brukere kan dele sin Session-ID ved å gå inn i sine kontoinnstillinger og trykke på \"Del Session-ID\", eller ved å dele sin QR-kode.",
   "message": "Beskjed",
   "appearanceSettingsTitle": "Utseende",
-  "permissionSettingsTitle": "Tillatelser",
   "privacySettingsTitle": "Personvern",
   "notificationsSettingsTitle": "Varsler",
   "recoveryPhraseEmpty": "Skriv inn gjenopprettelsesfrasen",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Begresning på festede samtaler",
   "pinConversationLimitToastDescription": "Du kan kun feste $number$ samtaler",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "Første uleste beskjed er ovenfor",
   "sendRecoveryPhraseTitle": "Sender gjenopprettelsesfrase",
   "sendRecoveryPhraseMessage": "Du forsøker å sende gjenopprettelsesfrasen din, som kan brukes til å få tilgang til kontoen din. Er du sikker på at du vil sende denne beskjeden?",
   "dialogClearAllDataDeletionFailedTitle": "Opplysninger ikke slettet",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Varsler – $setting$",
   "surveyTitle": "Fyll ut vår Session-undersøkelse",
   "goToOurSurvey": "Gå til undersøkelsen vår",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
