--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Условия и политика конфиденциальности",
   "copyErrorAndQuit": "Скопировать ошибку и выйти",
   "unknown": "Неизвестно",
   "databaseError": "Ошибка базы данных",
@@ -17,15 +16,12 @@
   "editMenuCut": "Вырезать",
   "editMenuCopy": "Копировать",
   "editMenuPaste": "Вставить",
-  "editMenuPasteAndMatchStyle": "Вставить с соответствием стилю",
-  "editMenuDelete": "Удалить",
   "editMenuDeleteContact": "Удалить контакт",
   "editMenuDeleteGroup": "Удалить группу",
   "editMenuSelectAll": "Выбрать все",
   "windowMenuClose": "Закрыть окно",
   "windowMenuMinimize": "Свернуть",
   "windowMenuZoom": "Увеличить",
-  "windowMenuBringAllToFront": "Все на передний план",
   "viewMenuResetZoom": "Фактический размер",
   "viewMenuZoomIn": "Увеличить",
   "viewMenuZoomOut": "Уменьшить",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Приглашение в открытую группу",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Присоединиться к $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Вы уверен, что хотите присоединиться к открытой группе $roomName$?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Введите Session ID или ONS имя",
   "loading": "Загружается...",
-  "optimizingApplication": "Оптимизация приложения...",
   "done": "Готово",
-  "me": "Я",
-  "view": "Просмотреть",
   "youLeftTheGroup": "Вы покинули группу.",
   "youGotKickedFromGroup": "Вы были удалены из группы.",
-  "unreadMessage": "Непрочитанное сообщение",
   "unreadMessages": "Непрочитанные сообщения",
-  "debugLogExplanation": "This log will be saved to your desktop.",
+  "debugLogExplanation": "Этот журнал будет сохранен на рабочем столе.",
   "reportIssue": "Сообщить о проблеме",
-  "gotIt": "Понятно",
-  "submit": "Отправить",
   "markAllAsRead": "Отметить все как прочитанное",
   "incomingError": "Ошибка при обработке входящего сообщения",
   "media": "Медиа",
@@ -69,21 +60,15 @@
   "fileSizeWarning": "Вложение превышает допустимый размер для данного типа сообщения.",
   "unableToLoadAttachment": "Извините, произошла ошибка при обработке вложения.",
   "offline": "Оффлайн",
-  "checkNetworkConnection": "Проверьте сетевое соединение.",
-  "attemptingReconnection": "Попытка переподключения через $reconnect_duration_in_seconds$ секунд",
-  "submitDebugLog": "Журнал отладки",
   "debugLog": "Журнал отладки",
   "showDebugLog": "Показать Журнал Отладки",
   "goToReleaseNotes": "Перейти к заметкам о релизе",
   "goToSupportPage": "Перейти на страницу поддержки",
-  "menuReportIssue": "Сообщить о проблеме",
   "about": "О Session",
-  "speech": "Речь",
   "show": "Показать",
   "sessionMessenger": "Session",
-  "search": "Поиск",
   "noSearchResults": "Результаты не найдены для \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Контакты и группы",
   "contactsHeader": "Контакты",
   "messagesHeader": "Сообщения",
   "settingsHeader": "Настройки",
@@ -93,9 +78,6 @@
   "replyToMessage": "Ответ на сообщение",
   "replyingToMessage": "Ответить на:",
   "originalMessageNotFound": "Исходное сообщение не найдено",
-  "originalMessageNotAvailable": "Исходное сообщение больше не доступно",
-  "messageFoundButNotLoaded": "Исходное сообщение найдено, но не загружено. Прокрутите вверх, чтобы загрузить его.",
-  "recording": "Идет запись",
   "you": "Вы",
   "audioPermissionNeededTitle": "Требуется доступ к микрофону",
   "audioPermissionNeeded": "Для отправки аудиосообщений разрешите Session доступ к микрофону (Настройки > Конфиденциальность)",
@@ -111,12 +93,12 @@
   "error": "Ошибка",
   "delete": "Удалить",
   "messageDeletionForbidden": "У вас недостаточно прав для удаления чужих сообщений",
-  "deleteJustForMe": "Удалить только для меня",
+  "deleteJustForMe": "Удалить только у меня",
   "deleteForEveryone": "Удалить для всех",
-  "deleteMessagesQuestion": "Удалить эти сообщения?",
+  "deleteMessagesQuestion": "Удалить $count$ сообщений?",
   "deleteMessageQuestion": "Удалить это сообщение?",
   "deleteMessages": "Удалить сообщения",
-  "deleted": "Удалено",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Это сообщение было удалено",
   "from": "От:",
   "to": "Кому:",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Изображение, отправленное в беседе",
   "imageCaptionIconAlt": "Иконка, показывающая, что у этого изображения есть подпись",
   "addACaption": "Добавить субтитры...",
-  "copy": "Копировать",
   "copySessionID": "Копировать Session ID",
   "copyOpenGroupURL": "Копировать URL группы",
   "save": "Сохранить",
-  "saveLogToDesktop": "Сохранить журнал на компьютер",
+  "saveLogToDesktop": "Сохранить журнал отладки на компьютер",
   "saved": "Сохранено",
-  "permissions": "Разрешения",
-  "general": "Общие",
   "tookAScreenshot": "$name$ сделал снимок экрана",
   "savedTheFile": "$name$ сохранил медиафайл",
   "linkPreviewsTitle": "Отправлять предпросмотр ссылки",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Проверка орфографии",
   "spellCheckDescription": "Включить проверку орфографии текста, введенного в поле создания сообщения",
   "spellCheckDirty": "Вы должны перезапустить Session, чтобы применить новые настройки",
-  "notifications": "Уведомления",
   "readReceiptSettingDescription": "Получать и отсылать уведомления о прочтении сообщений (для всех контактов).",
   "readReceiptSettingTitle": "Уведомления о прочтении",
   "typingIndicatorsSettingDescription": "Получать и отсылать уведомления когда вы и ваш собедник набирает сообщение (для всех контактов).",
   "typingIndicatorsSettingTitle": "Индикаторы ввода текста",
   "zoomFactorSettingTitle": "Масштабирование приложения",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "При получении сообщения, всплывающие уведомления будут содержать:",
   "disableNotifications": "Отключить звук уведомлений",
   "nameAndMessage": "Имя отправителя и сообщение",
@@ -171,13 +156,7 @@
   "notificationFrom": "От:",
   "notificationMostRecent": "Последние:",
   "sendFailed": "Не удалось отправить",
-  "expiredWarning": "Эта версия Session Desktop устарела. Выполните обновление до последней версии, чтобы продолжить обмен сообщениями.",
-  "upgrade": "Обновить",
   "mediaMessage": "Медиа-сообщение",
-  "timestamp_s": "Только что",
-  "timestamp_m": "1 минута",
-  "timestamp_h": "1 час",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Пожалуйста, введите текст сообщения.",
   "unblockToSend": "Разблокируйте этот контакт, чтобы отправить сообщение.",
   "unblockGroupToSend": "Группа заблокирована. Разблокируйте группу чтобы отправить сообщение.",
@@ -223,7 +202,6 @@
   "startConversation": "Начать новую беседу...",
   "invalidNumberError": "Неверный Session ID или ONS имя",
   "failedResolveOns": "Не удалось получить ONS имя",
-  "successUnlinked": "Ваше устройство успешно отвязано",
   "autoUpdateSettingTitle": "Автоматические обновления",
   "autoUpdateSettingDescription": "Автоматически проверять на наличие обновлений при запуске",
   "autoUpdateNewVersionTitle": "Доступно обновление Session",
@@ -248,7 +226,6 @@
   "blocked": "Заблокирован",
   "blockedSettingsTitle": "Заблокированные контакты",
   "unbanUser": "Разблокировать пользователя",
-  "unbanUserConfirm": "Вы уверены, что хотите заблокировать пользователя?",
   "userUnbanned": "Пользователь успешно разблокирован",
   "userUnbanFailed": "Не удалось разблокировать!",
   "banUser": "Заблокировать пользователя",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Удалить пароль, связанный с вашим аккаунтом",
   "enterPassword": "Пожалуйста, введите ваш пароль",
   "confirmPassword": "Подтвердить пароль",
-  "pasteLongPasswordToastTitle": "Содержимое буфера обмена превышает максимальную длину пароля в $max_pwd_len$ символов.",
   "showRecoveryPhrasePasswordRequest": "Пожалуйста, введите ваш пароль",
   "recoveryPhraseSavePromptMain": "Фраза восстановления является главным ключом к Session ID — вы можете использовать ее для восстановления, если потеряете доступ к своему устройству. Храните вашу фразу восстановления в надежном месте и никому ее не передавайте.",
   "invalidOpenGroupUrl": "Недействительный URL-адрес",
@@ -332,9 +308,8 @@
   "onlyAdminCanRemoveMembers": "Вы не являетесь создателем",
   "onlyAdminCanRemoveMembersDesc": "Только создатель группы может удалять пользователей",
   "createAccount": "Создать аккаунт",
-  "signIn": "Войти",
-  "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayTitle": "При закрытии сворачивать в трей",
+  "startInTrayDescription": "Session продолжается в фоновом режиме при закрытии окна",
   "yourUniqueSessionID": "Познакомьтесь со своим Session ID",
   "allUsersAreRandomly...": "Ваш Session ID - это уникальный адрес, который другие пользователи могут использовать для связи с вами при помощи Session. Поскольку ваш Session ID никак не связан с вашей настоящей личностью, он по определению является полностью анонимным и конфиденциальным.",
   "getStarted": "Начать",
@@ -345,22 +320,20 @@
   "anonymous": "Анонимно",
   "removeResidueMembers": "Нажатие на кнопку ОК также удалит этих участников при их выходе из группы.",
   "enterDisplayName": "Введите отображаемое имя",
-  "enterOptionalPassword": "Введите пароль (если используется)",
   "continueYourSession": "Восстановить Session ID",
   "linkDevice": "Привязать устройство",
   "restoreUsingRecoveryPhrase": "Восстановите свой аккаунт",
   "or": "или",
-  "ByUsingThisService...": "Используя этот сервис, вы соглашаетесь с <a href=\"https://getsession.org/legal/#tos\">Условиями обслуживания</a> и <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Политикой конфиденциальности</a>",
+  "ByUsingThisService...": "Используя этот сервис, вы соглашаетесь с нашими <a href=\"https://getsession.org/terms-of-service\">Условиями использования</a> и <a href=\"https://getsession.org/ Privacy-policy/\" target=\"_blank\">Политикой конфиденциальности</a>",
   "beginYourSession": "Начать свою сессию.",
   "welcomeToYourSession": "Добро пожаловать в вашу сессию",
   "newSession": "Новый диалог",
-  "searchFor...": "Поиск по беседам или контактам",
+  "searchFor...": "Поиск сообщений или бесед",
   "enterSessionID": "Введите Session ID",
   "enterSessionIDOfRecipient": "Введите Session ID получателя",
   "usersCanShareTheir...": "Пользователи могут поделиться своим Session ID, зайдя в настройки своей учетной записи и нажав «Отправить Session ID», или поделившись своим QR-кодом.",
   "message": "Сообщение",
   "appearanceSettingsTitle": "Внешний вид",
-  "permissionSettingsTitle": "Разрешения",
   "privacySettingsTitle": "Конфиденциальность",
   "notificationsSettingsTitle": "Уведомления",
   "recoveryPhraseEmpty": "Введите секретную фразу",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Лимит закрепленных бесед",
   "pinConversationLimitToastDescription": "Вы можете закрепить только $number$ бесед",
   "showUserDetails": "Показывать Сведения о Пользователе",
-  "latestUnreadIsAbove": "Первое непрочитанное сообщение находится выше",
   "sendRecoveryPhraseTitle": "Отправка секретной фразы",
   "sendRecoveryPhraseMessage": "Вы пытаетесь отправить вашу секретную фразу, которая может быть использована для доступа к вашей учетной записи. Вы уверены, что хотите отправить это сообщение?",
   "dialogClearAllDataDeletionFailedTitle": "Данные не удалены",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Уведомления - $setting$",
   "surveyTitle": "Пройдите наш опрос о Session",
   "goToOurSurvey": "Перейти к опросу",
-  "blockAll": "Блокировать все",
-  "messageRequests": "Запросы Сообщений",
+  "clearAll": "Очистить все",
+  "messageRequests": "Запросы на переписку",
   "requestsSubtitle": "Ожидающие рассмотрения запросы",
   "requestsPlaceholder": "Нет запросов",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Скрыть баннер запроса на переписку, пока вы не получите новый запрос.",
   "incomingCallFrom": "Входящий звонок от '$name$'",
   "ringing": "Вызов...",
   "establishingConnection": "Установление соединения...",
@@ -445,7 +417,7 @@
   "decline": "Отклонить",
   "endCall": "Завершить вызов",
   "cameraPermissionNeededTitle": "Требуются разрешения для Голосовых/Видеозвонков",
-  "cameraPermissionNeeded": "Вы можете включить разрешение 'Голосовые и видеозвонки' в настройках Конфиденциальности.",
+  "cameraPermissionNeeded": "Вы можете включить разрешение 'Звонки и Видеозвонки' в настройках приватности.",
   "unableToCall": "Сначала отмените свой текущий вызов",
   "unableToCallTitle": "Не удается начать новый вызов",
   "callMissed": "Пропущенный вызов от $name$",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "Аудиовыход не найден",
   "callMediaPermissionsTitle": "Голосовые и видеозвонки",
   "callMissedCausePermission": "Пропущенный вызов от '$name$' потому что вам необходимо включить разрешение 'Голосовые и видеозвонки' в настройках Конфиденциальности.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Звонок от '$name$' пропущен, так как Вы еще не одобрили этот разговор. Сначала отправьте им сообщение.",
   "callMediaPermissionsDescription": "Позволять принимать голосовые и видеозвонки от других пользователей",
   "callMediaPermissionsDialogContent": "Текущая реализация голосовых/видеозвонков предоставит ваш IP-адрес серверам Oxen Foundation и вызывающему/вызываемому пользователю.",
-  "menuCall": "Вызов",
   "startedACall": "Вы звоните $name$",
   "answeredACall": "Звонок с $name$",
-  "trimDatabase": "Trim Database",
-  "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabase": "Обрезать базу данных",
+  "trimDatabaseDescription": "Уменьшает размер базы данных до 10 000 последних сообщений.",
+  "trimDatabaseConfirmationBody": "Вы уверены, что хотите удалить самые старые из $deleteAmount$ полученных сообщения?",
+  "pleaseWaitOpenAndOptimizeDb": "Подождите, пока ваша база данных будет открыта и оптимизирована...",
+  "messageRequestPending": "Ваш запрос на переписку ещё не получил ответа",
+  "messageRequestAccepted": "Ваш запрос на переписку был принят",
+  "messageRequestAcceptedOurs": "Вы приняли запрос на переписку от $name$",
+  "messageRequestAcceptedOursNoName": "Вы приняли запрос на переписку",
+  "declineRequestMessage": "Вы действительно хотите отклонить данный запрос на переписку?",
+  "respondingToRequestWarning": "Отправка сообщения этому пользователю автоматически примет его запрос на переписку и откроет ваш Session ID.",
+  "hideRequestBanner": "Скрыть баннер запроса на переписку",
+  "openMessageRequestInbox": "Просмотреть запросы на переписку",
+  "noMessageRequestsPending": "Нет запросов на переписку",
+  "noMediaUntilApproved": "Вы не можете отправлять вложения до тех пор, пока разговор не будет одобрен",
+  "mustBeApproved": "Этот разговор должен быть одобрен для использования этой функции",
+  "youHaveANewFriendRequest": "У вас новая заявка в друзья",
+  "clearAllConfirmationTitle": "Очистить все запросы на переписку",
+  "clearAllConfirmationBody": "Вы уверены, что хотите очистить все запросы на переписку?",
+  "hideBanner": "Скрыть",
+  "openMessageRequestInboxDescription": "Просмотреть входящие запросы на переписку"
 }
