--- a/_locales/sq/messages.json
+++ b/_locales/sq/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Kopjo gabimin dhe dil",
   "unknown": "Unknown",
   "databaseError": "Gabim Baze të Dhënash",
@@ -17,15 +16,12 @@
   "editMenuCut": "Prije",
   "editMenuCopy": "Kopjoje",
   "editMenuPaste": "Ngjite",
-  "editMenuPasteAndMatchStyle": "Ngjite dhe Përputhi Stilin",
-  "editMenuDelete": "Fshije",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "Përzgjidhi Krejt",
   "windowMenuClose": "Mbylle Dritaren",
   "windowMenuMinimize": "Minimizoje",
   "windowMenuZoom": "Zoom",
-  "windowMenuBringAllToFront": "Silli Krejt Përpara",
   "viewMenuResetZoom": "Madhësi Faktike",
   "viewMenuZoomIn": "Zmadhoje",
   "viewMenuZoomOut": "Zvogëloje",
@@ -35,24 +31,19 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Po ngarkohet…",
-  "optimizingApplication": "Po optimizohet aplikacioni…",
   "done": "Done",
-  "me": "Unë",
-  "view": "Shihni",
   "youLeftTheGroup": "E keni braktisur grupin",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Raportoni një problem",
-  "gotIt": "E mora vesh!",
-  "submit": "Parashtrojeni",
   "markAllAsRead": "Mark All as Read",
   "incomingError": "Gabim në trajtimin e mesazhit ardhës",
   "media": "Media",
-  "mediaEmptyState": "S’keni ndonjë media në këtë bisedë",
+  "mediaEmptyState": "Không có đa phương tiện",
   "documents": "Dokumente",
   "documentsEmptyState": "S’keni ndonjë dokument në këtë bisedë",
   "today": "Sot",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "Na ndjeni, kartela e përzgjedhur tejkalon kufizimet për madhësi mesazhesh.",
   "unableToLoadAttachment": "S’arrihet të ngarkohet bashkëngjitja e përzgjedhur.",
   "offline": "I palidhur",
-  "checkNetworkConnection": "Kontrolloni lidhjen tuaj në rrjet.",
-  "attemptingReconnection": "Përpjekje për rilidhje pas $reconnect_duration_in_seconds$ sekondash",
-  "submitDebugLog": "Regjistër diagnostikimesh",
   "debugLog": "Regjistër Diagnostikimesh",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Kalo te Shënime Versioni",
   "goToSupportPage": "Kalo te Faqja e Asistencës",
-  "menuReportIssue": "Njoftoni një Problem",
   "about": "About",
-  "speech": "E folur",
   "show": "Shfaqe",
   "sessionMessenger": "Session",
-  "search": "Kërko",
   "noSearchResults": "S’ka përfundime për \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Kontakte",
@@ -93,9 +78,6 @@
   "replyToMessage": "Përgjigjuni Mesazhit",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "S’u gjet mesazhi origjinal",
-  "originalMessageNotAvailable": "Mesazhi origjinal s’është më i përdorshëm",
-  "messageFoundButNotLoaded": "Mesazhi origjinal u gjet, por s’u ngarkua dot. Rrëshqitni më poshtë që të ngarkohet.",
-  "recording": "Recording",
   "you": "Ju",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Për të dërguar mesazhe audio, lejojeni Session-in për Desktop të përdorë mikrofonin tuaj.",
@@ -104,7 +86,7 @@
   "photo": "Foto",
   "cannotUpdate": "Cannot Update",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
-  "ok": "OK",
+  "ok": "ОK",
   "cancel": "Anuloje",
   "close": "Close",
   "continue": "Continue",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Fshini mesazhe",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Nga",
   "to": "për",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "Figurë e dërguar në bisedë",
   "imageCaptionIconAlt": "Ikonë që tregon  se për këtë figurë ka një titull",
   "addACaption": "Shtoni një përshkrim…",
-  "copy": "Copy",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Ruaje",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "Leje",
-  "general": "Të përgjithshme",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Aktivizo kontroll drejtshkrimi të tekstit të dhënë te kutia e hartimit të mesazheve",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "Njoftime",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "Kur mbërrijnë mesazhe, shfaq njoftime që lënë të duket:",
   "disableNotifications": "Çaktivizoji njoftimet",
   "nameAndMessage": "Emrin e dërguesit dhe mesazhin",
@@ -171,16 +156,10 @@
   "notificationFrom": "Nga:",
   "notificationMostRecent": "Më të rejat:",
   "sendFailed": "Dërgimi dështoi",
-  "expiredWarning": "Ky version i Session-it për Desktop ka skaduar. Ju lutemi, që të vazhdoni të shkëmbeni mesazhe, përmirësojeni me versionin më të ri.",
-  "upgrade": "Përmirësojeni",
   "mediaMessage": "Mesazh media",
-  "timestamp_s": "tani",
-  "timestamp_m": "1 minutë",
-  "timestamp_h": "1 orë",
-  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Please enter a message body.",
-  "unblockToSend": "Që t’i dërgohet një mesazh, zhbllokojeni këtë kontakt.",
-  "unblockGroupToSend": "Që t’i dërgohet një mesazh, zhbllokojeni këtë grup.",
+  "unblockToSend": "Poista yhteystiedon esto lähettääksesi viestin.",
+  "unblockGroupToSend": "Ryhmä on estetty. Poista esto lähettääksesi viestin.",
   "youChangedTheTimer": "E keni caktuar kohëmatësin e zhdukjes së mesazheve në $time$",
   "timerSetOnSync": "Kohëmatësi i zhdukjes së mesazheve u përditësua në $time$",
   "theyChangedTheTimer": "$name$ caktoi kohëmatësin e zhdukjes së mesazheve në $time$",
@@ -223,7 +202,6 @@
   "startConversation": "Filloni bisedë të re…",
   "invalidNumberError": "Numër i pavlefshëm",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Ka gati përditësim të Session-it",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
