--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -1,5 +1,4 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Copy error and quit",
   "unknown": "Unknown",
   "databaseError": "Database Error",
@@ -17,15 +16,12 @@
   "editMenuCut": "ตัด",
   "editMenuCopy": "คัดลอก",
   "editMenuPaste": "วาง",
-  "editMenuPasteAndMatchStyle": "วางและให้รูปแบบตรงกัน",
-  "editMenuDelete": "ลบ",
   "editMenuDeleteContact": "Delete Contact",
   "editMenuDeleteGroup": "Delete Group",
   "editMenuSelectAll": "เลือกทั้งหมด",
   "windowMenuClose": "ปิดหน้าต่าง",
   "windowMenuMinimize": "ย่อลง",
   "windowMenuZoom": "ซูม",
-  "windowMenuBringAllToFront": "เอาไว้ข้างหน้าทั้งหมด",
   "viewMenuResetZoom": "ขนาดจริง",
   "viewMenuZoomIn": "ซูมเข้า",
   "viewMenuZoomOut": "ซูมออก",
@@ -35,20 +31,15 @@
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "กำลังโหลด...",
-  "optimizingApplication": "กำลังปรับแต่งโปรแกรม...",
   "done": "Done",
-  "me": "ฉัน",
-  "view": "ดู",
   "youLeftTheGroup": "คุณได้ออกจากกลุ่ม",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "รายงานปัญหา",
-  "gotIt": "เข้าใจแล้ว",
-  "submit": "ส่ง",
   "markAllAsRead": "Mark All as Read",
   "incomingError": "เกิดข้อผิดพลาดในการจัดการข้อความขาเข้า",
   "media": "สื่อ",
@@ -69,19 +60,13 @@
   "fileSizeWarning": "ขออภัย ไฟล์ที่เลือกมีขนาดเกินจากที่จำกัด",
   "unableToLoadAttachment": "Unable to load selected attachment.",
   "offline": "ออฟไลน์",
-  "checkNetworkConnection": "ตรวจสอบการเชื่อมต่อเครือข่ายของคุณ",
-  "attemptingReconnection": "กำลังพยายามเชื่อมต่อใหม่อีกครั้งในอีก $reconnect_duration_in_seconds$ วินาที",
-  "submitDebugLog": "บันทึกดีบัก",
   "debugLog": "บันทึกดีบัก",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "ไปที่บันทึกประจำรุ่น",
   "goToSupportPage": "ไปที่หน้าการสนับสนุน",
-  "menuReportIssue": "รายงานปัญหา",
   "about": "About",
-  "speech": "การพูด",
   "show": "แสดง",
   "sessionMessenger": "Session",
-  "search": "ค้นหา",
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "ผู้ติดต่อ",
@@ -93,9 +78,6 @@
   "replyToMessage": "ตอบกลับข้อความ",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "Original message not found",
-  "originalMessageNotAvailable": "Original message no longer available",
-  "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
-  "recording": "Recording",
   "you": "คุณ",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "เพื่อจะส่งข้อความเสียง ต้องอนุญาตให้ Session Desktop ใช้งานไมโครโฟนของคุณ",
@@ -113,10 +95,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "ลบข้อความ",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "จาก",
   "to": "to",
@@ -136,14 +118,11 @@
   "lightboxImageAlt": "ภาพถูกส่งไปในการสนทนา",
   "imageCaptionIconAlt": "Icon showing that this image has a caption",
   "addACaption": "Add a caption...",
-  "copy": "Copy",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "บันทึก",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
-  "permissions": "สิทธิ์",
-  "general": "General",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -154,12 +133,18 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check of text entered in message composition box",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "การแจ้งเตือน",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "เมื่อมีข้อความเข้ามา ให้การแจ้งเตือนแสดง:",
   "disableNotifications": "ปิดใช้งานการแจ้งเตือน",
   "nameAndMessage": "ทั้งชื่อผู้ส่งและข้อความ",
@@ -171,13 +156,7 @@
   "notificationFrom": "จาก:",
   "notificationMostRecent": "ล่าสุดจาก:",
   "sendFailed": "Send failed",
-  "expiredWarning": "Session Desktop เวอร์ชันนี้หมดอายุแล้ว โปรดอัพเกรดไปเป็นเวอร์ชันล่าสุดเพื่อดำเนินการส่งข้อความต่อ",
-  "upgrade": "อัพเกรด",
   "mediaMessage": "ข้อความสื่อ",
-  "timestamp_s": "เดี๋ยวนี้",
-  "timestamp_m": "1 นาที",
-  "timestamp_h": "1 ชั่วโมง",
-  "timestampFormat_M": "ดดด ว",
   "messageBodyMissing": "Please enter a message body.",
   "unblockToSend": "เลิกปิดกั้นผู้ติดต่อนี้เพื่อส่งข้อความ",
   "unblockGroupToSend": "Unblock this group to send a message.",
@@ -223,7 +202,6 @@
   "startConversation": "Start new conversation…",
   "invalidNumberError": "หมายเลขไม่ถูกต้อง",
   "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "มีการอัพเดทสำหรับ Session",
@@ -248,7 +226,6 @@
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
-  "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
@@ -279,7 +256,6 @@
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
@@ -332,7 +308,6 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Session continues running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -345,22 +320,20 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
-  "permissionSettingsTitle": "Permissions",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
@@ -414,7 +387,6 @@
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "showUserDetails": "Show User Details",
-  "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
   "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
@@ -433,11 +405,11 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
+  "clearAll": "Clear All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
+  "hideRequestBannerDescription": "Hide the Message Request banner until you receive a new message request.",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
@@ -455,13 +427,29 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
-  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?"
+  "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
+  "pleaseWaitOpenAndOptimizeDb": "Please wait while your database is opened and optimized...",
+  "messageRequestPending": "Your message request is currently pending",
+  "messageRequestAccepted": "Your message request has been accepted",
+  "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
+  "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "hideRequestBanner": "Hide Message Request Banner",
+  "openMessageRequestInbox": "View Message Requests",
+  "noMessageRequestsPending": "No pending message requests",
+  "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
+  "youHaveANewFriendRequest": "You have a new friend request",
+  "clearAllConfirmationTitle": "Clear All Message Requests",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
+  "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
